vn translation gentou

--- a/(2023) Magic Lantern/01. The Portrait of Summer.md
+++ b/(2023) Magic Lantern/01. The Portrait of Summer.md
@@ -17,3 +17,13 @@ await dv.view('_script');
 | だからもっと踊るように<br><br>ほろりほろり落ちるように<br><br>さよならは花咲くように<br><br>それは　それは<br><br>だからもっと踊るように<br><br>あぁ僕らずっと一つじゃないの<br><br>涙吹けば雨模様に<br><br>それは夏の木漏れ日のよう<br><br>木漏れ日のよう  | Dakara motto odoru you ni<br><br>Horori horori ochiru you ni<br><br>Sayonara wa hanasaku you ni<br><br>Sore wa sore wa<br><br>Dakara motto odoru you ni<br><br>Aa bokura zutto hitotsu janai no<br><br>Namida fukeba ame moyou ni<br><br>Sore wa natsu no komorebi no you<br><br>Komorebi no you      | So we can dance more<br><br>Falling like petals<br><br>Goodbye blooms like a flower<br><br>That is... That is...<br><br>So we can dance more<br><br>Aah, we'll always be one, won't we?<br><br>If I spout my tears, it'll threaten to rain<br><br>It's just like the summer sun filtering through the trees<br><br>Just like the sun filtering through the trees         | Vậy nên hãy nhảy múa nhiều hơn nữa đi<br><br>Nước mắt rơi lã chã cũng không sao<br><br>Lời tạm biệt nói ra như hoa nở<br><br>Điều đó…<br><br><br>Vậy nên hãy nhảy múa nhiều hơn nữa đi<br><br>Ôi, chúng ta mãi không bao giờ là một<br><br>Lau đi nước mắt trời lại rì rầm mưa<br><br>Thật giống tia nắng xuyên qua kẽ lá mùa hè<br><br>Như tia nắng xuyên qua kẽ lá |
 ##### Notes
 >This song is inspired by “草木塔 | Plants Tower” by Santoka Taneda.
+
+> “Người con gái biến mất vào mùa hè. Tan vào màu xanh trong bức tranh.
+> 
+> Bài hát sử dụng 3 câu thơ của Taneda Santouka:
+> 
+> Ushiro sugata no shigurete yuku ka (Bóng lưng em dần đổ lệ theo mưa)
+> 
+> Kusa no soyogeba nantonaku hito wo matsu (Đồng cỏ rì rào như chờ đợi ai)
+> 
+> Anata wo matteiru hi no you moeru (Lòng ta cháy như ngọn lửa đang đợi em)”
