--- a/(2023) Magic Lantern/02. Miyakoochi.md
+++ b/(2023) Magic Lantern/02. Miyakoochi.md
@@ -18,3 +18,11 @@ await dv.view('_script');
 | さらり花咲くや　あから引く頬に<br><br>さざなみ、夜は海<br><br>貴方は水際一人手を振るだけ<br><br>今、左様なら　僕は都落ち | Sarari hana saku ya a kara hiku hoho ni<br><br>Sa zanami, yoru wa umi<br><br>Anata wa mizugiwa hitori te o furu dake<br><br>Ima, sayō nara boku wa miyakoochi | Smoothly[?] do flowers bloom on your rosy cheeks<br><br>These wavelets roll into the sea of the night<br><br>On the water’s edge, you alone only wave your hand<br><br>Now, farewell, for I’ll leave the capital                           | Hoa nở phấp phới, trên đôi má ửng đỏ của em<br><br>Từng gợi sóng vỗ, biển đã vào đêm<br><br>Em đứng bên bờ biển vẫy tay một mình<br><br>Xin tạm biệt em, anh phải đi khỏi nơi đây                                                                |
 ##### Notes
 >This song is inspired by the “万葉集 | Collection of Ten Thousand Leaves”, specifically Poem 116, Book 2. You can read more info about it [here](https://en.wikipedia.org/wiki/Man%27y%C5%8Dsh%C5%AB). Source: [here](https://www.thefirsttimes.jp/news/0000264950/). It is also related to the “[Heike Monogatari](https://en.wikipedia.org/wiki/The_Tale_of_the_Heike)” which was an account of the 12th century struggle for control of Japan between the Taira and Minamoto clans.
+
+> “Ví tâm trí em như thành thị, và tôi rời khỏi chỗ đó, dần bị em lãng quên. Rời khỏi thành thị.
+> 
+> Trong khu vườn xinh đẹp xuất hiện một chiếc thuyền lá. Chiếc thuyền trôi đi như tộc Heike rời khỏi thành thị.
+> 
+> Bài thơ số 116 quyển 2 Mannyoshu của Tajimano Himemiko
+> 
+> 人言を繁み言痛み己が世に 未だ渡らぬ朝川渡る (Do sợ người đời bàn tán nên khi trời sáng em sẽ băng qua con sông em chưa từng băng qua trong đời)”
