--- a/(2023) Magic Lantern/03. Bremen.md
+++ b/(2023) Magic Lantern/03. Bremen.md
@@ -4,19 +4,23 @@ await dv.view('_script');
 ブレーメン | Bremen | Nhạc công thành Bremen
 #### Lyrics
 
-| Japanese                                                                                                                                               | Romanji                                                                                                                                                                                                                                                                                     | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                                                                                                                                                                              | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/) |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------- |
-| ねぇ考えなくてもいいよ<br><br>口先じゃ分かり合えないの<br><br>この音に今は乗ろうよ<br><br>忘れないでいたいよ<br><br>身体は無彩色　レイドバック<br><br>ただうねる雨音でグルーヴ<br><br>ずっと二人で暮らそうよ<br><br>この夜の隅っこで         | Ne kangaenakute moii yo<br><br>Kuchisaki ja wakari aenai no<br><br>Kono oto ni ima wa norō yo<br><br>Wasurenaideitai yo, Oh oh<br><br>Karada wa musaishoku re ido bakku<br><br>Tada uneru amaoto de gurūvu<br><br>Zutto futari de kurasō yo<br><br>Kono yoru no sumikko de                  | Hey, you don't have to rack your brains out<br><br>'Cause you see, we can't get each other with just words<br><br>For now, let's lose ourselves in this sound<br><br>'Cause I don't ever want to forget this<br><br>My body is achromatic, feeling laidback<br><br>I'm getting on the groove with just the sound of the surging rainfall<br><br>Hey, let's live together and forever<br><br>At the corner of this night                                                         |                                                                                   |
-| ねぇ不甲斐ない僕らでいいよ<br><br>って誘ったのは君じゃないの<br><br>理屈だけじゃつまらないわ<br><br>まだ時間が惜しいの？<br><br>練り歩く景色を真空パック<br><br>踏み鳴らす足音でグルーヴ<br><br>まるで僕らはブレーメン<br><br>たった二人だけのマーチ | Nee fugainai bokura de ii yo<br><br>tte sasotta no wa kimi janai no<br><br>Rikutsu dake ja tsumaranai wa<br><br>Mada jikan ga oshii no? Oh oh<br><br>Neriaruku keshiki wo shinkūpakku<br><br>Fuminarasu ashioto de gurūvu<br><br>Marude bokura wa burēmen<br><br>Tatta futari dake no machi | "Hey, you see, it's okay to be the nobody that we are"<br><br>Weren't you the one who enticed me with these words?<br><br>A life with nothing but logics is so vapid<br><br>Do you still think that this is a waste of time?<br><br>Stuffing in a vacuum pack the scenery we see as we're parading around,<br><br>Grooving with the sound we make as we walk and stomp the ground,<br><br>It's just like we’re the town musicians of Bremen– We have the march all to ourselves |                                                                                   |
-| さぁ息を吸って早く吐いて                                                                                                                                           | Saa iki wo sutte hayaku haite                                                                                                                                                                                                                                                               | Well then, breathe in and out quickly, and–                                                                                                                                                                                                                                                                                                                                                                                                                                     |                                                                                   |
-| 精々歌っていようぜ　笑うかいお前もどうだい<br><br>愛の歌を歌ってんのさ　あっはっはっは<br><br>精々楽していこうぜ　死ぬほどのことはこの世に無いぜ<br><br>明日は何しようか　暇ならわかり合おうぜ                                            | Ah, seizei utatteiyō ze warau kai omae mo dōdai<br><br>Ai no uta wo utatten no sa ah ha ha ha<br><br>Ah, seizei raku shitei kō ze shinuhodo no koto wa konoyo ni nai ze<br><br>Ashita wa nani shiyō ka hima nara wakari aō ze                                                               | Let's sing like there's no tomorrow! Shall we laugh? Do you wanna join me?<br><br>See, I'm singing a love song here, ahahaha<br><br>Look, let's just take it easy, put all your worries behind! See, there's nothing in this world worth killing yourself over<br><br>What shall I do tomorrow? If you're free, let's get to know each other, alright?                                                                                                                          |                                                                                   |
-| ねぇ考えなくてもいいよ<br><br>踊り始めた君の細胞<br><br>この音に今は乗ろうよ<br><br>乗れなくてもいいよ<br><br>想い出の景色でバックパック<br><br>春風の騒めきでグルーヴ<br><br>もっと二人で歌おうよ<br><br>暇なら愛をしようぜ             | Nee kangaenakute moii yo<br><br>Odori hajimeta kimi no saibō<br><br>Kono oto ni ima wa norō yo<br><br>Norenakute moii yo, oh oh<br><br>Omoide no keshiki de bakkupakku<br><br>Harukaze no zawameki de gurūvu<br><br>Motto futari de utaō yo<br><br>Hima nara ai wo shiyō yo                 | Hey, you don't have to rack your brains out<br><br>The cells in your body have started dancing around,<br><br>So let's lose ourselves in this sound for now<br><br>But well, you don't have to if you can't<br><br>Going backpacking, trekking through the scenery inside our memories,<br><br>Getting into the groove, accompanied by the howling wind in spring<br><br>Let's sing together more<br><br>If you're free, let's fall in love                                     |                                                                                   |
-| さぁ息を吸って声に出して                                                                                                                                           | Saa iki wo sutte koe ni dashite                                                                                                                                                                                                                                                             | Well then, breath in, let your voice out, and–                                                                                                                                                                                                                                                                                                                                                                                                                                  |                                                                                   |
-| 精々歌っていようぜ　笑われてるのも仕方がないね<br><br>何もかも間違ってんのさ　なぁ、あっはっはっは<br><br>精々楽していこうぜ　馬鹿を装うのも楽じゃないぜ<br><br>同じような歌詞だし三番は飛ばしていいよ                                        | Ah, seizei utatteiyō ze warawareteru no mo shikataganai ne<br><br>Nanimokamo machigatten no sa na, ah ha ha ha<br><br>Ah, seizei raku shitei kō ze baka wo yosōu no mo raku janai ze<br><br>Onajiyō na kashi da shi samban wa tobashite ii yo                                               | Go ahead and sing like there's no tomorrow! People are going to laugh at you anyway<br><br>'Cause everything's all messed up. Don't you agree? Ahahaha<br><br>Look, let's just take it easy, let go of everything!<br><br>Playing the clown isn't exactly easy either, y'know<br><br>This chorus reads almost the same as the first, so you can just skip the next one                                                                                                          |                                                                                   |
-| さぁ息を吸って早く吐いて<br><br>ねぇ心を貸して今日くらいは                                                                                                                      | Saa iki wo sutte hayaku haite<br><br>Nee kokoro wo kashite kyō kurai wa                                                                                                                                                                                                                     | Well then, breathe in and out quickly–<br><br>Hey, just for today, can you please lend me your heart?                                                                                                                                                                                                                                                                                                                                                                           |                                                                                   |
-| 精々歌っていようぜ　違うか？<br><br>お前ら皆僕のことを笑ってんのか？なぁ<br><br>精々楽していこうぜ　死ぬほど辛いなら逃げ出そうぜ<br><br>数年経てばきっと一人も覚えてないよ                                                      | Ah, seizei utatteiyō ze chigau ka?<br><br>Omaera minna boku no koto wo waratten noka? naa<br><br>Ah, seizei raku shitei kō ze shinuhodo tsurai nara nigedasō ze<br><br>Sūnen tateba kitto hitori mo oboetenai yo                                                                            | Let's sing like there's no tomorrow! Huh? What's wrong?<br><br>Are you guys making fun of me? Don't pretend you can't hear me<br><br>Look, let's just take it easy, put all your worries behind! If your life's that unbearably miserable, just get away from it all<br><br>After a few years, nobody would even remember about it, I promise                                                                                                                                   |                                                                                   |
-| ぜえぜえ歌っていようぜ　身体は動く？お前もどうだい<br><br>愛の歌を歌ってんのさ　あっはっはっは<br><br>精々楽していこうぜ　死ぬほどのことはこの世に無いぜ<br><br>明日は何しようか　暇なら笑い合おうぜ<br><br>そのうちわかり合おうぜ                      | Zeezee utatteiyō ze karada wa ugoku? omae mo dōdai<br><br>Ai no uta wo utatten no sa ah ha ha ha<br><br>Seizei raku shitei kō ze shinuhodo no koto wa konoyo ni nai ze<br><br>Ashita wa nani shiyō ka hima nara warai aō ze<br><br>Sonōchi wakari aō ze                                     | Let's sing until we run out of breath! Can you move? Do you wanna join me?<br><br>See, I'm singing a love song here, ahahaha<br><br>Look, let's just take it easy, put all your worries behind! See, there's nothing in this world worth killing yourself over<br><br>What shall I do tomorrow?  If you're free, let's laugh and smile together, alright?<br><br>While we're at it, let's get to understand each other, okay?                                                   |                                                                                   |
+| Japanese                                                                                                                                               | Romanji                                                                                                                                                                                                                                                                                     | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                                                                                                                                                                              | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                                                                                                                                                                                                              |
+| ------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| ねぇ考えなくてもいいよ<br><br>口先じゃ分かり合えないの<br><br>この音に今は乗ろうよ<br><br>忘れないでいたいよ<br><br>身体は無彩色　レイドバック<br><br>ただうねる雨音でグルーヴ<br><br>ずっと二人で暮らそうよ<br><br>この夜の隅っこで         | Ne kangaenakute moii yo<br><br>Kuchisaki ja wakari aenai no<br><br>Kono oto ni ima wa norō yo<br><br>Wasurenaideitai yo, Oh oh<br><br>Karada wa musaishoku re ido bakku<br><br>Tada uneru amaoto de gurūvu<br><br>Zutto futari de kurasō yo<br><br>Kono yoru no sumikko de                  | Hey, you don't have to rack your brains out<br><br>'Cause you see, we can't get each other with just words<br><br>For now, let's lose ourselves in this sound<br><br>'Cause I don't ever want to forget this<br><br>My body is achromatic, feeling laidback<br><br>I'm getting on the groove with just the sound of the surging rainfall<br><br>Hey, let's live together and forever<br><br>At the corner of this night                                                         | Này anh bạn, đừng nghĩ ngợi mà làm gì<br><br>Chỉ nói miệng thì làm sao hiểu được nhau<br><br>Hãy cùng nhảy theo âm thanh này với tôi đi<br><br>Tôi muốn mãi mãi nhớ về khoảnh khắc này<br><br>Cơ thể chúng ta là một màu đơn sắc thật là thoải mái<br><br>Ta sẽ phiêu theo tiếng mưa rơi trầm bổng<br><br>Hai chúng ta hãy cùng chung sống với nhau đi<br><br>Trong một góc trời đêm nhỏ bé này                                |
+| ねぇ不甲斐ない僕らでいいよ<br><br>って誘ったのは君じゃないの<br><br>理屈だけじゃつまらないわ<br><br>まだ時間が惜しいの？<br><br>練り歩く景色を真空パック<br><br>踏み鳴らす足音でグルーヴ<br><br>まるで僕らはブレーメン<br><br>たった二人だけのマーチ | Nee fugainai bokura de ii yo<br><br>tte sasotta no wa kimi janai no<br><br>Rikutsu dake ja tsumaranai wa<br><br>Mada jikan ga oshii no? Oh oh<br><br>Neriaruku keshiki wo shinkūpakku<br><br>Fuminarasu ashioto de gurūvu<br><br>Marude bokura wa burēmen<br><br>Tatta futari dake no machi | "Hey, you see, it's okay to be the nobody that we are"<br><br>Weren't you the one who enticed me with these words?<br><br>A life with nothing but logics is so vapid<br><br>Do you still think that this is a waste of time?<br><br>Stuffing in a vacuum pack the scenery we see as we're parading around,<br><br>Grooving with the sound we make as we walk and stomp the ground,<br><br>It's just like we’re the town musicians of Bremen– We have the march all to ourselves | "Này anh bạn, sống hổ thẹn một chút cũng có sao đâu"<br><br>Chính cậu là người rủ rê tôi như vậy đó<br><br>Nói đạo lý mãi chán lắm<br><br>Anh bạn còn lãng phí thời gian làm gì nữa<br><br>Ta sẽ đóng khung cảnh nối nhau lại trong một cái túi chân không<br><br>Phiêu trên tiếng bước chân dẫm nhịp nhàng lên mặt đường<br><br>Chúng ta cứ như những nhạc công thành Bremen– Khúc diễu hành này chỉ của riêng hai ta mà thôi |
+| さぁ息を吸って早く吐いて                                                                                                                                           | Saa iki wo sutte hayaku haite                                                                                                                                                                                                                                                               | Well then, breathe in and out quickly, and–                                                                                                                                                                                                                                                                                                                                                                                                                                     | Nào anh bạn, hít vào rồi nhanh thả lỏng nào                                                                                                                                                                                                                                                                                                                                                                                    |
+| 精々歌っていようぜ　笑うかいお前もどうだい<br><br>愛の歌を歌ってんのさ　あっはっはっは<br><br>精々楽していこうぜ　死ぬほどのことはこの世に無いぜ<br><br>明日は何しようか　暇ならわかり合おうぜ                                            | Ah, seizei utatteiyō ze warau kai omae mo dōdai<br><br>Ai no uta wo utatten no sa ah ha ha ha<br><br>Ah, seizei raku shitei kō ze shinuhodo no koto wa konoyo ni nai ze<br><br>Ashita wa nani shiyō ka hima nara wakari aō ze                                                               | Let's sing like there's no tomorrow! Shall we laugh? Do you wanna join me?<br><br>See, I'm singing a love song here, ahahaha<br><br>Look, let's just take it easy, put all your worries behind! See, there's nothing in this world worth killing yourself over<br><br>What shall I do tomorrow? If you're free, let's get to know each other, alright?                                                                                                                          | Hát hết mình lên nào, cười hả anh bạn, cậu cũng thử đi<br><br>Tôi đang hát tình ca đấy ahahaha<br><br>Hãy thoải mái hết nấc đi, đời này không có gì đáng để mình phải chết đâu<br><br>Ngày mai chúng ta sẽ làm gì nhỉ? Rảnh thì cùng tìm hiểu nhau nhé!                                                                                                                                                                        |
+| ねぇ考えなくてもいいよ<br><br>踊り始めた君の細胞<br><br>この音に今は乗ろうよ<br><br>乗れなくてもいいよ<br><br>想い出の景色でバックパック<br><br>春風の騒めきでグルーヴ<br><br>もっと二人で歌おうよ<br><br>暇なら愛をしようぜ             | Nee kangaenakute moii yo<br><br>Odori hajimeta kimi no saibō<br><br>Kono oto ni ima wa norō yo<br><br>Norenakute moii yo, oh oh<br><br>Omoide no keshiki de bakkupakku<br><br>Harukaze no zawameki de gurūvu<br><br>Motto futari de utaō yo<br><br>Hima nara ai wo shiyō yo                 | Hey, you don't have to rack your brains out<br><br>The cells in your body have started dancing around,<br><br>So let's lose ourselves in this sound for now<br><br>But well, you don't have to if you can't<br><br>Going backpacking, trekking through the scenery inside our memories,<br><br>Getting into the groove, accompanied by the howling wind in spring<br><br>Let's sing together more<br><br>If you're free, let's fall in love                                     | Này anh bạn, nghĩ nhiều mà làm gì<br><br>Các tế bào của cậu bắt đầu nhảy nhót rồi kìa<br><br>Hãy cùng nhảy trên âm thanh này đi<br><br>Không theo kịp cũng không sao mà<br><br>Ta sẽ lấp đầy ba lô bằng các khung cảnh trong kỷ niệm<br><br>Phiêu theo tiếng rì rào của gió xuân<br><br>Hai ta hãy hát thật nhiều hơn nữa đi<br><br>Rảnh quá thì yêu thương nhau đi nào                                                        |
+| さぁ息を吸って声に出して                                                                                                                                           | Saa iki wo sutte koe ni dashite                                                                                                                                                                                                                                                             | Well then, breath in, let your voice out, and–                                                                                                                                                                                                                                                                                                                                                                                                                                  | Nào anh bạn, hít vào rồi cùng lên tiếng nhé                                                                                                                                                                                                                                                                                                                                                                                    |
+| 精々歌っていようぜ　笑われてるのも仕方がないね<br><br>何もかも間違ってんのさ　なぁ、あっはっはっは<br><br>精々楽していこうぜ　馬鹿を装うのも楽じゃないぜ<br><br>同じような歌詞だし三番は飛ばしていいよ                                        | Ah, seizei utatteiyō ze warawareteru no mo shikataganai ne<br><br>Nanimokamo machigatten no sa na, ah ha ha ha<br><br>Ah, seizei raku shitei kō ze baka wo yosōu no mo raku janai ze<br><br>Onajiyō na kashi da shi samban wa tobashite ii yo                                               | Go ahead and sing like there's no tomorrow! People are going to laugh at you anyway<br><br>'Cause everything's all messed up. Don't you agree? Ahahaha<br><br>Look, let's just take it easy, let go of everything!<br><br>Playing the clown isn't exactly easy either, y'know<br><br>This chorus reads almost the same as the first, so you can just skip the next one                                                                                                          | Hát hết mình lên nào, người ta cười mình là chuyện của người ta<br><br>Thế giới này cái gì cũng sai, nhỉ ahahaha<br><br>Hãy thoải mái hết nấc đi, giả ngu giả ngốc cũng đâu có khiến cậu nhẹ nhõm<br><br>Lời bài hát đằng nào cũng giống nhau, thôi mình bỏ qua lời ba nhé                                                                                                                                                     |
+| さぁ息を吸って早く吐いて<br><br>ねぇ心を貸して今日くらいは                                                                                                                      | Saa iki wo sutte hayaku haite<br><br>Nee kokoro wo kashite kyō kurai wa                                                                                                                                                                                                                     | Well then, breathe in and out quickly–<br><br>Hey, just for today, can you please lend me your heart?                                                                                                                                                                                                                                                                                                                                                                           | Nào anh bạn, hít vào rồi nhanh thả lỏng nào<br><br>Chỉ hôm nay thôi, cho tôi mượn trái tim của cậu đi                                                                                                                                                                                                                                                                                                                          |
+| 精々歌っていようぜ　違うか？<br><br>お前ら皆僕のことを笑ってんのか？なぁ<br><br>精々楽していこうぜ　死ぬほど辛いなら逃げ出そうぜ<br><br>数年経てばきっと一人も覚えてないよ                                                      | Ah, seizei utatteiyō ze chigau ka?<br><br>Omaera minna boku no koto wo waratten noka? naa<br><br>Ah, seizei raku shitei kō ze shinuhodo tsurai nara nigedasō ze<br><br>Sūnen tateba kitto hitori mo oboetenai yo                                                                            | Let's sing like there's no tomorrow! Huh? What's wrong?<br><br>Are you guys making fun of me? Don't pretend you can't hear me<br><br>Look, let's just take it easy, put all your worries behind! If your life's that unbearably miserable, just get away from it all<br><br>After a few years, nobody would even remember about it, I promise                                                                                                                                   | Hát hết mình lên nào, có gì sai sao?<br><br>Các người đang cười bọn ta đó hả? Này nhé!<br><br>Thật thoải mái lên nào anh bạn, nếu khổ muốn chết thì chạy trốn đi thôi<br><br>Vài năm nữa chắc chắn không còn ai nhớ đến chúng ta đâu                                                                                                                                                                                           |
+| ぜえぜえ歌っていようぜ　身体は動く？お前もどうだい<br><br>愛の歌を歌ってんのさ　あっはっはっは<br><br>精々楽していこうぜ　死ぬほどのことはこの世に無いぜ<br><br>明日は何しようか　暇なら笑い合おうぜ<br><br>そのうちわかり合おうぜ                      | Zeezee utatteiyō ze karada wa ugoku? omae mo dōdai<br><br>Ai no uta wo utatten no sa ah ha ha ha<br><br>Seizei raku shitei kō ze shinuhodo no koto wa konoyo ni nai ze<br><br>Ashita wa nani shiyō ka hima nara warai aō ze<br><br>Sonōchi wakari aō ze                                     | Let's sing until we run out of breath! Can you move? Do you wanna join me?<br><br>See, I'm singing a love song here, ahahaha<br><br>Look, let's just take it easy, put all your worries behind! See, there's nothing in this world worth killing yourself over<br><br>What shall I do tomorrow?  If you're free, let's laugh and smile together, alright?<br><br>While we're at it, let's get to understand each other, okay?                                                   | Hát thật sung nữa lên, sao rồi? Anh bạn có thấy cơ thể chuyển động không?<br><br>Tôi đang hát tình ca đấy nhé ahahaha<br><br>Hãy thoải mái hết nấc đi, đời này không có gì đáng để mình phải chết đâu<br><br>Ngày mai mình làm gì đây nhỉ? Nếu rảnh quá thì vui cười với nhau đi.<br><br>Trong lúc đó cùng tìm hiểu nhau đi nào.                                                                                               |
 ##### Notes
 >The song is inspired by “Town Musicians of Bremen” by the Grimm Brothers. There are two variants of this fairytale, the western-prominent version is easily accessible today(Town Musicians of Bremen) while the eastern-prominent version(supposedly based on “Herr Korbes” by the same author) is not. The Eastern-prominent version is seemingly the inspiration for this.
 >
 >While one might find meaning in the song/title, n-buna stated that it does not have any meaning in this [tweet](https://twitter.com/nbuna_staff/status/1543891820249509888). But it might still be a reference to the song’s lyrics or the fairy tale’s meaning.
+
+>  “Bước chân của những con người sống trong thời hiện đại. Thực tế, trên đời này không có gì kinh khủng đến mức phải chết cả.
+> 
+> Truyện cổ Grimm “Những nhạc công thành Bremen”
