--- a/(2023) Magic Lantern/06. Howl At The Moon.md
+++ b/(2023) Magic Lantern/06. Howl At The Moon.md
@@ -1,19 +1,23 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-月に吠える | Tsuki ni Hoeru
+月に吠える | Tsuki ni Hoeru | Tiếng hú dưới ánh trăng
 #### Lyrics
 
-| Japanese                                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                                                                            | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                                                                                                                                                       |
-| ----------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 路傍の月に吠える<br><br>影一つ町を行く<br><br>満ちることも知らないで<br><br>夜はすっと深くまで                                                                                                 | Robō no tsuki ni hoeru<br><br>Kage hitotsu machi o yuku<br><br>Michiru koto mo shiranaide<br><br>Yoru wa sutto fukaku made                                                                                                                                                                                                         | I'm howling at the moon by the roadside<br><br>I walk through the town,<br><br>Not even noticing that the moon is waxing<br><br>Without anyone noticing, the night swiftly sinks into the deep                                                                                                                                                                                                                                                           |
-| 気が付けば人留まり<br><br>この顔を眺めている<br><br>おれの何がわかるかと<br><br>獣の振りをする                                                                                                 | Ki ga tsukeba hitodamari<br><br>Kono kao o nagameteru<br><br>Ore no nani ga wakaru ka to<br><br>Kedamono no furi o suru                                                                                                                                                                                                            | When I come to my senses, I notice that people around me are standing still<br><br>They're looking at my face<br><br>"Quit acting like you know me!"<br><br>I bark at them, pretending to be a beast                                                                                                                                                                                                                                                     |
-| 一切合切放り出したいの<br><br>生きているって教えてほしいの<br><br>月に吠えるように歌えば嗚呼、鮮やかに<br><br>アイスピックで地球を砕いてこの悪意で満たしてみたいの<br><br>月に吠えるように歌えば<br><br>嗚呼、我が儘お前の思うが儘に                      | Issaigassai hōridashitai no<br><br>Ikiteiru tte oshiete hoshii no<br><br>Tsuki ni hoeru yōni utaeba ā, azayaka ni<br><br>Aisu pikku de chikyū o kudaite kono akui de mitashitemitai no<br><br>Tsuki ni hoeru yōni utaeba<br><br>ā, wagamama ni omae no omou ga mama ni                                                             | I want to toss every single thing away<br><br>Please, tell me that I'm alive<br><br>If you sing like you're howling at the moon, ah, things will become vivid and beautiful<br><br>I want to try satisfying myself with this malice by smashing open the earth with an icepick<br><br>If you sing like you're howling at the moon,<br><br>Ah, things will be as you want it to be                                                                        |
-| 青白い路傍の月<br><br>どこだろうと人は言う<br><br>誰にも見えてないのか<br><br>この醜い獣                                                                                                    | Aojiroi robō no tsuki<br><br>Doko darou, to hito wa iu<br><br>Dare ni mo miete nai no ka<br><br>Kono minikui kemono                                                                                                                                                                                                                | There's a blueish-white moon by the roadside<br><br>But people are saying "Where is it?" <br><br>Can't anyone see it?<br><br>What a bunch of unsightly beasts                                                                                                                                                                                                                                                                                            |
-| 指指した方へ向く<br><br>顔のないまま動く<br><br>何かがおれを見ている<br><br>波止場のあの影で                                                                                                  | Yubi o sashita hō e muku<br><br>Kao no nai mama ugoku<br><br>Nani ka ga ore o miteiru<br><br>Hatoba no ano kage de                                                                                                                                                                                                                 | I point my finger there and people start to turn around<br><br>They're moving while staying faceless as they are<br><br>Something is watching me<br><br>From the shadows of the wharf over there                                                                                                                                                                                                                                                         |
-| 一切合切信じていないの<br><br>誰もお前に期待していないの<br><br>月に吠えるように歌えば嗚呼、鮮やかに<br><br>硬いペンを湖月に浸して波に線を描いてみたいの<br><br>月に吠えるように歌えば嗚呼、艶やかに<br><br>時間の赴くままに                          | Issaigassai shinjiteinai no<br><br>Dare mo omae ni kitaishiteinai no<br><br>Tsuki ni hoeru yōni utaeba ā, azayaka ni<br><br>Katai pen o kogetsu tsuki ni hitashite nami ni sen o egaitemitai no<br><br>Tsuki ni hoeru yōni utaeba ā, adeyaka ni<br><br>Jikan no omomuku mamani                                                     | I don't have any faith in you, not in the slightest<br><br>Nobody is expecting anything out of you<br><br>If you sing like you're howling at the moon, ah, things will become vivid and beautiful<br><br>I want to dip the tip of a solid pen in a moonlit lake and try drawing a line on the waves<br><br>If you sing like you're howling at the moon, ah, things will become gorgeous<br><br>And time will flow according to its whims                 |
-| 皆おれかわいそうな病人、そう思っている！                                                                                                                                        | ā, Min na ore o kawaisōna byōnin to, sō omotteiru!                                                                                                                                                                                                                                                                                 | Everyone thinks that I'm some pitiful, ill person!                                                                                                                                                                                                                                                                                                                                                                                                       |
-| 一切合切放り出したいの<br><br>ま、まだ世界を犯し足りないの<br><br>月に吠えるように歌えば、嗚呼鮮やかに<br><br>アイスピックで頭蓋を砕いて温いスープで満たしてほしいの<br><br>月に吠えるように歌えよ<br><br>嗚呼、喉笛の奥に住まう獣よ<br><br>この世界はお前の思うが儘に | Issaigassai hōridashitai no<br><br>Ma, mada sekai o okashi tarinai no<br><br>Tsuki ni hoeru yōni utaeba, ā azayaka ni<br><br>Aisu pikku de zugai o kudaite nukui su-pu de mitashite hoshii no<br><br>Tsuki ni hoeru yōni utaeyo<br><br>ā, nodobue no oku ni sum<br>au kedamono yo<br><br>Kono sekai wa omae no omou ga mama ni<br> | I want to toss every single thing away<br><br>I- I haven't violated the world enough, not yet<br><br>If you sing like you're howling at the moon, ah, things will become beautiful<br><br>Please, smash my skull open with an icepick and fill it up with some lukewarm soup<br><br>"Sing like you're howling at the moon!"<br><br>Ah, I say to the beast residing in the depths of my windpipe<br><br>This world is at the mercy of your heart's desire |
-| 路傍の月に吠える                                                                                                                                                    | Robō no tsuki ni hoeru                                                                                                                                                                                                                                                                                                             | I'm howling at the moon by the roadside                                                                                                                                                                                                                                                                                                                                                                                                                  |
+| Japanese                                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                                                                            | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                                                                                                                                                       | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                                                                                                                                                                                                 |
+| ----------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 路傍の月に吠える<br><br>影一つ町を行く<br><br>満ちることも知らないで<br><br>夜はすっと深くまで                                                                                                 | Robō no tsuki ni hoeru<br><br>Kage hitotsu machi o yuku<br><br>Michiru koto mo shiranaide<br><br>Yoru wa sutto fukaku made                                                                                                                                                                                                         | I'm howling at the moon by the roadside<br><br>I walk through the town,<br><br>Not even noticing that the moon is waxing<br><br>Without anyone noticing, the night swiftly sinks into the deep                                                                                                                                                                                                                                                           | Hú lên dưới mặt trăng bên vệ đường, ta bước đi trong thành phố đổ bóng<br><br>Chẳng nhận ra trăng đang lên tròn vành vạnh, màn đêm cứ vậy lặng lẽ chìm sâu                                                                                                                                                                                                                                                        |
+| 気が付けば人留まり<br><br>この顔を眺めている<br><br>おれの何がわかるかと<br><br>獣の振りをする                                                                                                 | Ki ga tsukeba hitodamari<br><br>Kono kao o nagameteru<br><br>Ore no nani ga wakaru ka to<br><br>Kedamono no furi o suru                                                                                                                                                                                                            | When I come to my senses, I notice that people around me are standing still<br><br>They're looking at my face<br><br>"Quit acting like you know me!"<br><br>I bark at them, pretending to be a beast                                                                                                                                                                                                                                                     | Chợt nhận ra mình đang hòa trong dòng người, ai cũng đang nhìn chằm chằm khuôn mặt này<br><br>"Các người thì biết gì về ta hả?" ta xù lên dáng vẻ của thú dữ                                                                                                                                                                                                                                                      |
+| 一切合切放り出したいの<br><br>生きているって教えてほしいの<br><br>月に吠えるように歌えば嗚呼、鮮やかに<br><br>アイスピックで地球を砕いてこの悪意で満たしてみたいの<br><br>月に吠えるように歌えば<br><br>嗚呼、我が儘お前の思うが儘に                      | Issaigassai hōridashitai no<br><br>Ikiteiru tte oshiete hoshii no<br><br>Tsuki ni hoeru yōni utaeba ā, azayaka ni<br><br>Aisu pikku de chikyū o kudaite kono akui de mitashitemitai no<br><br>Tsuki ni hoeru yōni utaeba<br><br>ā, wagamama ni omae no omou ga mama ni                                                             | I want to toss every single thing away<br><br>Please, tell me that I'm alive<br><br>If you sing like you're howling at the moon, ah, things will become vivid and beautiful<br><br>I want to try satisfying myself with this malice by smashing open the earth with an icepick<br><br>If you sing like you're howling at the moon,<br><br>Ah, things will be as you want it to be                                                                        | Ta muốn giải phóng tất cả mọi thứ<br><br>Hãy cho ta biết rằng ta đang sống đi<br><br>Nếu cứ hát lên như đang hú dưới ánh trăng, mọi thứ sẽ thật rực rỡ<br><br>Ta muốn đập tan thế giới bằng dùi đập đá, thỏa mãn tâm địa xấu xa này<br><br>Nếu cứ hát lên như đang hú dưới ánh trăng<br><br>Ah, mọi thứ sẽ thật ích kỷ đúng như ngươi muốn                                                                        |
+| 青白い路傍の月<br><br>どこだろうと人は言う<br><br>誰にも見えてないのか<br><br>この醜い獣                                                                                                    | Aojiroi robō no tsuki<br><br>Doko darou, to hito wa iu<br><br>Dare ni mo miete nai no ka<br><br>Kono minikui kemono                                                                                                                                                                                                                | There's a blueish-white moon by the roadside<br><br>But people are saying "Where is it?" <br><br>Can't anyone see it?<br><br>What a bunch of unsightly beasts                                                                                                                                                                                                                                                                                            | Người qua đường hỏi ta "Mặt trăng màu trắng xanh ở đâu thế?"<br><br>Không có ai nhìn thấy nó sao? Đám thú dữ xấu xí cục mịch này?                                                                                                                                                                                                                                                                                 |
+| 指指した方へ向く<br><br>顔のないまま動く<br><br>何かがおれを見ている<br><br>波止場のあの影で                                                                                                  | Yubi o sashita hō e muku<br><br>Kao no nai mama ugoku<br><br>Nani ka ga ore o miteiru<br><br>Hatoba no ano kage de                                                                                                                                                                                                                 | I point my finger there and people start to turn around<br><br>They're moving while staying faceless as they are<br><br>Something is watching me<br><br>From the shadows of the wharf over there                                                                                                                                                                                                                                                         | Họ đi theo hướng ta chỉ tay, một đám người bước đi không thấy mặt ai<br><br>Có cái gì đó đang nhìn về phía ta bên chiếc bóng của bến cảnh phía bên kia                                                                                                                                                                                                                                                            |
+| 一切合切信じていないの<br><br>誰もお前に期待していないの<br><br>月に吠えるように歌えば嗚呼、鮮やかに<br><br>硬いペンを湖月に浸して波に線を描いてみたいの<br><br>月に吠えるように歌えば嗚呼、艶やかに<br><br>時間の赴くままに                          | Issaigassai shinjiteinai no<br><br>Dare mo omae ni kitaishiteinai no<br><br>Tsuki ni hoeru yōni utaeba ā, azayaka ni<br><br>Katai pen o kogetsu tsuki ni hitashite nami ni sen o egaitemitai no<br><br>Tsuki ni hoeru yōni utaeba ā, adeyaka ni<br><br>Jikan no omomuku mamani                                                     | I don't have any faith in you, not in the slightest<br><br>Nobody is expecting anything out of you<br><br>If you sing like you're howling at the moon, ah, things will become vivid and beautiful<br><br>I want to dip the tip of a solid pen in a moonlit lake and try drawing a line on the waves<br><br>If you sing like you're howling at the moon, ah, things will become gorgeous<br><br>And time will flow according to its whims                 | Ta không tin vào bất cứ thứ gì hết<br><br>Chẳng có ai kỳ vọng gì ở ngươi đâu<br><br>Nếu cứ hát lên như đang hú dưới ánh trăng, mọi thứ sẽ thật rực rỡ<br><br>Ta muốn nhúng đầu bút xuống mặt hồ in ánh trăng, vẽ lên một đường thẳng trên sóng<br><br>Nếu cứ hát lên như đang hú dưới ánh trăng, mọi thứ sẽ thật diễm lệ<br><br>Mọi thứ sẽ trôi đi theo cách thời gian vụt qua                                    |
+| 皆おれかわいそうな病人、そう思っている！                                                                                                                                        | ā, Min na ore o kawaisōna byōnin to, sō omotteiru!                                                                                                                                                                                                                                                                                 | Everyone thinks that I'm some pitiful, ill person!                                                                                                                                                                                                                                                                                                                                                                                                       | Mọi người đều nghĩ ta là một kẻ bệnh tật đáng thương                                                                                                                                                                                                                                                                                                                                                              |
+| 一切合切放り出したいの<br><br>ま、まだ世界を犯し足りないの<br><br>月に吠えるように歌えば、嗚呼鮮やかに<br><br>アイスピックで頭蓋を砕いて温いスープで満たしてほしいの<br><br>月に吠えるように歌えよ<br><br>嗚呼、喉笛の奥に住まう獣よ<br><br>この世界はお前の思うが儘に | Issaigassai hōridashitai no<br><br>Ma, mada sekai o okashi tarinai no<br><br>Tsuki ni hoeru yōni utaeba, ā azayaka ni<br><br>Aisu pikku de zugai o kudaite nukui su-pu de mitashite hoshii no<br><br>Tsuki ni hoeru yōni utaeyo<br><br>ā, nodobue no oku ni sum<br>au kedamono yo<br><br>Kono sekai wa omae no omou ga mama ni<br> | I want to toss every single thing away<br><br>I- I haven't violated the world enough, not yet<br><br>If you sing like you're howling at the moon, ah, things will become beautiful<br><br>Please, smash my skull open with an icepick and fill it up with some lukewarm soup<br><br>"Sing like you're howling at the moon!"<br><br>Ah, I say to the beast residing in the depths of my windpipe<br><br>This world is at the mercy of your heart's desire | Ta muốn giải phóng hết tất cả mọi thứ<br><br>Ta vẫn chưa đủ tội lỗi với thế giới này!<br><br>Nếu cứu hát lên như đang hú dưới ánh trăng, mọi thứ sẽ thật rực rỡ<br><br>Ta muốn ngươi dùng dùi đập đá đập đầu ta ra, rồi rót đầy bằng thứ súp ấm nóng<br><br>Cứ cất tiếng hát như hú với mặt trăng đi!<br><br>Hỡi con thú dữ ngụ sâu trong khí quản của ta<br><br>Thế giới này sẽ diễn ra đúng như ngươi mong muốn |
+| 路傍の月に吠える                                                                                                                                                    | Robō no tsuki ni hoeru                                                                                                                                                                                                                                                                                                             | I'm howling at the moon by the roadside                                                                                                                                                                                                                                                                                                                                                                                                                  | Hú lên với mặt trăng bên vệ đường                                                                                                                                                                                                                                                                                                                                                                                 |
 ##### Notes
 >This song is inspired by “Howling at the Moon” by Sakutarou Hagiwara.
+
+> “Con chó hú lên mặt trăng, là vì căm ghét sợ hãi cái bóng của mình mà hú. Khi đọc câu văn đó xuất hiện trong lời mở đầu của “Tsuki ni hoeru”, tôi đã nghĩ ra cấu trúc của bài hát. Có cái gì đó đang nhìn tôi từ cái bóng của bến cảng, nhìn chăm chăm. Đó vừa là một tác động thôi thúc ngón tay tôi sáng tác, vừa là bóng dáng của một con quỷ mang tên linh hồn.
+> 
+> Về bức tranh. Khi đọc lời mở đầu của tập thơ, tôi đã liên tưởng đến tác phẩm “Con chó” của nhà điêu khắc Giacometti. Cái bóng của một con chó gầy nhẳng đi lang thang trong thành phố. “Tsuki ni hoeru” của Hagiwara Sakutarou.”
