--- a/(2023) Magic Lantern/07. 451.md
+++ b/(2023) Magic Lantern/07. 451.md
@@ -4,17 +4,19 @@ await dv.view('_script');
 451 | 451
 #### Lyrics
 
-| Japanese                                                                                   | Romanji                                                                                                                                                                                         | taru                                                                                                                                                                                                                                 |
-| ------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| あの太陽を見てた<br><br>深く燃えてる<br><br>見れば胸の辺りが少し燃えてる<br><br>道を行く誰かが声を上げた<br><br>「見ろよ、変な男」と笑いながら    | Ano taiyō o miteta<br><br>Fukaku moeteru<br><br>Mireba mune no atari ga sukoshi moeteru<br><br>Michi o yuku dareka ga koe o ageta<br><br>" miro yo, henna otoko" to warai nagara                | I was looking at that sun burning intensely<br><br>When I did, someplace in my chest started to burn a little<br><br>Someone passing by the road raised their voice,<br><br>"Look! What a peculiar man," and as they said, laughing— |
-| 指の先で触れた紙が一つ遂に燃えた                                                                           | Yubi no saki de fureta kami ga hitotsu tsuini moeta                                                                                                                                             | —the paper I had touched with the ends of my fingers finally caught a flame                                                                                                                                                          |
-| さぁ引火して　燃やして　燃やして　燃やして　燃やして　燃やして<br><br>喜びを愛して<br><br>さぁ昇華して　踊って　踊って　踊って　踊って　踊って　踊って        | Saa inkashite moyashite moyashite moyashite moyashite moyashite<br><br>Yorokobi o aishite<br><br>Saa shōkashite odotte odotte odotte odotte odotte odotte                                       | Hurry and set it alight! Burn it down! Burn it down! Burn it down!<br><br>Rejoice in this rapture, and—<br><br>Come now, let's sublimate this sensation: Dance! Dance! Dance!                                                        |
-| ほら、集まる人の顔が見える<br><br>俺の蒔いた炎の意図を探してる<br><br>見ろよ、変な奴らだ<br><br>そんなに声を荒げて<br><br>たかが炎一つに熱を上げてる | Hora, atsumaru hito no kao ga mieru<br><br>Ore no maita honoo no ito o sagashiteru<br><br>Miro yo, henna yatsura da<br><br>Sonnani koe o Aragete<br><br>Takaga honoo hitotsu ni netsu o ageteru | Look, I can see the faces of the men gathered<br><br>They're trying to figure out the intent behind the fire<br><br>Look, what peculiar people!<br><br>And raising my voice so loud,<br><br>I'm losing my head on a single blaze     |
-| 燃えろ　早く　響く怒声の中で<br><br>紙の束よ赤く盛って                                                            | Moero hayaku hibiku dosei no naka de<br><br>Kami no taba yo akaku sakatte                                                                                                                       | Hurry up and burn! In the echoing midst of the voices in protest<br><br>O Bundle of Paper, bloom with red!                                                                                                                           |
-| あぁ面倒くせえ　さぁ燃やして　燃やして　燃やして　燃やして　燃やして<br><br>悲しみも愛して<br><br>さぁ放火して　踊って　踊って　踊って　踊って　踊って　踊って    | Aa mendōku se e saa moyashite moyashite moyashite moyashite moyashite<br><br>Kanashimi mo aishite<br><br>Saa hōkashite odotte odotte odotte odotte odotte odotte                                | Aah, what a pain-- hurry and burn it down! Burn it down! Burn it down!<br><br>Let's rejoice in this sorrow and<br><br>Hurry to arson it down to the ground, then dance! Dance! Dance!                                                |
-| 触れて消して触れて消して<br><br>触れて胸の窓を開けて<br><br>早く燃えて灰を見せて<br><br>奥の奥に燻ぶる魂に                          | Furete keshite furete keshite<br><br>Furete mune no mado o akete<br><br>Hayaku moete hai o misete<br><br>Oku no oku ni kusuburu tamashii ni                                                     | Touch, extinguish, touch, extinguish<br><br>Touch me and open the door to my chest<br><br>Burn it fast and show me the ashes...<br><br>And to the sooty soul sitting in the deepest recesses there—                                  |
-| さぁ引火して　燃やして　燃やして　燃やして　燃やして　燃やして<br><br>妬けるほど愛して！                                           | Saa inkashite moyashite moyashite moyashite moyashite moyashite<br><br>Yakeru hodo aishite!                                                                                                     | —hurry and set it alight! Burn it down! Burn it down! Burn it down!<br><br>Love it so much you become jealous!                                                                                                                       |
-| さぁ放火して　燃やして　燃やして　燃やして　燃やして　燃やして<br><br>飽きるまで愛して<br><br>さぁ消費して　踊って　踊って　踊って　踊って　踊って　踊って      | Saa hōkashite moyashite moyashite moyashite moyashite moyashite<br><br>Akiru made aishite<br><br>Saa shōhishite odotte odotte odotte odotte odotte odotte                                       | Hurry and arson it to the ground, then burn it down! Burn it down! Burn it down!<br><br>Love until you've grown tired, then<br><br>Hurry and consume, then dance! Dance! Dance!                                                      |
-| さぁ創造して　燃やして　燃やして　燃やして　燃やして　燃やして　燃やして                                                       | Saa sōzōshite moyashite moyashite moyashite moyashite moyashite moyashite                                                                                                                       | Now create, then burn it down! Burn it down! Burn it down!                                                                                                                                                                           |
+| Japanese                                                                                   | Romanji                                                                                                                                                                                         | taru                                                                                                                                                                                                                                 | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                              |
+| ------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| あの太陽を見てた<br><br>深く燃えてる<br><br>見れば胸の辺りが少し燃えてる<br><br>道を行く誰かが声を上げた<br><br>「見ろよ、変な男」と笑いながら    | Ano taiyō o miteta<br><br>Fukaku moeteru<br><br>Mireba mune no atari ga sukoshi moeteru<br><br>Michi o yuku dareka ga koe o ageta<br><br>" miro yo, henna otoko" to warai nagara                | I was looking at that sun burning intensely<br><br>When I did, someplace in my chest started to burn a little<br><br>Someone passing by the road raised their voice,<br><br>"Look! What a peculiar man," and as they said, laughing— | Ta đang nhìn mặt trời đằng kia<br><br>Nó đang cháy rực trên trời<br><br>Hình như trái tim ta cũng đang nhen nhóm ngọn lửa<br><br>Ai đó đang đi đường lên tiếng<br><br>Hắn cười cợt "Nhìn kìa, một thằng dị hợm"                                |
+| 指の先で触れた紙が一つ遂に燃えた                                                                           | Yubi no saki de fureta kami ga hitotsu tsuini moeta                                                                                                                                             | —the paper I had touched with the ends of my fingers finally caught a flame                                                                                                                                                          | Ngón tay chạm vào giấy, một ngọn lửa bùng lên                                                                                                                                                                                                  |
+| さぁ引火して　燃やして　燃やして　燃やして　燃やして　燃やして<br><br>喜びを愛して<br><br>さぁ昇華して　踊って　踊って　踊って　踊って　踊って　踊って        | Saa inkashite moyashite moyashite moyashite moyashite moyashite<br><br>Yorokobi o aishite<br><br>Saa shōkashite odotte odotte odotte odotte odotte odotte                                       | Hurry and set it alight! Burn it down! Burn it down! Burn it down!<br><br>Rejoice in this rapture, and—<br><br>Come now, let's sublimate this sensation: Dance! Dance! Dance!                                                        | Nào, bắt lửa đi! Cháy nữa đi! Cháy nữa đi! Cháy nữa đi! Cháy nữa đi! Cháy nữa đi!<br><br>Tận hưởng niềm vui này đi!<br><br>Nào, phấn khích lên đi! Nhảy múa đi! Nhảy múa đi!<br>Nhảy múa đi! Nhảy múa đi! Nhảy múa đi! Nhảy múa đi!            |
+| ほら、集まる人の顔が見える<br><br>俺の蒔いた炎の意図を探してる<br><br>見ろよ、変な奴らだ<br><br>そんなに声を荒げて<br><br>たかが炎一つに熱を上げてる | Hora, atsumaru hito no kao ga mieru<br><br>Ore no maita honoo no ito o sagashiteru<br><br>Miro yo, henna yatsura da<br><br>Sonnani koe o Aragete<br><br>Takaga honoo hitotsu ni netsu o ageteru | Look, I can see the faces of the men gathered<br><br>They're trying to figure out the intent behind the fire<br><br>Look, what peculiar people!<br><br>And raising my voice so loud,<br><br>I'm losing my head on a single blaze     | Ô kìa, ta thấy đám đông đang tụ tập<br><br>Khuôn mặt chúng đang dò tìm ý đồ trong ngọn lửa của ta<br><br>Nhìn đi kìa, một đám dị hợm<br><br>Chúng đang phẫn nộ kìa<br><br>Chỉ một ngọn lửa cũng khiến chúng nổi điên                           |
+| 燃えろ　早く　響く怒声の中で<br><br>紙の束よ赤く盛って                                                            | Moero hayaku hibiku dosei no naka de<br><br>Kami no taba yo akaku sakatte                                                                                                                       | Hurry up and burn! In the echoing midst of the voices in protest<br><br>O Bundle of Paper, bloom with red!                                                                                                                           | Cháy nhanh lên, trong tiếng thét vang dội<br><br>Mớ giấy lộn kia, hãy bừng đỏ lên!                                                                                                                                                             |
+| あぁ面倒くせえ　さぁ燃やして　燃やして　燃やして　燃やして　燃やして<br><br>悲しみも愛して<br><br>さぁ放火して　踊って　踊って　踊って　踊って　踊って　踊って    | Aa mendōku se e saa moyashite moyashite moyashite moyashite moyashite<br><br>Kanashimi mo aishite<br><br>Saa hōkashite odotte odotte odotte odotte odotte odotte                                | Aah, what a pain-- hurry and burn it down! Burn it down! Burn it down!<br><br>Let's rejoice in this sorrow and<br><br>Hurry to arson it down to the ground, then dance! Dance! Dance!                                                | Aa! Một đám phiền phức! Cháy nữa đi! Cháy nữa đi!<br><br>Cháy nữa đi! Cháy nữa đi! Cháy nữa đi!<br><br>Tận hưởng cả nỗi buồn này đi!<br><br>Nào, phun lửa đi! Nhảy múa đi! Nhảy múa đi!<br>Nhảy múa đi! Nhảy múa đi! Nhảy múa đi! Nhảy múa đi! |
+| 触れて消して触れて消して<br><br>触れて胸の窓を開けて<br><br>早く燃えて灰を見せて<br><br>奥の奥に燻ぶる魂に                          | Furete keshite furete keshite<br><br>Furete mune no mado o akete<br><br>Hayaku moete hai o misete<br><br>Oku no oku ni kusuburu tamashii ni                                                     | Touch, extinguish, touch, extinguish<br><br>Touch me and open the door to my chest<br><br>Burn it fast and show me the ashes...<br><br>And to the sooty soul sitting in the deepest recesses there—                                  | Chạm vào rồi xóa sổ, chạm vào rồi xóa sổ<br><br>Chạm vào rồi mở cửa trái tim<br><br>Cháy nhanh lên rồi hóa tro bụi<br><br>Trước mặt linh hồn đang cháy âm ỉ sâu tận cùng                                                                       |
+| さぁ引火して　燃やして　燃やして　燃やして　燃やして　燃やして<br><br>妬けるほど愛して！                                           | Saa inkashite moyashite moyashite moyashite moyashite moyashite<br><br>Yakeru hodo aishite!                                                                                                     | —hurry and set it alight! Burn it down! Burn it down! Burn it down!<br><br>Love it so much you become jealous!                                                                                                                       | Nào, bắt lửa đi! Đốt nữa đi! Đốt nữa đi! Đốt nữa đi! Đốt nữa đi! Đốt nữa đi!<br><br>Hãy tận hưởng đến điên cuồng đi!                                                                                                                           |
+| さぁ放火して　燃やして　燃やして　燃やして　燃やして　燃やして<br><br>飽きるまで愛して<br><br>さぁ消費して　踊って　踊って　踊って　踊って　踊って　踊って      | Saa hōkashite moyashite moyashite moyashite moyashite moyashite<br><br>Akiru made aishite<br><br>Saa shōhishite odotte odotte odotte odotte odotte odotte                                       | Hurry and arson it to the ground, then burn it down! Burn it down! Burn it down!<br><br>Love until you've grown tired, then<br><br>Hurry and consume, then dance! Dance! Dance!                                                      | Nào, phun lửa đi! Đốt nữa đi! Đốt nữa đi!<br>Đốt nữa đi! Đốt nữa đi! Đốt nữa đi!<br><br>Tận hưởng đến khi phát chán đi!<br><br>Nào, tiêu thụ tiếp đi! Nhảy múa đi! Nhảy múa đi!<br>Nhảy múa đi! Nhảy múa đi! Nhảy múa đi! Nhảy múa đi!         |
+| さぁ創造して　燃やして　燃やして　燃やして　燃やして　燃やして　燃やして                                                       | Saa sōzōshite moyashite moyashite moyashite moyashite moyashite moyashite                                                                                                                       | Now create, then burn it down! Burn it down! Burn it down!                                                                                                                                                                           | Nào, sáng tạo nữa đi, đốt tiếp đi, đốt nữa đi,<br>đốt nữa đi, đốt nữa đi, đốt nữa đi, đốt nữa đi.                                                                                                                                              |
 ##### Notes
 >This song is inspired by “Fahrenheit 451” by Ray Bradbury.
+
+> “Về bức tranh. Trong bản tiểu thuyết phác họa sự kiểm duyệt của xã hội, còn trong tác phẩm này phác họa sự tự kiểm duyệt của chính tác giả. Thời khắc sáng tác tạo ra rồi lại tàn phá. Tác phẩm “451 độ F” của Ray Bradbury.”
