--- a/(2023) Magic Lantern/11. The Old Man and the Sea.md
+++ b/(2023) Magic Lantern/11. The Old Man and the Sea.md
@@ -1,18 +1,18 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-老人と海 | Roujin to Umi
+老人と海 | Roujin to Umi | Ông già và biển cả
 #### Lyrics
 
-| Japanese                                                                                                                   | Romanji                                                                                                                                                                                                                             | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                                   |
-| -------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| 靴紐が解けてる　木漏れ日は足を舐む<br><br>息を吸う音だけ聞こえてる<br><br>貴方は今立ち上がる　古びた椅子の上から<br><br>柔らかい麻の匂いがする                                        | Kutsu himo ga hodoketeru komorebi wa ashi o namu<br><br>Iki o suu oto dake kikoeteru<br><br>Anata wa ima tachiagaru furubita isu no ue kara<br><br>Yawarakai asa no nioi ga suru                                                    | Your shoelaces are undone<br>And the sunlight is beaming down through the trees, licking your feet<br><br>I can only hear the sound of your breathing<br><br>Right now, you're standing up from above that old chair,<br><br>I can smell the scent of some soft hemp                                                                 |
-| 遥か遠くへ　まだ遠くへ<br><br>僕らは身体も脱ぎ去って<br><br>まだ遠くへ　雲も越えてまだ向こうへ<br><br>風に乗って<br><br>僕の想像力という重力の向こうへ<br><br>まだ遠くへ　まだ遠くへ<br><br>海の方へ | Haruka tōku e mada tōku e<br><br>Bokura wa karada mo nugi satte<br><br>Mada tōku e kumo mo koete mada mukō e<br><br>Kaze ni notte<br><br>Boku no sōzōryoku toiu jūryoku no mukō e<br><br>Mada tōku e mada tōku e<br><br>Umi no hō e | Far, far away into the distance, let's go even farther away<br><br>Taking off and leaving behind even our bodies,<br><br>Let's go even farther away, to beyond the clouds<br><br>We'll ride the wind<br><br>And go beyond the gravity that is my imagination<br><br>Let's go far away, even farther away <br><br>To where the sea is |
-| 靴紐が解けてる　蛇みたいに跳ね遊ぶ<br><br>貴方の靴が気になる<br><br>僕らは今歩き出す　潮風は肌を舐む<br><br>手を引かれるままの道                                               | Kutsu himo ga hodoketeru hebi mitai ni hane asobu<br><br>Anata no kutsu ga ki ni naru<br><br>Bokura wa ima arukidasu shiokaze wa hada o namu<br><br>Te o hikareru mama no michi                                                     | Your shoelaces are untied, playfully bouncing around like a snake<br><br>Seeing that, your shoes pique my curiosity<br><br>We're now starting to walk, with the salty sea breeze licking our skin<br><br>The whole time, you're leading me by the hand through the road                                                              |
-| さぁまだ遠くへ　まだ遠くへ<br><br>僕らはただの風になって<br><br>まだ遠くへ　雲も越えてまだ向こうへ<br><br>風に乗って　僕ら想像力という縛りを抜け出して<br><br>まだ遠くへ　まだ遠くへ　海の方へ            | Sā mada tōku e mada tōku e<br><br>Bokura wa tada no kaze ni natte<br><br>Mada tōku e kumo mo koete mada mukō e<br><br>Kaze ni notte bokura sōzōryoku toiu shibari o nukedashite<br><br>Mada tōku e mada tōku e umi no hō e          | Come along now, we'll go far away, even farther away<br><br>We'll become just the wind<br><br>And go even farther away, to beyond the clouds<br><br>Riding the wind, we're breaking free from the chain that is our imagination<br><br>And go far away, even farther away, to where the sea is                                       |
-| 靴紐が解けてる　僕はついにしゃがみ込む<br><br>鳥の鳴く声だけ聞こえてる<br><br>肩をそっと叩かれてようやく僕は気が付く<br><br>海がもう目の先にある                                       | Kutsu himo ga hodoketeru boku wa tsuini shagamikomu<br><br>Tori no naku koe dake kikoeteru<br><br>Kata o sotto tatakarete yōyaku boku wa ki ga tsuku<br><br>Umi ga mō me no saki ni aru                                             | With shoelaces undone, I finally crouch down<br><br>I can only hear the birds' cries<br><br>You gently pat on my shoulder, and at that moment I finally realize<br><br>That the sea is right in front of my eyes                                                                                                                     |
-| あぁまだ遠くへ　まだ遠くへ<br><br>僕らは心だけになって<br><br>まだ遠くへ越えてまだ向こうへ<br><br>風に乗って　僕の想像力という重力の向こうへ<br><br>まだ遠くへ　まだ遠くへ<br><br>海の方へ          | Aa mada tōku e mada tōku e<br><br>Bokura wa kokoro dake ni natte<br><br>Mada tōku e umi mo koete mada mukō e<br><br>Kaze ni notte boku no sōzōryoku toiu jūryoku no mukō e<br><br>Mada tōku e mada tōku e<br><br>Umi no hō e        | Ah, we'll go far away, even farther away<br><br>We'll both turn into nothing but our heart,<br><br>And go even farther away, to beyond the sea<br><br>We'll ride the wind, and go beyond the gravity that is my imagination<br><br>Let's go far away, even farther away<br><br>To where the sea is                                   |
-| 僕らは今靴を脱ぐ　さざなみは足を舐む<br><br>貴方の眼は遠くを見る<br><br>ライオンが戯れるアフリカの砂浜は<br><br>海のずっと向こうにある                                            | Bokura wa ima kutsu o nugu sazanami wa ashi o namu<br><br>Anata no me wa tōku o miru<br><br>Raion ga tawamureru Afurika no sunahama wa<br><br>Umi no zutto mukō ni aru                                                              | Now, we're taking off our shoes; the rippling waves are licking our feet<br><br>You eyes are looking far off into the distance<br><br>The sandy beach in Africa where the lions are frolicking around<br><br>Is far, far away beyond the sea                                                                                         |
+| Japanese                                                                                                                   | Romanji                                                                                                                                                                                                                             | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                                   | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                                                                                                                          |
+| -------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 靴紐が解けてる　木漏れ日は足を舐む<br><br>息を吸う音だけ聞こえてる<br><br>貴方は今立ち上がる　古びた椅子の上から<br><br>柔らかい麻の匂いがする                                        | Kutsu himo ga hodoketeru komorebi wa ashi o namu<br><br>Iki o suu oto dake kikoeteru<br><br>Anata wa ima tachiagaru furubita isu no ue kara<br><br>Yawarakai asa no nioi ga suru                                                    | Your shoelaces are undone<br>And the sunlight is beaming down through the trees, licking your feet<br><br>I can only hear the sound of your breathing<br><br>Right now, you're standing up from above that old chair,<br><br>I can smell the scent of some soft hemp                                                                 | Dây giày của ta đã tuột ra,  <br>hạt nắng xuyên qua kẽ lá đùa nghịch bàn chân<br><br>Không gian im ắng chỉ còn nghe thấy hơi thở<br><br>Cậu đứng lên khỏi chiếc ghế cũ kỹ<br><br>Ta nghe mùi cây gai tỏa ra nơi đây                                                                                                                        |
+| 遥か遠くへ　まだ遠くへ<br><br>僕らは身体も脱ぎ去って<br><br>まだ遠くへ　雲も越えてまだ向こうへ<br><br>風に乗って<br><br>僕の想像力という重力の向こうへ<br><br>まだ遠くへ　まだ遠くへ<br><br>海の方へ | Haruka tōku e mada tōku e<br><br>Bokura wa karada mo nugi satte<br><br>Mada tōku e kumo mo koete mada mukō e<br><br>Kaze ni notte<br><br>Boku no sōzōryoku toiu jūryoku no mukō e<br><br>Mada tōku e mada tōku e<br><br>Umi no hō e | Far, far away into the distance, let's go even farther away<br><br>Taking off and leaving behind even our bodies,<br><br>Let's go even farther away, to beyond the clouds<br><br>We'll ride the wind<br><br>And go beyond the gravity that is my imagination<br><br>Let's go far away, even farther away <br><br>To where the sea is | Đi thôi, về phương xa, hãy đi thật xa đi<br><br>Chúng ta hãy rũ bỏ chính cơ thể của mình<br><br>Đến nơi thật xa, xa hơn cả những đám mây,<br>về phía bên kia bầu trời<br><br>Ta sẽ leo lên những cơn gió<br><br>Vượt ra khỏi sự kìm hãm mang tên trí tưởng tượng<br><br>Để đến nơi thật xa, thật xa khỏi đây<br><br>Đến với biển cả của ta |
+| 靴紐が解けてる　蛇みたいに跳ね遊ぶ<br><br>貴方の靴が気になる<br><br>僕らは今歩き出す　潮風は肌を舐む<br><br>手を引かれるままの道                                               | Kutsu himo ga hodoketeru hebi mitai ni hane asobu<br><br>Anata no kutsu ga ki ni naru<br><br>Bokura wa ima arukidasu shiokaze wa hada o namu<br><br>Te o hikareru mama no michi                                                     | Your shoelaces are untied, playfully bouncing around like a snake<br><br>Seeing that, your shoes pique my curiosity<br><br>We're now starting to walk, with the salty sea breeze licking our skin<br><br>The whole time, you're leading me by the hand through the road                                                              | Dây giày của ta đã tuột ra, nghịch ngợm như một con rắn<br><br>Nó đang tò mò đôi giày của cậu kìa<br><br>Chúng ta đang bước đi, gió biển mặn mòi mơn trớn làn da<br><br>Một con đường mời gọi ta đi                                                                                                                                        |
+| さぁまだ遠くへ　まだ遠くへ<br><br>僕らはただの風になって<br><br>まだ遠くへ　雲も越えてまだ向こうへ<br><br>風に乗って　僕ら想像力という縛りを抜け出して<br><br>まだ遠くへ　まだ遠くへ　海の方へ            | Sā mada tōku e mada tōku e<br><br>Bokura wa tada no kaze ni natte<br><br>Mada tōku e kumo mo koete mada mukō e<br><br>Kaze ni notte bokura sōzōryoku toiu shibari o nukedashite<br><br>Mada tōku e mada tōku e umi no hō e          | Come along now, we'll go far away, even farther away<br><br>We'll become just the wind<br><br>And go even farther away, to beyond the clouds<br><br>Riding the wind, we're breaking free from the chain that is our imagination<br><br>And go far away, even farther away, to where the sea is                                       | Đi thôi, về phương xa, hãy đi thật xa đi<br><br>Chúng ta hãy biến thành cơn gió<br><br>Đến nơi thật xa, xa hơn cả những đám mây, về phía bên kia bầu trời<br><br>Ta sẽ leo lên những cơn gió, thoát ra khỏi sự ràng buộc mang tên trí tưởng tượng<br><br>Để đến nơi thật xa, thật xa khỏi đây, đến với biển cả của ta                      |
+| 靴紐が解けてる　僕はついにしゃがみ込む<br><br>鳥の鳴く声だけ聞こえてる<br><br>肩をそっと叩かれてようやく僕は気が付く<br><br>海がもう目の先にある                                       | Kutsu himo ga hodoketeru boku wa tsuini shagamikomu<br><br>Tori no naku koe dake kikoeteru<br><br>Kata o sotto tatakarete yōyaku boku wa ki ga tsuku<br><br>Umi ga mō me no saki ni aru                                             | With shoelaces undone, I finally crouch down<br><br>I can only hear the birds' cries<br><br>You gently pat on my shoulder, and at that moment I finally realize<br><br>That the sea is right in front of my eyes                                                                                                                     | Dây giày của ta đã tuột ra, ta ngồi xuống lắng nghe<br><br>Chỉ có tiếng chim hót quanh tai<br><br>Rồi cậu khẽ đập vai ta, cuối cùng ta cũng nhận ra<br><br>Biển cả đang ở trước mắt ta rồi                                                                                                                                                 |
+| あぁまだ遠くへ　まだ遠くへ<br><br>僕らは心だけになって<br><br>まだ遠くへ越えてまだ向こうへ<br><br>風に乗って　僕の想像力という重力の向こうへ<br><br>まだ遠くへ　まだ遠くへ<br><br>海の方へ          | Aa mada tōku e mada tōku e<br><br>Bokura wa kokoro dake ni natte<br><br>Mada tōku e umi mo koete mada mukō e<br><br>Kaze ni notte boku no sōzōryoku toiu jūryoku no mukō e<br><br>Mada tōku e mada tōku e<br><br>Umi no hō e        | Ah, we'll go far away, even farther away<br><br>We'll both turn into nothing but our heart,<br><br>And go even farther away, to beyond the sea<br><br>We'll ride the wind, and go beyond the gravity that is my imagination<br><br>Let's go far away, even farther away<br><br>To where the sea is                                   | Ta muốn về phương xa, hãy đi thật xa đi<br><br>Chúng ta hãy chỉ để lại trái tim của mình<br><br>Đến nơi thật xa, vượt qua những đại dương, về phía bên kia bầu trời<br><br>Ta sẽ leo lên những cơn gió, vượt qua khỏi sự kìm hãm mang tên trí tưởng tượng<br><br>Để đến nơi thật xa, thật xa khỏi đây<br><br>Đến với biển cả của ta        |
+| 僕らは今靴を脱ぐ　さざなみは足を舐む<br><br>貴方の眼は遠くを見る<br><br>ライオンが戯れるアフリカの砂浜は<br><br>海のずっと向こうにある                                            | Bokura wa ima kutsu o nugu sazanami wa ashi o namu<br><br>Anata no me wa tōku o miru<br><br>Raion ga tawamureru Afurika no sunahama wa<br><br>Umi no zutto mukō ni aru                                                              | Now, we're taking off our shoes; the rippling waves are licking our feet<br><br>You eyes are looking far off into the distance<br><br>The sandy beach in Africa where the lions are frolicking around<br><br>Is far, far away beyond the sea                                                                                         | Chúng ta giờ đang cởi giày, sóng biển lăn tăn mơn trớn bàn chân<br><br>Đôi mắt cậu hướng về phía xa xăm<br><br>Bãi cát châu Phi nơi sư tử đùa giỡn<br><br>Đang ở bên kia đại dương rồi                                                                                                                                                     |
 ##### Notes
 >This song is inspired by “The Old Man and the Sea” by Ernest Hemingway.
 
@@ -20,3 +20,21 @@ await dv.view('_script');
   [ヨルシカ「老人と海」 - YouTube](https://youtube.com/playlist?list=PLB1PuqtbwVQn6Dyl-dtW3P4WWDcUmIaUz)
   [ヨルシカ「老人と海」Inspired Movie by Hurray!](https://youtu.be/XoziXabRRus)(This is what I used for the song banner)
   Additionally, here’s a nice [fanmade MV](https://twitter.com/Wushi_Graphy/status/1475497668193697795) in the style of Hurray! with a female instead of an old man
+
+> “Về bức tranh. Tôi đã tưởng tượng ra vài ngày sau của tác phẩm điện ảnh của Alexander Petrov. Một người lao động đã mệt mỏi. Một người anh hùng cần nghỉ ngơi. Một chiếc mũ rơm của trẻ con trùm lên mặt ông lão.
+> 
+> Về bài hát. Trong tiểu thuyết, ông lão đã mơ về những con sư tử gầm gừ trên sa mạc châu Phi.
+> 
+> Đó là sự hoài niệm thời còn trai trẻ, vừa thể hiện sự luyến tiếc vì không thể chạm tay đến thời kì đó lần thứ hai.
+> 
+> Khi tôi nghĩ “sư tử châu Phi” đối với mình là gì, thì câu trả lời là “đầu ra của sáng tác”.
+> 
+> Con người luôn viết hoặc làm ra cái gì đó dựa vào trí tưởng tượng. Con người hay nói trí tưởng tượng là vô hạn.
+> 
+> Nhưng điều đáng buồn là, ngoài những gì chúng ta tưởng tượng ra thì không còn gì khác nữa. Trí tưởng tượng chỉ có thể vẽ ra được trong phạm vi những gì diễn ra bên trong vỏ não của chúng ta.
+> 
+> Vỏ não này quá chật hẹp để vẽ những gì mà ta chưa từng thấy, những khung cảnh mà ta chưa từng biết đến.
+> 
+> Đó là đầu ra mà ta không thể nào đến đích, và đến giờ tôi vẫn nghĩ đó là “sư tử châu Phi” ở xa bờ bên kia đại dương.
+> 
+> “Ông già và biển cả” của Ernest Hemingway”
