--- a/(2023) Magic Lantern/12. Sayonara Morten.md
+++ b/(2023) Magic Lantern/12. Sayonara Morten.md
@@ -1,22 +1,34 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-さよならモルテン | Sayonara Morten
+さよならモルテン | Sayonara Morten | Tạm biệt Martin
 #### Lyrics
 
-| Japanese                                                                                                                                           | Romanji                                                                                                                                                                                                                                                                                     | [theyleaveshadows](https://iquixsubs.wordpress.com/2023/04/08/yourshika-goodbye-morten-sayonara-moruten-%E3%81%95%E3%82%88%E3%81%AA%E3%82%89%E3%83%A2%E3%83%AB%E3%83%86%E3%83%B3-english-translation-romaji/)                                                                                                       |
-| -------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 借りた本を片手に持って<br><br>川沿いの歩道を行く<br><br>読み終わりまであと2ページ<br><br>その先が知りたくない                                                                                | Karita hon wo katate ni motte<br><br>Kawazoi no hodou wo yuku<br><br>Yomi owari made ato ni peeji<br><br>Sono saki ga shiritakunai                                                                                                                                                          | With my borrowed book held in my hand,<br><br>I make my way down the footpath along the river<br><br>Only two pages ’till I’m done reading<br><br>I don’t wanna know what happens next                                                                                                                              |
-| 鳥に乗って旅する少年<br><br>どこまでも北へ行く<br><br>相棒はガチョウのモルテン<br><br>そんな小説を読む                                                                                    | Tori ni notte tabi suru shounen<br><br>Doko made mo kita e yuku<br><br>Aibou wa gachou no moruten<br><br>Sonna shousetsu wo yomu                                                                                                                                                            | It’s about a boy who goes on a journey<br><br>Heading endlessly north on the back of a bird,<br><br>His trusty pal is a goose named Morten —<br><br>That’s the kind of story I’m reading                                                                                                                            |
-| さよならモルテン<br><br>いつも僕らは飛ぼうとしていた<br><br>腕を開いて、高く跳ねた<br><br>何も起こらない癖に                                                                                 | Sayonara moruten<br><br>Itsumo bokura wa tobou to shiteita<br><br>Ude wo hiraite, takaku haneta<br><br>Nanimo okoranai kuse ni                                                                                                                                                              | Goodbye, Morten<br><br>We’ve always been trying to soar<br><br>With arms wide open, bounding towards the sky<br><br>Even though there’s never been a chance we’ll get off the ground                                                                                                                                |
-| さよならモルテン<br><br>君は転がりながら笑った<br><br>土の匂いが少し香る<br><br>胸が詰まりそうになる<br><br>夏が来ていた                                                                       | Sayonara moruten<br><br>Kimi wa korogari nagara waratta<br><br>Tsuchi no nioi ga sukoshi kaoru<br><br>Mune ga tsumarisou ni naru<br><br>Natsu ga kiteita                                                                                                                                    | Goodbye, Morten<br><br>You laugh even as we tumble down<br><br>I catch the scent of the earth beneath us<br><br>and feel a knot build deep in my chest<br><br>Summer has arrived                                                                                                                                    |
-| 悲しみって資産を持って<br><br>夏前の道を行く<br><br>読み終わりまであと2ページ<br><br>まだ先が知りたくない                                                                                  | Kanashimi tte shisan wo motte<br><br>Natsu mae no michi wo yuku<br><br>Yomi owari made ato ni peeji<br><br>Mada saki ga shiritakunai                                                                                                                                                        | Clutching onto my sadness like it’s its own fortune<br><br>I make my way down the path right before the summer comes<br><br>Only two pages ’till I’m done reading<br><br>I don’t wanna know what happens next yet                                                                                                   |
-| 少し伸びた背丈を追って<br><br>いつもの丘へ駆ける<br><br>空を飛んだガチョウみたいに<br><br>僕らは腕を開く                                                                                   | Sukoshi nobita setake wo otte<br><br>Itsumo no oka e kakeru<br><br>Sora wo tonda gachou mitai ni<br><br>Bokura wa ude wo hiraku                                                                                                                                                             | Chasing after your ever-slightly taller figure,<br><br>I dash up the usual hill<br><br>Like geese flying through the sky,<br><br>We open up our arms                                                                                                                                                                |
-| さよならモルテン<br><br>僕らそれでも飛ぼうとしていた<br><br>実は自分が特別じゃないとただ知りたくないだけで<br><br>さよならモルテン<br><br>君は転がりながら笑った<br><br>大人になっていくことを<br><br>少しも知らない顔で<br><br>夏が来ていた | Sayonara moruten<br><br>Bokura sore demo tobou to shiteita<br><br>Jitsu wa jibun ga tokubetsu janai to tada shiritakunai dake de<br><br>Sayonara moruten<br><br>Kimi wa korogari nagara waratta<br><br>Otona ni natte iku koto wo<br><br>Sukoshi mo shiranai kao de<br><br>Natsu ga kiteita | Goodbye Morten<br><br>We try to soar, even still<br><br>We just don’t wanna know the truth<br><br>that we’re not as special as we think<br><br>Goodbye, Morten<br><br>You laugh even as we tumble down<br><br>When I see your face,<br><br>it’s like you have no clue we’re growing older<br><br>Summer has arrived |
-| また一つ背が伸びる<br><br>いつしか遠くなる<br><br>少しずつ離れてく<br><br>別れた枝のよう                                                                                           | Mata hitotsu se ga nobiru<br><br>Itsu shika tooku naru<br><br>Sukoshi zutsu hanareteku<br><br>Wakareta eda no you                                                                                                                                                                           | Once again, you’re growing taller<br><br>Before I knew it, you became distant<br><br>Little by little, we drifted apart<br><br>Like a twig splitting in two                                                                                                                                                         |
-| 褪せた本を片手に持って<br><br>懐かしい道を行く<br><br>あの丘まで数百歩<br><br>誰かがそこにいる                                                                                        | Aseta hon wo katate ni motte<br><br>Natsukashii michi wo yuku<br><br>Ano oka made suuhyaku ho<br><br>Dareka ga soko ni iru                                                                                                                                                                  | With my faded book clutched in my hand,<br><br>I make my way down that old familiar path<br><br>Just a few hundred steps ’till the top of that hill<br><br>There’s someone standing there                                                                                                                           |
-| さよならモルテン<br><br>君は今でも飛ぼうとしていた<br><br>目は煌めいて、あの頃と何も変わらないままで                                                                                         | Sayonara moruten<br><br>Kimi wa ima demo tobou to shiteita<br><br>Me wa kirameite, ano koro to nanimo kawaranai mama de                                                                                                                                                                     | Goodbye, Morten<br><br>You’re still trying to soar, even now<br><br>With your eyes glimmering, it’s like nothing has changed from back then                                                                                                                                                                         |
-| さよならモルテン<br><br>僕ら飛べないことが愛おしいとわかる気がして<br><br>少し香る　胸が詰まりそうになる<br><br>君が見ていた<br><br>笑う顔も一つも褪せないままで<br><br>夏が来ていた                                     | Sayonara moruten<br><br>Bokura tobenai koto ga itooshii to wakaru ki ga shite<br><br>Sukoshi kaoru mune ga tsumarisou ni naru<br><br>Kimi ga miteita<br><br>Warau kao mo hitotsu mo asenai mama de<br><br>Natsu ga kiteita                                                                  | Goodbye, Morten<br><br>I get the sense that we’ve always held the fact we can’t fly close to our hearts,<br><br>and feel a knot build deep in my chest<br><br>You’re watching me,<br><br>but your smile never fades, not even for a second<br><br>Summer has arrived                                                |
-| 褪せた本を片手に持って<br><br>川沿いの歩道を行く<br><br>読み終わりはあと1ページ<br><br>最後の紙を捲る<br><br>さよなら、モルテン                                                                   | Aseta hon wo katate ni motte<br><br>Kawazoi no hodou wo yuku<br><br>Yomi owari wa ato ichi peeji<br><br>Saigo no kami wo mekuru<br><br>Sayonara, moruten                                                                                                                                    | With my faded book clutched in my hand,<br><br>I make my way down the footpath along the river<br><br>Only one page left ’till I’m done reading<br><br>I flip over the last sheet<br><br>Goodbye, Morten                                                                                                            |
+| Japanese                                                                                                                                           | Romanji                                                                                                                                                                                                                                                                                     | [theyleaveshadows](https://iquixsubs.wordpress.com/2023/04/08/yourshika-goodbye-morten-sayonara-moruten-%E3%81%95%E3%82%88%E3%81%AA%E3%82%89%E3%83%A2%E3%83%AB%E3%83%86%E3%83%B3-english-translation-romaji/)                                                                                                       | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                                                                                                  |
+| -------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 借りた本を片手に持って<br><br>川沿いの歩道を行く<br><br>読み終わりまであと2ページ<br><br>その先が知りたくない                                                                                | Karita hon wo katate ni motte<br><br>Kawazoi no hodou wo yuku<br><br>Yomi owari made ato ni peeji<br><br>Sono saki ga shiritakunai                                                                                                                                                          | With my borrowed book held in my hand,<br><br>I make my way down the footpath along the river<br><br>Only two pages ’till I’m done reading<br><br>I don’t wanna know what happens next                                                                                                                              | Trên tay cầm cuốn sách đi mượn<br><br>Tôi bước đi trên con đường dọc bờ sông<br><br>Còn hai trang là đọc hết<br><br>Và tôi không muốn biết kết thúc của nó                                                                                                                                                         |
+| 鳥に乗って旅する少年<br><br>どこまでも北へ行く<br><br>相棒はガチョウのモルテン<br><br>そんな小説を読む                                                                                    | Tori ni notte tabi suru shounen<br><br>Doko made mo kita e yuku<br><br>Aibou wa gachou no moruten<br><br>Sonna shousetsu wo yomu                                                                                                                                                            | It’s about a boy who goes on a journey<br><br>Heading endlessly north on the back of a bird,<br><br>His trusty pal is a goose named Morten —<br><br>That’s the kind of story I’m reading                                                                                                                            | Cậu thiếu niên leo lên lưng chim và bắt đầu hành trình<br><br>Cậu ta đi mãi về hướng Bắc<br><br>Cộng sự của cậu ta là chú ngỗng tên Martin<br><br>Đó là cuốn tiểu thuyết tôi đọc                                                                                                                                   |
+| さよならモルテン<br><br>いつも僕らは飛ぼうとしていた<br><br>腕を開いて、高く跳ねた<br><br>何も起こらない癖に                                                                                 | Sayonara moruten<br><br>Itsumo bokura wa tobou to shiteita<br><br>Ude wo hiraite, takaku haneta<br><br>Nanimo okoranai kuse ni                                                                                                                                                              | Goodbye, Morten<br><br>We’ve always been trying to soar<br><br>With arms wide open, bounding towards the sky<br><br>Even though there’s never been a chance we’ll get off the ground                                                                                                                                | Tạm biệt Martin<br><br>Chúng ta đã luôn muốn bay thật xa<br><br>Dù đã dang rộng hai tay và bật lên cao<br><br>Và chẳng có gì xảy ra cả                                                                                                                                                                             |
+| さよならモルテン<br><br>君は転がりながら笑った<br><br>土の匂いが少し香る<br><br>胸が詰まりそうになる<br><br>夏が来ていた                                                                       | Sayonara moruten<br><br>Kimi wa korogari nagara waratta<br><br>Tsuchi no nioi ga sukoshi kaoru<br><br>Mune ga tsumarisou ni naru<br><br>Natsu ga kiteita                                                                                                                                    | Goodbye, Morten<br><br>You laugh even as we tumble down<br><br>I catch the scent of the earth beneath us<br><br>and feel a knot build deep in my chest<br><br>Summer has arrived                                                                                                                                    | Tạm biệt Martin<br><br>Cậu vừa lăn ra ngã vừa cười<br><br>Mùi đất thoang thoảng đâu đây<br><br>Trái tim tôi như đang thắt lại<br><br>Mùa hè đã đến rồi                                                                                                                                                             |
+| 悲しみって資産を持って<br><br>夏前の道を行く<br><br>読み終わりまであと2ページ<br><br>まだ先が知りたくない                                                                                  | Kanashimi tte shisan wo motte<br><br>Natsu mae no michi wo yuku<br><br>Yomi owari made ato ni peeji<br><br>Mada saki ga shiritakunai                                                                                                                                                        | Clutching onto my sadness like it’s its own fortune<br><br>I make my way down the path right before the summer comes<br><br>Only two pages ’till I’m done reading<br><br>I don’t wanna know what happens next yet                                                                                                   | Tôi mang theo tài sản gọi tên nỗi buồn<br><br>Bước trên con đường tiến đến mùa hè<br><br>Còn có hai trang là đọc hết<br><br>Và tôi chẳng muốn biết kết thúc                                                                                                                                                        |
+| 少し伸びた背丈を追って<br><br>いつもの丘へ駆ける<br><br>空を飛んだガチョウみたいに<br><br>僕らは腕を開く                                                                                   | Sukoshi nobita setake wo otte<br><br>Itsumo no oka e kakeru<br><br>Sora wo tonda gachou mitai ni<br><br>Bokura wa ude wo hiraku                                                                                                                                                             | Chasing after your ever-slightly taller figure,<br><br>I dash up the usual hill<br><br>Like geese flying through the sky,<br><br>We open up our arms                                                                                                                                                                | Tôi đuổi theo bóng lưng dài<br><br>Chạy lên ngọn đồi mọi khi<br><br>Giống như chú ngỗng bay lên trời<br><br>Chúng ta dang rộng hai tay ra                                                                                                                                                                          |
+| さよならモルテン<br><br>僕らそれでも飛ぼうとしていた<br><br>実は自分が特別じゃないとただ知りたくないだけで<br><br>さよならモルテン<br><br>君は転がりながら笑った<br><br>大人になっていくことを<br><br>少しも知らない顔で<br><br>夏が来ていた | Sayonara moruten<br><br>Bokura sore demo tobou to shiteita<br><br>Jitsu wa jibun ga tokubetsu janai to tada shiritakunai dake de<br><br>Sayonara moruten<br><br>Kimi wa korogari nagara waratta<br><br>Otona ni natte iku koto wo<br><br>Sukoshi mo shiranai kao de<br><br>Natsu ga kiteita | Goodbye Morten<br><br>We try to soar, even still<br><br>We just don’t wanna know the truth<br><br>that we’re not as special as we think<br><br>Goodbye, Morten<br><br>You laugh even as we tumble down<br><br>When I see your face,<br><br>it’s like you have no clue we’re growing older<br><br>Summer has arrived | Tạm biệt Martin<br><br>Dẫu thế chúng ta vẫn muốn bay lên<br><br>Thực ra tôi không muốn biết sự thật rằng bản thân mình chẳng có gì đặc biệt cả<br><br>Tạm biệt Martin<br><br>Cậu vừa ngã lăn ra vừa cười<br><br>Với một khuôn mặt tỉnh bơ<br><br>Chẳng hay gì việc mình đang trưởng thành<br><br>Mùa hè đã đến rồi |
+| また一つ背が伸びる<br><br>いつしか遠くなる<br><br>少しずつ離れてく<br><br>別れた枝のよう                                                                                           | Mata hitotsu se ga nobiru<br><br>Itsu shika tooku naru<br><br>Sukoshi zutsu hanareteku<br><br>Wakareta eda no you                                                                                                                                                                           | Once again, you’re growing taller<br><br>Before I knew it, you became distant<br><br>Little by little, we drifted apart<br><br>Like a twig splitting in two                                                                                                                                                         | Tôi lại cao thêm một chút<br><br>Không biết tự lúc nào đã thấy xa xôi<br><br>Từng chút một rời xa<br><br>Như cành cây bị chia nhánh                                                                                                                                                                                |
+| 褪せた本を片手に持って<br><br>懐かしい道を行く<br><br>あの丘まで数百歩<br><br>誰かがそこにいる                                                                                        | Aseta hon wo katate ni motte<br><br>Natsukashii michi wo yuku<br><br>Ano oka made suuhyaku ho<br><br>Dareka ga soko ni iru                                                                                                                                                                  | With my faded book clutched in my hand,<br><br>I make my way down that old familiar path<br><br>Just a few hundred steps ’till the top of that hill<br><br>There’s someone standing there                                                                                                                           | Mang trên tay cuốn sách đã phai màu<br><br>Bước đi trên con đường hoài niệm<br><br>Còn vài trăm bước là đến ngọn đồi đó<br><br>Có ai đang ở đó                                                                                                                                                                     |
+| さよならモルテン<br><br>君は今でも飛ぼうとしていた<br><br>目は煌めいて、あの頃と何も変わらないままで                                                                                         | Sayonara moruten<br><br>Kimi wa ima demo tobou to shiteita<br><br>Me wa kirameite, ano koro to nanimo kawaranai mama de                                                                                                                                                                     | Goodbye, Morten<br><br>You’re still trying to soar, even now<br><br>With your eyes glimmering, it’s like nothing has changed from back then                                                                                                                                                                         | Tạm biệt Martin<br><br>Đến bây giờ cậu vẫn muốn bay lên<br><br>Đôi mắt cậu lấp lánh, chẳng khác gì so với hồi đó cả                                                                                                                                                                                                |
+| さよならモルテン<br><br>僕ら飛べないことが愛おしいとわかる気がして<br><br>少し香る　胸が詰まりそうになる<br><br>君が見ていた<br><br>笑う顔も一つも褪せないままで<br><br>夏が来ていた                                     | Sayonara moruten<br><br>Bokura tobenai koto ga itooshii to wakaru ki ga shite<br><br>Sukoshi kaoru mune ga tsumarisou ni naru<br><br>Kimi ga miteita<br><br>Warau kao mo hitotsu mo asenai mama de<br><br>Natsu ga kiteita                                                                  | Goodbye, Morten<br><br>I get the sense that we’ve always held the fact we can’t fly close to our hearts,<br><br>and feel a knot build deep in my chest<br><br>You’re watching me,<br><br>but your smile never fades, not even for a second<br><br>Summer has arrived                                                | Tạm biệt Martin<br><br>Cảm giác như tôi biết rằng, bản thân không thể bay thật đáng yêu<br><br>Mùi đất thoang thoảng, trái tim như thắt lại<br><br>Cậu lại nhìn tôi<br><br>Nụ cười không phai nhạt dù chỉ một chút<br><br>Mùa hè đã đến rồi                                                                        |
+| 褪せた本を片手に持って<br><br>川沿いの歩道を行く<br><br>読み終わりはあと1ページ<br><br>最後の紙を捲る<br><br>さよなら、モルテン                                                                   | Aseta hon wo katate ni motte<br><br>Kawazoi no hodou wo yuku<br><br>Yomi owari wa ato ichi peeji<br><br>Saigo no kami wo mekuru<br><br>Sayonara, moruten                                                                                                                                    | With my faded book clutched in my hand,<br><br>I make my way down the footpath along the river<br><br>Only one page left ’till I’m done reading<br><br>I flip over the last sheet<br><br>Goodbye, Morten                                                                                                            | Trên tay cầm cuốn sách đã phai màu<br><br>Tôi bước đi trên con đường ven sông<br><br>Còn một trang nữa là đọc hết<br><br>Tôi lật sang trang cuối<br><br>Tạm biệt Martin                                                                                                                                            |
 ##### Notes
 >This song is inspired by “The Wonderful Adventures of Nils” by Selma Lagerlöf.
+
+> “Một người bạn lâu ngày mới gặp lại vẫn tạo ra những thứ không khác gì trước đây. Cậu ta biểu cảm cũng không khác gì so với hồi đó. Không hiểu sao tim tôi lại thắt chặt lại.
+> 
+> Lúc đó tôi nhớ lại một tác phẩm văn học thiếu nhi tôi đã đọc hồi bé là “Hành trình kỳ lạ của Nils”. Một câu chuyện kể về thiếu niên Nils leo lên mình con ngỗng Martin và bắt đầu chuyến đi của mình.
+> 
+> Và tôi đã nghĩ đến việc viết một bài hát kể về những đứa trẻ muốn bay lên trời giống như Martin. Tôi nhìn thấy những thứ trải qua thời gian không hề thay đổi, và trái tim tôi rung động vì điều đó.
+> 
+> Tôi mơ về những đứa trẻ chạy trên đường phố ở Gamla Stan, Thụy Điển, nhìn lên trời về nơi nào đó xa xăm.
+> 
+> “Hành trình kỳ lạ của Nils” của Selma Lagerlöf.”
+
+> “Chú ngỗng Martin mang theo cậu thiếu niên bay xa. Tôi của ngày đó đã vờ như không biết rằng, câu chuyện này một ngày nào đó sẽ kết thúc.” – n-buna
