--- a/(2023) Magic Lantern/18. Third Night.md
+++ b/(2023) Magic Lantern/18. Third Night.md
@@ -1,4 +1,10 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-第三夜 | Daisanya
+第三夜 | Daisanya | Đêm thứ ba
+
+> “Mực đen nhảy múa như con dơi.
+> 
+> Tham khảo bức ảnh Miles Davis chụp bởi nhiếp ảnh gia Irving Penn.
+> 
+> Đoạn nhạc được chơi bởi nhóm, ghi âm phát một theo kiểu luyện tập.”
