--- a/(2023) Magic Lantern/19. Fourth Night.md
+++ b/(2023) Magic Lantern/19. Fourth Night.md
@@ -1,4 +1,10 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-第四夜| Daiyonya
+第四夜| Daiyonya | Đêm thứ tư
+
+> “Một cô gái đến bên một con hươu đang nhảy.
+> 
+> Về phần nhạc, tôi cảm giác cô gái như đang lắng nghe nhịp tim của con hươu rồi viết ra.
+> 
+> Tôi dùng piano để tái hiện nhịp tim. Một âm thanh đó làm nên hiệu ứng và tạo ra khoảng không ngày càng rộng.”
