--- a/(2023) Magic Lantern/20. Fifth Night.md
+++ b/(2023) Magic Lantern/20. Fifth Night.md
@@ -1,4 +1,10 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-第五夜 | Daigoya
+第五夜 | Daigoya | Đêm thứ năm
+
+> “Piano đến từ giai điệu walts.
+> 
+> Người đàn ông nhảy trong mơ. Cơ thể anh ta hóa thành cú bay đi.
+> 
+> Tham khảo tranh của họa sĩ Goya người Tây Ban Nha.”
