--- a/(2023) Magic Lantern/21. Sixth Night.md
+++ b/(2023) Magic Lantern/21. Sixth Night.md
@@ -1,4 +1,6 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-第六夜 | Dairokuya
+第六夜 | Dairokuya | Đêm thứ sáu
+
+> “Cảm giác như bế một đứa bé. Rất nhiều tấm chăn được tặng từ rất nhiều người.”
