--- a/(2023) Magic Lantern/22. Seventh Night.md
+++ b/(2023) Magic Lantern/22. Seventh Night.md
@@ -1,4 +1,12 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-第七夜 | Daishichiya
+第七夜 | Daishichiya | Đêm thứ bảy
+
+> “Chim hoàng yến mang theo cảm hứng.
+> 
+> Tham khảo tư thế của nghệ sĩ piano Glenn Gould trường phái Bach rồi nghĩ ra tư thế của một cậu bé.
+> 
+> Glenn Gould được biết đến như một người vừa đàn piano vừa hát.
+> 
+> Về phần nhạc, tôi bắt đầu bằng một đoạn ngân nga. Một đoạn lặp lại với sự tăng dần trong số lượng nhạc cụ Nhật Bản.”
