--- a/(2023) Magic Lantern/23. Eighth Night.md
+++ b/(2023) Magic Lantern/23. Eighth Night.md
@@ -1,4 +1,12 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-第八夜 | Daihachiya
+第八夜 | Daihachiya | Đêm thứ tám
+
+> “Chiến tranh xảy ra như nạn kiến cánh.
+> 
+> Tham khảo bức ảnh của Brassai, người được gọi là đôi mắt của Paris rồi vẽ bức tranh nhiều tầng phơi sáng.
+> 
+> Về âm nhạc, tôi tái hiện tiếng bước chân trong chiến tranh bằng trống nhỏ.
+> 
+> Sự tự ý thức của người Nhật khi tiếp nhận ảnh hưởng của âm nhạc phương Tây. Tôi tưởng tượng bản thân như một con kiến cánh đi giữa đường phố châu Âu.”
