--- a/(2023) Magic Lantern/24. Ninth Night.md
+++ b/(2023) Magic Lantern/24. Ninth Night.md
@@ -1,4 +1,8 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-第九夜 | Daikyuuya
+第九夜 | Daikyuuya | Đêm thứ chín
+
+> “Khách sạn, đèn neon, phố giải trí.
+> 
+> Tôi dùng piano, trống taiko và đàn synthesizer tín hiệu analog để tái hiệu màu đèn neon.”
