--- a/(2023) Magic Lantern/25. Tenth Night.md
+++ b/(2023) Magic Lantern/25. Tenth Night.md
@@ -1,4 +1,14 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-第十夜 | Daijyuuya
+第十夜 | Daijyuuya | Đêm thứ mười
+
+> “Phỏng theo xưởng vẽ của họa sĩ Francis Bacon. Con mèo khóc trong xưởng vẽ của người họa sĩ đã mất.
+> 
+> Về phần nhạc, tôi chơi đoạn nhạc piano tự do mang cảm giác tự do như con mèo thay đổi tính nết.
+> 
+> Đầu tiên sẽ hơi buồn, chủ của nó không còn nữa.
+> 
+> Thời gian qua đi sẽ dần vui lên, nó hát một mình trong căn phòng đó.
+> 
+> Và rồi nỗi buồn lại quay lại.”
