--- a/(2023) Magic Lantern/04. Chinokate.md
+++ b/(2023) Magic Lantern/04. Chinokate.md
@@ -1,22 +1,30 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-チノカテ | Chinokate
+チノカテ | Chinokate | Quả ngọt của trái đất
 #### Lyrics
 
-| Japanese                                                                                                               | Romanji                                                                                                                                                                                                                         | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                  |
-| ---------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 夕陽を呑み込んだ<br><br>コップがルビーみたいだ<br><br>飲み掛けの土曜の生活感を<br><br>テーブルに置いて                                                        | Yūhi o nomikonda<br><br>Koppu ga rubi- mitai da<br><br>Nomikake no doyō no seikatsukan o<br><br>Te-buru ni oite                                                                                                                 | The glass that swallowed the sunset<br><br>Looks like a ruby<br><br>I left on the table<br><br>The half-drank essence of my saturday life                                                                                                                                                                           |
-| 花瓶の白い花<br><br>優しすぎて枯れたみたいだ<br><br>本当に大事だったのに<br><br>そろそろ変えなければ                                                         | Kabin no shiroi hana<br><br>Yasashisugite kareta mitai da<br><br>Hontōni daiji datta noni<br><br>Sorosoro kaenakereba                                                                                                           | The white flower in the vase<br><br>Seems to have withered because it was too kind<br><br>It was truly precious<br><br>But I guess it's time to replace it…                                                                                                                                                         |
-| あ、夕陽。本当に綺麗だね                                                                                                           | A, yūhi. hontōni kirei da ne                                                                                                                                                                                                    | Ah, the sunset. Looks really beautiful, don't you think?                                                                                                                                                                                                                                                            |
-| これから先のもっと先を描いた地図はないんだろうか？<br><br>迷いはしないだろうか<br><br>それでいいから そのままでいいから<br><br>本当はいらなかったものもソファも本も捨てよう<br><br>町へ出よう        | Korekara saki no motto saki o egaita chizu wa nai n darou ka?<br><br>Mayoi wa shinai darou ka<br><br>Sorede ii kara sonomama de ii kara<br><br>Hontō wa iranakatta mono mo sofua mo hon mo suteyou<br><br>Machi e deyou         | Is there really no map that shows the details of our long, distant journey ahead?<br><br>I'm not sure if we wouldn't get lost<br><br>Well, that's fine. It's fine that way, so…<br><br>Let's throw away all the things that we actually didn't need, and the sofa and book too<br><br>And make our way to the town  |
-| 本当は僕らの心は頭にあった<br><br>何を間違えたのか、今じゃ文字の中<br><br>花瓶の白い花<br><br>いつの間にか枯れたみたいだ<br><br>本当に大事だったなら<br><br>そもそも買わなければ           | Hontō wa bokura no kokoro wa atama ni atta<br><br>Nani o machigaeta no ka, ima ja moji no naka<br><br>Kabin no shiroi hana<br><br>Itsunomanika kareta mitai da<br><br>Hontōni daiji datta nara<br><br>Somosomo kawanakereba     | Actually, our heart resides inside our head<br><br>The things we did wrong have now been laid down in letters<br><br>The white flower in the vase<br><br>Seems like it has withered a while ago<br><br>If it truly was precious,<br><br>I guess I shouldn't have bought it in the first place…                      |
-| あ、散った。それでも綺麗だね                                                                                                         | A, chitta. soredemo kirei da ne                                                                                                                                                                                                 | Ah, the petals fell. Nevertheless, it's still beautiful, don't you agree?                                                                                                                                                                                                                                           |
-| ずっと叶えたかった夢が貴方を縛っていないだろうか？<br><br>それを諦めていいと言える勇気が少しでもあったら<br><br>本当に欲しかったものも鞄もペンも捨てよう<br><br>町へ出よう                      | Zutto kanaetakatta yume ga anata o shibatteinai darou ka?<br><br>Sore o akiramete ii to ieru yūki ga sukoshi demo attara<br><br>Hontōni hoshikatta mono mo kaban mo pen mo suteyou<br><br>Machi e deyou                         | Don't you feel that the dream that you've always wanted to fulfill is tying you down?<br><br>If I have just the tiniest speck of courage to say that you can give it up…<br><br>Let's throw away the bag, pen, and even the things you really wanted to have<br><br>And make our way to the town                    |
-| 貴方の欲しがった<br><br>自分を捨ててしまった<br><br>本当に大事だったのに<br><br>今更思い出す                                                             | Anata no hoshigatta<br><br>Jibun o suteteshimatta<br><br>Hontōni daiji datta noni<br><br>Imasara omoidasu                                                                                                                       | You threw away the "self"<br><br>That you wanted to be<br><br>It was truly precious<br><br>And yet I only start to remember about it now, all too late                                                                                                                                                              |
-| 花瓶の白い花<br><br>枯れたことも気付かなかった<br><br>本当に大事だったのは<br><br>花を変える人なのに                                                         | Kabin no shiroi hana<br><br>Kareta koto mo kizukanakatta<br><br>Hontōni daiji datta no wa<br><br>Hana o kaeru hito na noni                                                                                                      | I didn't even realize<br><br>That the white flower in the vase has withered<br><br>Even though the truly precious one<br><br>Was the person who replaces the flower                                                                                                                                                 |
-| あ、待って。本当に行くんだね                                                                                                         | A, matte. hontōni iku n da ne                                                                                                                                                                                                   | Ah, wait. You're really leaving, aren't you…                                                                                                                                                                                                                                                                        |
-| これから先のもっと先を描いた地図はないんだろうか？<br><br>迷いはしないだろうか<br><br>それでいいから そのままでいいから<br><br>本当はいらなかったものもソファも本も捨てよう<br><br>それでいいから      | Korekara saki no motto saki o egaita chizu wa nai n darou ka?<br><br>Mayoi wa shinai darou ka<br><br>Sorede ii kara sonomama de ii kara<br><br>Hontō wa iranakatta mono mo sofua mo hon mo suteyou<br><br>Sorede ii kara        | Is there really no map that shows the details of our long, distant journey ahead?<br><br>I'm not sure if we wouldn't get lost<br><br>Well, that's fine. It's fine that way, so…<br><br>Let's throw away all the things that we actually didn't need, and the sofa and book too<br><br>Really, it's fine             |
-| 貴方の夜をずっと照らす大きな光はあるんだろうか？<br><br>それでも行くんだろうか<br><br>それでいいから そのままでいいから<br><br>全部を読み終わったあとはどうか目を開けて<br><br>この本を捨てよう、町へ出よう | Anata no yoru o zutto terasu ōkina hikari wa aru n darou ka?<br><br>Soredemo iku n darou ka<br><br>Sorede ii kara sonomama de ii kara<br><br>Zenbu o yomiowatta ato wa dōka me o akete<br><br>Kono hon o suteyou, machi e deyou | Would there be a dazzling ray of light that will keep illuminating your night?<br><br>Would you leave no matter what?<br><br>Well, that's fine. It's fine that way, so…<br><br>After you've finished reading everything, please open your eyes<br><br>Then, let's throw away this book and make our way to the town |
+| Japanese                                                                                                               | Romanji                                                                                                                                                                                                                         | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                  | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                                                              |
+| ---------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 夕陽を呑み込んだ<br><br>コップがルビーみたいだ<br><br>飲み掛けの土曜の生活感を<br><br>テーブルに置いて                                                        | Yūhi o nomikonda<br><br>Koppu ga rubi- mitai da<br><br>Nomikake no doyō no seikatsukan o<br><br>Te-buru ni oite                                                                                                                 | The glass that swallowed the sunset<br><br>Looks like a ruby<br><br>I left on the table<br><br>The half-drank essence of my saturday life                                                                                                                                                                           | Chiếc cốc chứa đầy ánh nắng mặt trời sáng như một viên rubi<br><br>Cảm giác được sống vào ngày thứ bảy đang uống dở cứ để lên bàn đã                                                                                                                                           |
+| 花瓶の白い花<br><br>優しすぎて枯れたみたいだ<br><br>本当に大事だったのに<br><br>そろそろ変えなければ                                                         | Kabin no shiroi hana<br><br>Yasashisugite kareta mitai da<br><br>Hontōni daiji datta noni<br><br>Sorosoro kaenakereba                                                                                                           | The white flower in the vase<br><br>Seems to have withered because it was too kind<br><br>It was truly precious<br><br>But I guess it's time to replace it…                                                                                                                                                         | Bông hoa trắng cắm trong mình trông quá đỗi dịu dàng hình như đã héo rồi<br><br>Bông hoa này rất quan trọng, nên chắc phải thay đi thôi                                                                                                                                        |
+| あ、夕陽。本当に綺麗だね                                                                                                           | A, yūhi. hontōni kirei da ne                                                                                                                                                                                                    | Ah, the sunset. Looks really beautiful, don't you think?                                                                                                                                                                                                                                                            | A, ánh nắng!<br><br>Trông đẹp thật nhỉ!                                                                                                                                                                                                                                        |
+| これから先のもっと先を描いた地図はないんだろうか？<br><br>迷いはしないだろうか<br><br>それでいいから そのままでいいから<br><br>本当はいらなかったものもソファも本も捨てよう<br><br>町へ出よう        | Korekara saki no motto saki o egaita chizu wa nai n darou ka?<br><br>Mayoi wa shinai darou ka<br><br>Sorede ii kara sonomama de ii kara<br><br>Hontō wa iranakatta mono mo sofua mo hon mo suteyou<br><br>Machi e deyou         | Is there really no map that shows the details of our long, distant journey ahead?<br><br>I'm not sure if we wouldn't get lost<br><br>Well, that's fine. It's fine that way, so…<br><br>Let's throw away all the things that we actually didn't need, and the sofa and book too<br><br>And make our way to the town  | Từ giờ trở đi không có chiếc bản đồ nào vẽ con đường sau này cho tôi ư?<br><br>Tôi sẽ không bị lạc chứ?<br><br>"Có sao đâu, cứ như vậy cũng được mà<br><br>Vứt hết đi, vứt những thứ không cần thiết, chiếc sô pha và cả những cuốn sách<br><br>Đi ra ngoài thành phố đi thôi" |
+| 本当は僕らの心は頭にあった<br><br>何を間違えたのか、今じゃ文字の中<br><br>花瓶の白い花<br><br>いつの間にか枯れたみたいだ<br><br>本当に大事だったなら<br><br>そもそも買わなければ           | Hontō wa bokura no kokoro wa atama ni atta<br><br>Nani o machigaeta no ka, ima ja moji no naka<br><br>Kabin no shiroi hana<br><br>Itsunomanika kareta mitai da<br><br>Hontōni daiji datta nara<br><br>Somosomo kawanakereba     | Actually, our heart resides inside our head<br><br>The things we did wrong have now been laid down in letters<br><br>The white flower in the vase<br><br>Seems like it has withered a while ago<br><br>If it truly was precious,<br><br>I guess I shouldn't have bought it in the first place…                      | Vốn dĩ trái tim nằm bên trong đầu chúng ta<br><br>Những gì sai lầm giờ đây chỉ còn là những con chữ<br><br>Bông hoa trắng trong bình không biết đã héo từ lúc nào rồi<br><br>Nếu thật sự quan trọng thì ngay từ đầu phải đi mua đi chứ                                         |
+| あ、散った。それでも綺麗だね                                                                                                         | A, chitta. soredemo kirei da ne                                                                                                                                                                                                 | Ah, the petals fell. Nevertheless, it's still beautiful, don't you agree?                                                                                                                                                                                                                                           | A, hoa rụng rồi.<br><br>Nhưng vẫn thật đẹp nhỉ.                                                                                                                                                                                                                                |
+| ずっと叶えたかった夢が貴方を縛っていないだろうか？<br><br>それを諦めていいと言える勇気が少しでもあったら<br><br>本当に欲しかったものも鞄もペンも捨てよう<br><br>町へ出よう                      | Zutto kanaetakatta yume ga anata o shibatteinai darou ka?<br><br>Sore o akiramete ii to ieru yūki ga sukoshi demo attara<br><br>Hontōni hoshikatta mono mo kaban mo pen mo suteyou<br><br>Machi e deyou                         | Don't you feel that the dream that you've always wanted to fulfill is tying you down?<br><br>If I have just the tiniest speck of courage to say that you can give it up…<br><br>Let's throw away the bag, pen, and even the things you really wanted to have<br><br>And make our way to the town                    | Ước mơ mà tôi đã hằng mong biến thành hiện thực có đang trói buộc cậu không?<br><br>Giá mà tôi có chút dũng khí để nói cậu hãy từ bỏ nó đi<br><br>"Vứt hết đi, vứt những thứ cậu muốn, vứt cả cặp sách cả bút đi<br><br>Đi ra ngoài thành phố đi thôi"                         |
+| 貴方の欲しがった<br><br>自分を捨ててしまった<br><br>本当に大事だったのに<br><br>今更思い出す                                                             | Anata no hoshigatta<br><br>Jibun o suteteshimatta<br><br>Hontōni daiji datta noni<br><br>Imasara omoidasu                                                                                                                       | You threw away the "self"<br><br>That you wanted to be<br><br>It was truly precious<br><br>And yet I only start to remember about it now, all too late                                                                                                                                                              | Tôi đã vứt đi cả bản thân tôi mà cậu từng mong muốn rồi<br><br>Nó thật sự đã từng rất quan trọng, nhưng bây giờ tôi mới nhớ ra                                                                                                                                                 |
+| 花瓶の白い花<br><br>枯れたことも気付かなかった<br><br>本当に大事だったのは<br><br>花を変える人なのに                                                         | Kabin no shiroi hana<br><br>Kareta koto mo kizukanakatta<br><br>Hontōni daiji datta no wa<br><br>Hana o kaeru hito na noni                                                                                                      | I didn't even realize<br><br>That the white flower in the vase has withered<br><br>Even though the truly precious one<br><br>Was the person who replaces the flower                                                                                                                                                 | Tôi còn chẳng nhận ra bông hoa trắng trong bình đã héo<br><br>Cho dù thứ quan trọng phải là người thay hoa                                                                                                                                                                     |
+| あ、待って。本当に行くんだね                                                                                                         | A, matte. hontōni iku n da ne                                                                                                                                                                                                   | Ah, wait. You're really leaving, aren't you…                                                                                                                                                                                                                                                                        | A, chờ đã!<br><br>Cậu thật sự sắp đi sao?                                                                                                                                                                                                                                      |
+| これから先のもっと先を描いた地図はないんだろうか？<br><br>迷いはしないだろうか<br><br>それでいいから そのままでいいから<br><br>本当はいらなかったものもソファも本も捨てよう<br><br>それでいいから      | Korekara saki no motto saki o egaita chizu wa nai n darou ka?<br><br>Mayoi wa shinai darou ka<br><br>Sorede ii kara sonomama de ii kara<br><br>Hontō wa iranakatta mono mo sofua mo hon mo suteyou<br><br>Sorede ii kara        | Is there really no map that shows the details of our long, distant journey ahead?<br><br>I'm not sure if we wouldn't get lost<br><br>Well, that's fine. It's fine that way, so…<br><br>Let's throw away all the things that we actually didn't need, and the sofa and book too<br><br>Really, it's fine             | Chẳng nhẽ không có chiếc bản đồ nào vẽ con đường sau này cho tôi ư?<br><br>Tôi sẽ không bị lạc chứ?<br><br>"Có sao đâu, cứ như vậy cũng được mà<br><br>Vứt hết đi, vứt những thứ không cần thiết, chiếc sô pha và cả những cuốn sách<br><br>Cứ như vậy là được mà"             |
+| 貴方の夜をずっと照らす大きな光はあるんだろうか？<br><br>それでも行くんだろうか<br><br>それでいいから そのままでいいから<br><br>全部を読み終わったあとはどうか目を開けて<br><br>この本を捨てよう、町へ出よう | Anata no yoru o zutto terasu ōkina hikari wa aru n darou ka?<br><br>Soredemo iku n darou ka<br><br>Sorede ii kara sonomama de ii kara<br><br>Zenbu o yomiowatta ato wa dōka me o akete<br><br>Kono hon o suteyou, machi e deyou | Would there be a dazzling ray of light that will keep illuminating your night?<br><br>Would you leave no matter what?<br><br>Well, that's fine. It's fine that way, so…<br><br>After you've finished reading everything, please open your eyes<br><br>Then, let's throw away this book and make our way to the town | Liệu có ánh sáng nào sẽ luôn soi sáng màn đêm của cậu không?<br><br>Cậu cứ thế vậy mà đi à?<br><br>"Cứ vậy thôi, như vậy đâu có sao<br><br>Sau khi cậu đọc hết cuốn sách này hãy mở mắt ra nhé<br><br>Vứt cuốn sách này đi<br><br>Và đi ra ngoài thành phố đi thôi"            |
 ##### Notes
 >This song is inspired by “Fruits of the Earth” by André Gide. “地の糧”pronounced as /chi-no-ka-te/ in Japanese. It was also used as the theme/ending song for the KTN/Fuji TV Drama  show 『魔法のリノベ』| “Renovation Like Magic”.
+
+>  “Từ âm hưởng của cụm từ “Chinokate”, tôi đã nghĩ đến bức tranh “Thế giới của Christina” của họa sĩ Andrew Wyeth. Wyeth vẽ một người con gái bị liệt nửa thân dưới bằng chính sức mình leo lên ngọn đồi.
+> 
+> Với bức tranh này, Wyeth đã dùng những chi tiết thân thuộc ngay bên cạnh mình như người phụ nữ hàng xóm, xung quanh ngôi nhà mình, vũng nước.
+> 
+> Tinh thần đi tìm vẻ đẹp nằm trong cuộc sống thường ngày của những con người vô danh được thể hiện qua tư tưởng “Vứt sách đi và ra ngoài phố đi”.
+> 
+> Tác phẩm “Quả ngọt của trái đất” của Andre Gide.”
