--- a/(2023) Magic Lantern/05. Snow Country.md
+++ b/(2023) Magic Lantern/05. Snow Country.md
@@ -1,16 +1,22 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-雪国 | Yukiguni
+雪国 | Yukiguni | Xứ tuyết
 #### Lyrics
 
-| Japanese                                                                                    | Romanji                                                                                                                                                                                                                | TsukiNeko 2024 Live                                                                                                                                                                                                                                                                       |
-| ------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 国境の長いトンネルを抜けると雪国は<br><br>底冷えの夜の静けさを白く帯びている<br><br>雪景の古い街並みを横目に雪国は<br><br>貴方との春の思い出がただ蔓延っている | Kokkyō no nagai tonneru o nukeruto yukiguni wa<br><br>Sokobi e no yoru no shizukesa o shiroku obiteiru<br><br>Sekkei no furui machinami o yokome ni yukiguni wa<br><br>Anata to no haru no omoide ga tada habikotteiru | Coming out of the long tunnel on the border, we find the snow country<br><br>taking on the stillness of a bone-chilly night to lay white.<br><br>Casting a sidelong glance at the snowy old townscape,<br><br>the snow country is just imbued with the memory of the springtime with you. |
-| 僕の躊躇いが月に被さってまるで海の底ね<br><br>ぼうと座って水面に映った僕らを見ている                                              | Boku no tamerai ga tsuki ni kabusatte marude umi no sokone<br><br>Bō to suwatte minamo ni utsutta bokura o miteiru                                                                                                     | My hesitation covers the moon and it's dark like the bottom of the sea.<br><br>Sitting in a daze, we're looking at our own reflections on the surface of the water.                                                                                                                       |
-| 食卓と長い小節を跨いで雪国は<br><br>花韮の花の静けさをただ嗅ぎ取っている                                                    | Shokutaku to nagai shosetsu o mataide yukiguni wa<br><br>Hana nira no hana no shizukesa o tada kagi totteiru                                                                                                           | Stretching over a dining table and a long bar, the snow country is<br><br>just catching the scent of the stillness of spring star flowers.                                                                                                                                                |
-| 貴方の涙風に舞い散ってまるで春の中ね<br><br>ぼうと座ってスープに映った僕らを見ている                                              | Anata no namida kaze ni mai chitte marude haru no nakane<br><br>Bō to suwatte sūpu ni utsutta bokura o miteiru                                                                                                         | Your tears scatter in the wind and it's like we're in the middle of the spring.<br><br>Sitting in a daze, we're looking at our own reflections on the surface of the soup.                                                                                                                |
-| 僕らの憂いが日々日々積もってまるで雪の国ね<br><br>どうか躊躇って　貴方も想って<br><br>雪が溶けるまで<br><br>愛が解けるまで                   | Bokura no urei ga hibi hibi tsumotte marude yuki no kunine<br><br>Dōka tameratte anata mo omotte<br><br>Yuki ga tokeru made<br><br>Ai ga tokeru made                                                                   | Our melancholy piles up day after day and it looks like the snow country.<br><br>I beg you to hesitate. I hope you care too.<br><br>Until the snow melts.<br><br>Until the love is solved.                                                                                                |
-| 国境の長いトンネルを抜けると僕たちは<br><br>底冷えの夜の静けさを白く帯びていた                                                 | Kokkyō no nagai tonneru o nukeruto bokutachi wa<br><br>Sokobi e no yoru no shizukesa o shiroku obiteita                                                                                                                | Coming out of the long tunnel on the border, we found ourselves<br><br>taking on the stillness of a bone-chilly night and tinged with white.                                                                                                                                              |
+| Japanese                                                                                    | Romanji                                                                                                                                                                                                                | TsukiNeko 2024 Live                                                                                                                                                                                                                                                                       | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                      |
+| ------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 国境の長いトンネルを抜けると雪国は<br><br>底冷えの夜の静けさを白く帯びている<br><br>雪景の古い街並みを横目に雪国は<br><br>貴方との春の思い出がただ蔓延っている | Kokkyō no nagai tonneru o nukeruto yukiguni wa<br><br>Sokobi e no yoru no shizukesa o shiroku obiteiru<br><br>Sekkei no furui machinami o yokome ni yukiguni wa<br><br>Anata to no haru no omoide ga tada habikotteiru | Coming out of the long tunnel on the border, we find the snow country<br><br>taking on the stillness of a bone-chilly night to lay white.<br><br>Casting a sidelong glance at the snowy old townscape,<br><br>the snow country is just imbued with the memory of the springtime with you. | Đi khỏi đường hầm dài nơi biên giới, xứ tuyết hiện ra<br><br>Vùng đất mang sắc trắng như sự yên tĩnh của màn đêm lạnh thấu xương<br><br>Đi ngang qua thành phố cổ vùi mình trong tuyết<br><br>Xứ tuyết sôi sục kỷ niệm mùa xuân bên em |
+| 僕の躊躇いが月に被さってまるで海の底ね<br><br>ぼうと座って水面に映った僕らを見ている                                              | Boku no tamerai ga tsuki ni kabusatte marude umi no sokone<br><br>Bō to suwatte minamo ni utsutta bokura o miteiru                                                                                                     | My hesitation covers the moon and it's dark like the bottom of the sea.<br><br>Sitting in a daze, we're looking at our own reflections on the surface of the water.                                                                                                                       | Sự do dự của anh bao phủ lấy mặt trăng, như thể đang ở dưới lòng biển<br><br>Nó đang nhìn chúng ta ngồi im in bóng lên mặt nước                                                                                                        |
+| 食卓と長い小節を跨いで雪国は<br><br>花韮の花の静けさをただ嗅ぎ取っている                                                    | Shokutaku to nagai shosetsu o mataide yukiguni wa<br><br>Hana nira no hana no shizukesa o tada kagi totteiru                                                                                                           | Stretching over a dining table and a long bar, the snow country is<br><br>just catching the scent of the stillness of spring star flowers.                                                                                                                                                | Bước qua bàn ăn và những ô nhịp dài liên miên<br><br>Xứ tuyết hít vào sự im ắng của hoa hẹ                                                                                                                                             |
+| 貴方の涙風に舞い散ってまるで春の中ね<br><br>ぼうと座ってスープに映った僕らを見ている                                              | Anata no namida kaze ni mai chitte marude haru no nakane<br><br>Bō to suwatte sūpu ni utsutta bokura o miteiru                                                                                                         | Your tears scatter in the wind and it's like we're in the middle of the spring.<br><br>Sitting in a daze, we're looking at our own reflections on the surface of the soup.                                                                                                                | Nước mắt của em bay vào trong gió, như thể đang giữa mùa xuân<br><br>Nó đang nhìn chúng ta lặng im in bóng lên bát súp                                                                                                                 |
+| 僕らの憂いが日々日々積もってまるで雪の国ね<br><br>どうか躊躇って　貴方も想って<br><br>雪が溶けるまで<br><br>愛が解けるまで                   | Bokura no urei ga hibi hibi tsumotte marude yuki no kunine<br><br>Dōka tameratte anata mo omotte<br><br>Yuki ga tokeru made<br><br>Ai ga tokeru made                                                                   | Our melancholy piles up day after day and it looks like the snow country.<br><br>I beg you to hesitate. I hope you care too.<br><br>Until the snow melts.<br><br>Until the love is solved.                                                                                                | Nỗi sầu của anh từng ngày từng ngày chồng chất như xứ tuyết<br><br>Xin tôi hãy do dự, hãy nhớ về em<br><br>Cho đến khi tuyết tan chảy<br><br>Cho đến khi tình này tan chảy                                                             |
+| 国境の長いトンネルを抜けると僕たちは<br><br>底冷えの夜の静けさを白く帯びていた                                                 | Kokkyō no nagai tonneru o nukeruto bokutachi wa<br><br>Sokobi e no yoru no shizukesa o shiroku obiteita                                                                                                                | Coming out of the long tunnel on the border, we found ourselves<br><br>taking on the stillness of a bone-chilly night and tinged with white.                                                                                                                                              | Đi khỏi đường hầm dài nơi biên giới, chúng ta hiện ra<br><br>Mang theo màu trắng như sự tĩnh lặng của màn đêm lạnh giá                                                                                                                 |
 ##### Notes
 >This song is inspired by “雪国 | Snow Country” by Yasunari Kawabata.
+
+> “Cảnh cuối trong Yukiguni, nhà kho chiếu bóng bị cháy. Đôi nam nữ nhìn cảnh đó như đang xem một thước phim. Tham khảo bức tranh của Edward Hopper.
+> 
+> Tác phẩm Yukiguni của Kawabata Yasunari.”
+
+> Tác phẩm “Xứ tuyết” của Kawabata Yasunari kể về chàng trai Shimamura, một người thuần túy yêu cái đẹp, 3 lần lên đường đến xứ tuyết nằm bên kia đường hầm dài vào 3 mùa xuân, đông và thu để khám phá vẻ đẹp miền núi Nhật Bản. Trong lần đầu tiên đến xứ tuyết vào mùa xuân, anh quen Komako, một Geisha chuyên mua vui cho đàn ông bằng tài năng đàn hát của mình. Komako mang vẻ đẹp trần tục, huyền bí, kiêu sa, hớp trọn ánh nhìn của Shimamura, và họ đã đem lòng yêu nhau. Ở lần thứ hai đến xứ tuyết vào mùa đông, trên tàu, Shimamura bị thu hút bởi người phụ nữ ngồi đối diện mình tên là Yoko, sau đó họ còn gặp nhau vài lần ở xứ tuyết. Yoko mang vẻ đẹp mong manh, hiền dịu, như một viên ngọc thô sơ, trái ngược hoàn toàn với Komako. Xong Shimamura lại cảm thấy tâm hồn mình được kết nối mạnh mẽ với người phụ nữ này, trong khi mối quan hệ của anh với Komako lại nặng về thể xác, dù Komako yêu thương anh và hy sinh không mong cầu đáp lại.  Lần thứ ba đến xú tuyết vào mùa thu, Shimamura đã luôn do dự không biết nên nghiêng về ai, còn Komako thì lo lắng liệu có phải người đàn ông này đã không còn yêu mình nữa khi thấy anh càng ngày càng lạnh lùng với sự ân cần của mình. Vào đêm Shimamura quyết định dứt áo rời khỏi đây để thôi nặng lòng, thì căn nhà chiếu bóng gần đó xảy ra đám cháy dữ dội. Shimamura chứng kiến thi thể của Yoko bất động trong vòng tay của Komako, trong khi Komako thì gào thét mê sảng như hóa điên. Mối tình tay ba kết thúc bi thảm, Shimamura ngồi thụp xuống nhìn ngọn lửa dâng trào như dải ngân hà xé tan bầu trời đêm.
