--- a/(2023) Magic Lantern/08. Pas de deux.md
+++ b/(2023) Magic Lantern/08. Pas de deux.md
@@ -4,17 +4,23 @@ await dv.view('_script');
 パドドゥ | Pas de deux
 #### Lyrics
 
-| Japanese                                                                                                                     | Romanji                                                                                                                                                                                                                                                                      | English |
-| ---------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------- |
-| 優しい風の音が頬撫でる<br><br>雲間鮮やか、揺れ花菖蒲<br><br>この場所を僕らは覚えてる<br><br>立ちくらみ、不格好<br><br>風に流されて腰を下ろす原<br><br>夏草は肌に擦れるまま<br><br>思い出の中に貴方はいる | Yasashii kaze no ne ga hoo naderu<br><br>Kumoma azayaka, yure hanashoubu<br><br>Kono basho wo bokura wa oboeteru<br><br>Tachikurami, bukakkou<br><br>Kaze ni nagasarete koshi wo orosu hara<br><br>Natsukusa wa hada ni kosureru mama<br><br>Omoide no naka ni bokura wa iru |         |
-| 優しい風の音が頬撫でる<br><br>土用の縁側、言葉足らず<br><br>雲の下へ続く田舎道<br><br>夏木立、不格好<br><br>風に流されて足を運ぶまま<br><br>あの頃指差して進むまま                        | Yasashii kaze no ne ga hoo naderu<br><br>Doyou no engawa, kotoba tarazu<br><br>Kumo no shita e tsuzuku inakamichi<br><br>Natsu kodachi, bukakkou<br><br>Kaze ni nagasarete ashi wo hakobu mama<br><br>Ano koro yubisashite susumu mama                                       |         |
-| 「さぁさぁもっと踊っていようよ<br><br>腕を引かれるまま、情け無い顔のままで<br><br>一生踊って暮らしていようよ<br><br>もう考えないでいいよ」                                            | “Saa saa motto odotteiyou yo<br><br>Ude wo hikareru mama, nasakenai kao no mama de<br><br>Isshou odotte kurashiteiyou yo<br><br>Mou kangaenaide ii yo”                                                                                                                       |         |
-| そう考えたっていいよ                                                                                                                   | Sou kangaetatte ii yo                                                                                                                                                                                                                                                        |         |
-| 優しい風の音が頬撫でる<br><br>夏休み、校舎の七不思議<br><br>あの夜を僕らは覚えてる<br><br>立ちすくみ、不格好<br><br>風に流されて歩く長廊下<br><br>宵闇は鼻に擦れるまま                      | Yasashii kaze no ne ga hoo naderu<br><br>Natsu yasumi, kousha no nana fushigi<br><br>Ano yoru wo bokura wa oboeteru<br><br>Tachisukumi, bukakkou<br><br>Kaze ni nagasarete aruku nagarouka<br><br>Yoiyami wa hana ni kosureru mama                                           |         |
-| 「さぁさぁもっと踊っていようよ<br><br>胸を焦がせ今は泣き止んだ顔のままで<br><br>一生踊って暮らしていようよ<br><br>疲れたら寝ればいいよ」                                             | “Saa saa motto odotteiyou yo<br><br>Mune wo kogase ima wa nakiyanda kao no mama de<br><br>Isshou odotte kurashiteiyou yo<br><br>Tsukaretara nereba ii yo”                                                                                                                    |         |
-| 夜の校庭、たった二人だけの舞踏会<br><br>さながら舞台裏のパ・ド・ドゥ<br><br>僕ら芥川の小説みたいに<br><br>今だけの想い出になろう                                                 | Yoru no koutei, tatta futari dake no butoukai<br><br>Sanagara butaiura no pa do du<br><br>Bokura akutagawa no shousetsu mitai ni<br><br>Ima dake no omoide ni narou                                                                                                          |         |
-| 「さぁさぁもっと踊っていよう<br><br>深く息を吸うように<br><br>一生踊って暮らしていよう                                                                          | “Saa saa motto odotteiyou<br><br>Fukaku iki wo suu you ni<br><br>Isshou odotte kurashiteiyou                                                                                                                                                                                 |         |
-| さぁさぁもっと踊っていようよ<br><br>いつか出会えるならふざけた笑顔のままで<br><br>一生踊って暮らしていようよ<br><br>そう考えたっていいよ                                             | Saa saa motto odotteiyou yo<br><br>Itsuka deaeru nara fuzaketa egao no mama de<br><br>Isshou odotte kurashiteiyou yo<br><br>Sou kangaetatte ii yo                                                                                                                            |         |
-| さぁさぁもっと踊っていよう」                                                                                                               | Saa saa motto odotteiyou”                                                                                                                                                                                                                                                    |         |
+| Japanese                                                                                                                     | Romanji                                                                                                                                                                                                                                                                      | English | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                                                                                          |
+| ---------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 優しい風の音が頬撫でる<br><br>雲間鮮やか、揺れ花菖蒲<br><br>この場所を僕らは覚えてる<br><br>立ちくらみ、不格好<br><br>風に流されて腰を下ろす原<br><br>夏草は肌に擦れるまま<br><br>思い出の中に貴方はいる | Yasashii kaze no ne ga hoo naderu<br><br>Kumoma azayaka, yure hanashoubu<br><br>Kono basho wo bokura wa oboeteru<br><br>Tachikurami, bukakkou<br><br>Kaze ni nagasarete koshi wo orosu hara<br><br>Natsukusa wa hada ni kosureru mama<br><br>Omoide no naka ni bokura wa iru |         | Âm thanh của gió nhẹ nhàng lướt qua gò má<br><br>Những kẽ mây sáng lấp lánh, hoa diên vĩ tím đung đưa<br><br>Chúng ta đều nhớ nơi này<br><br>Trước mắt bỗng mờ đi, thật vụng về<br><br>Để làn gió cuốn đi, thả mình xuống đồng cỏ<br><br>Cỏ mùa hè lạo xạo trên da<br><br>Chúng ta đang sống trong kỷ niệm |
+| 優しい風の音が頬撫でる<br><br>土用の縁側、言葉足らず<br><br>雲の下へ続く田舎道<br><br>夏木立、不格好<br><br>風に流されて足を運ぶまま<br><br>あの頃指差して進むまま                        | Yasashii kaze no ne ga hoo naderu<br><br>Doyou no engawa, kotoba tarazu<br><br>Kumo no shita e tsuzuku inakamichi<br><br>Natsu kodachi, bukakkou<br><br>Kaze ni nagasarete ashi wo hakobu mama<br><br>Ano koro yubisashite susumu mama                                       |         | Âm thanh của gió nhẹ nhàng lướt qua gò má<br><br>Hiên nhà trong ngày hạ chí, không có từ nào để tả<br><br>Con đường làng trải dài dưới những đám mây<br><br>Hàng cây mùa hè, trông thật vụng về<br><br>Để làn gió cuốn đi, bước chân sải dài<br><br>Chúng ta cùng hướng về ngày đó                         |
+| 「さぁさぁもっと踊っていようよ<br><br>腕を引かれるまま、情け無い顔のままで<br><br>一生踊って暮らしていようよ<br><br>もう考えないでいいよ」                                            | “Saa saa motto odotteiyou yo<br><br>Ude wo hikareru mama, nasakenai kao no mama de<br><br>Isshou odotte kurashiteiyou yo<br><br>Mou kangaenaide ii yo”                                                                                                                       |         | “Nào, ta cứ nhảy thêm nữa đi<br><br>Với bàn tay bị kéo lại, với một khuôn mặt thật thoải mái<br><br>Cả đời này ta cứ khiêu vũ mà sống đi<br><br>Đừng nghĩ gì cả                                                                                                                                            |
+| そう考えたっていいよ                                                                                                                   | Sou kangaetatte ii yo                                                                                                                                                                                                                                                        |         | Cứ nghĩ như vậy cũng được mà                                                                                                                                                                                                                                                                               |
+| 優しい風の音が頬撫でる<br><br>夏休み、校舎の七不思議<br><br>あの夜を僕らは覚えてる<br><br>立ちすくみ、不格好<br><br>風に流されて歩く長廊下<br><br>宵闇は鼻に擦れるまま                      | Yasashii kaze no ne ga hoo naderu<br><br>Natsu yasumi, kousha no nana fushigi<br><br>Ano yoru wo bokura wa oboeteru<br><br>Tachisukumi, bukakkou<br><br>Kaze ni nagasarete aruku nagarouka<br><br>Yoiyami wa hana ni kosureru mama                                           |         | Âm thanh của gió nhẹ nhàng lướt qua gò má<br><br>Kỳ nghỉ hè và bảy điều bí ẩn khu học xá<br><br>Ta vẫn còn nhớ về đêm đó<br><br>Mọi thứ dần mờ đi, thật vụng về<br><br>Để gió cuốn đi, bước chân trên hành lang dài<br><br>Màn đêm khẽ cọ vào sống mũi                                                     |
+| 「さぁさぁもっと踊っていようよ<br><br>胸を焦がせ今は泣き止んだ顔のままで<br><br>一生踊って暮らしていようよ<br><br>疲れたら寝ればいいよ」                                             | “Saa saa motto odotteiyou yo<br><br>Mune wo kogase ima wa nakiyanda kao no mama de<br><br>Isshou odotte kurashiteiyou yo<br><br>Tsukaretara nereba ii yo”                                                                                                                    |         | “Nào, ta cứ nhảy thêm nữa đi<br><br>Khi trái tim ta thôi thúc và nước mắt đã ngừng rơi<br><br>Cả đời này ta cứ khiêu vũ mà sống thôi<br><br>Mệt thì ngủ một giấc là được.”                                                                                                                                 |
+| 夜の校庭、たった二人だけの舞踏会<br><br>さながら舞台裏のパ・ド・ドゥ<br><br>僕ら芥川の小説みたいに<br><br>今だけの想い出になろう                                                 | Yoru no koutei, tatta futari dake no butoukai<br><br>Sanagara butaiura no pa do du<br><br>Bokura akutagawa no shousetsu mitai ni<br><br>Ima dake no omoide ni narou                                                                                                          |         | Sân trường vào ban đêm, dạ hội khiêu vũ chỉ dành riêng cho hai người<br><br>Như thể điệu Pas de deux ở sau sân khấu<br><br>Chúng ta hãy cứ trở thành kỷ niệm<br><br>Giống như trong tiểu thuyết của Akutagawa, chỉ lúc này mà thôi                                                                         |
+| 「さぁさぁもっと踊っていよう<br><br>深く息を吸うように<br><br>一生踊って暮らしていよう                                                                          | “Saa saa motto odotteiyou<br><br>Fukaku iki wo suu you ni<br><br>Isshou odotte kurashiteiyou                                                                                                                                                                                 |         | “Nào, ta cứ nhảy thêm nữa đi<br><br>Hít một hơi thật sâu nào<br><br>Cả đời này ta cứ khiêu vũ mà sống thôi                                                                                                                                                                                                 |
+| さぁさぁもっと踊っていようよ<br><br>いつか出会えるならふざけた笑顔のままで<br><br>一生踊って暮らしていようよ<br><br>そう考えたっていいよ                                             | Saa saa motto odotteiyou yo<br><br>Itsuka deaeru nara fuzaketa egao no mama de<br><br>Isshou odotte kurashiteiyou yo<br><br>Sou kangaetatte ii yo                                                                                                                            |         | “Nào, ta cứ nhảy thêm nữa đi<br><br>Một ngày nào đó nếu gặp lại ta sẽ chào nhau bằng nụ cười trêu chọc<br><br>Cả đời này ta cứ khiêu vũ mà sống thôi<br><br>Cứ nghĩ như vậy cũng được mà                                                                                                                   |
+| さぁさぁもっと踊っていよう」                                                                                                               | Saa saa motto odotteiyou”                                                                                                                                                                                                                                                    |         | Nào, cứ nhảy thêm nữa đi…”                                                                                                                                                                                                                                                                                 |
 ##### Notes
 >This is inspired by “舞踏会 | The Ball” by Ryuunosuke Akutagawa.
+
+> “Tôi lấy cảm hứng từ truyện ngắn “Butoukai” (dạ hội khiêu vũ) của Akutagawa Ryuunosuke, và đặt bút viết về hai con người nhảy múa trong kỷ niệm quá khứ.
+> 
+> Những người khiêu vũ trong kỷ niệm nhìn thấy bản thân mình trong quá khứ. Đi qua xứ tuyết, họ đi đến chặng cuối của mối quan hệ, chuyến tàu đi về bên kia đồng cỏ.
+> 
+> Pas De Deux là một từ dùng trong múa ba lê và cũng ám chỉ điệu nhảy của hai người nam nữ.”
