--- a/(2023) Magic Lantern/09. Matasaburo.md
+++ b/(2023) Magic Lantern/09. Matasaburo.md
@@ -4,17 +4,21 @@ await dv.view('_script');
 又三郎 | Matasaburo
 #### Lyrics
 
-| Japanese                                                                                                           | Romanji                                                                                                                                                                                                                                       | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                           |
-| ------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 水溜りに足を突っ込んで<br><br>貴方は大きなあくびをする<br><br>酷い嵐を呼んで欲しいんだ<br><br>この空も吹き飛ばすほどの                                            | Mizutamari ni ashi o tsukkonde<br><br>anata wa ōkina akubi o suru<br><br>Hidoi arashi o yonde hoshii'n da<br><br>Kono sora mo fuki-tobasu hodo no                                                                                             | When you step into a pool of water,<br><br>You let out a big yawn<br><br>I want you to summon a storm so fierce<br><br>That will blow away even this sky                                                                                                                                                                     |
-| 風を待っていたんだ<br><br>何もない生活はきっと退屈過ぎるから<br><br>風を待っていたんだ<br><br>風を待っていたんだ                                               | Kaze o matte-ita'n da<br><br>Nani mo nai seikatsu wa kitto taikutsu sugiru kara<br><br>Kaze o matte-ita'n da<br><br>Kaze o matte-ita'n da                                                                                                     | I was waiting for the wind<br><br>Because I'm sure an empty life would be too boring<br><br>I was waiting for the wind<br><br>I was waiting for the wind                                                                                                                                                                     |
-| 吹けば青嵐<br><br>言葉も飛ばしてしまえ<br><br>誰も何も言えぬほど<br><br>僕らを呑み込んでゆけ                                                         | Fukeba ao-arashi<br><br>Kotoba mo tobashite shimae<br><br>Dare mo nani mo ienu hodo<br><br>bokura o nomikonde-yuke                                                                                                                            | If the summer wind blows through the fresh leaves,<br><br>Just blow the words away as well<br><br>Until nobody can utter a single word,<br><br>Just go and swallow us whole                                                                                                                                                  |
-| どっどど　どどうど                                                                                                          | (Doddodo dodoudo) x3                                                                                                                                                                                                                          | Doddodo    Dodoudo                                                                                                                                                                                                                                                                                                           |
-| 風を呼ぶって本当なんだね<br><br>目を丸くした僕がそう聞いたから<br><br>ぶっきらぼうに貴方は言った<br><br>「何もかも思いのままだぜ」                                      | Kaze o yobu tte hontō nanda ne<br><br>Me o maruku-shita boku ga sō kiita kara<br><br>bukkirabō ni anata wa itta<br><br>"Nani-mo-kamo omoi-no-mama daze"                                                                                       | "So you do really summon the wind, huh?!"<br><br>I said, as I stared wide-eyed in amazement<br><br>And so, bluntly, you said<br><br>"Heh, I can freely bend it to my will"                                                                                                                                                   |
-| 風を待っていたんだ<br><br>型に合った社会は随分窮屈すぎるから<br><br>「それじゃもっと酷い雨を！<br><br>この気分も飛ばす風を」                                         | Kaze o matte-ita'n da<br><br>Kata ni atta shakai wa zuibun kyūkutsu sugiru kara<br><br>"Sore ja motto hidoi ame o !<br><br>Kono kibun mo tobasu kaze o"                                                                                       | I was waiting for the wind<br><br>Because a society that fits the mold is too suffocating<br><br>"Then I'll summon a rain even heavier!<br><br>Along with some wind that would also blow away this shared sentiment"                                                                                                         |
-| 吹けば青嵐<br><br>何もかも捨ててしまえ<br><br>今に僕らこのままじゃ<br><br>誰かも忘れてしまう                                                         | Fukeba ao-arashi<br><br>Nani-mo-kamo sutete shimae<br><br>Ima ni bokura kono mama ja<br><br>dareka mo wasurete shimau                                                                                                                         | If the summer wind blows through the fresh leaves,<br><br>Just cast everything away<br><br>If we stay this way,<br><br>Soon we will even forget who we are                                                                                                                                                                   |
-| 青い胡桃も吹き飛ばせ<br><br>酸っぱいかりんも吹き飛ばせ<br><br>もっと大きく　酷く大きく<br><br>この街を壊す風を                                                | Aoi kurumi mo fuki-tobase<br><br>Suppai karin mo fuki-tobase<br><br>Motto ōkiku hidoku ōkiku<br><br>Kono machi o kowasu kaze o                                                                                                                | Blow away the green walnuts as well<br><br>Blow away the sour quince as well<br><br>Make the wind that will destroy this town<br><br>Rage even fiercer, as fierce as it can be                                                                                                                                               |
-| 吹けよ青嵐<br><br>何もかも捨ててしまえ<br><br>悲しみも夢も全て飛ばしてゆけ、又三郎<br><br>行けば永い道<br><br>言葉が貴方の風だ<br><br>誰も何も言えぬほど<br><br>僕らを呑み込んでゆけ | Fuke yo ao-arashi<br><br>Nani-mo-kamo sutete shimae<br><br>Kanashimi mo yume mo subete tobashite-yuke, Matasaburō<br><br>Yukeba nagai michi<br><br>Kotoba ga anata no kaze da<br><br>Dare mo nani mo ienu hodo<br><br>bokura o nomikonde-yuke | Come forth, summer wind; blow through the fresh leaves<br><br>And cast everything away<br><br>Go and blow away the sadness, dreams, and everything else, Matasaburo<br><br>If we head towards the long road,<br><br>The words are your wind<br><br>Until nobody can utter a single word,<br><br>Just go and swallow us whole |
-| どっどど　どどうど                                                                                                          | (Doddodo dodoudo) x3                                                                                                                                                                                                                          | Doddodo    Dodoudo                                                                                                                                                                                                                                                                                                           |
+| Japanese                                                                                                           | Romanji                                                                                                                                                                                                                                       | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                           | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                                                                                               |
+| ------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 水溜りに足を突っ込んで<br><br>貴方は大きなあくびをする<br><br>酷い嵐を呼んで欲しいんだ<br><br>この空も吹き飛ばすほどの                                            | Mizutamari ni ashi o tsukkonde<br><br>anata wa ōkina akubi o suru<br><br>Hidoi arashi o yonde hoshii'n da<br><br>Kono sora mo fuki-tobasu hodo no                                                                                             | When you step into a pool of water,<br><br>You let out a big yawn<br><br>I want you to summon a storm so fierce<br><br>That will blow away even this sky                                                                                                                                                                     | Dẫm chân vào vũng nước<br><br>Cậu ngáp một hơi thật dài<br><br>Tôi muốn cậu gọi đến một cơn gió khốc liệt<br><br>Mạnh đến mức cuốn bay cả bầu trời này                                                                                                                                                          |
+| 風を待っていたんだ<br><br>何もない生活はきっと退屈過ぎるから<br><br>風を待っていたんだ<br><br>風を待っていたんだ                                               | Kaze o matte-ita'n da<br><br>Nani mo nai seikatsu wa kitto taikutsu sugiru kara<br><br>Kaze o matte-ita'n da<br><br>Kaze o matte-ita'n da                                                                                                     | I was waiting for the wind<br><br>Because I'm sure an empty life would be too boring<br><br>I was waiting for the wind<br><br>I was waiting for the wind                                                                                                                                                                     | Tôi vẫn chờ đợi một cơn gió<br><br>Vì cuộc sống không có gì cả thật quá sức nhàm chán<br><br>Tôi mãi chờ đợi một cơn gió<br><br>Tôi mãi chờ đợi một cơn gió                                                                                                                                                     |
+| 吹けば青嵐<br><br>言葉も飛ばしてしまえ<br><br>誰も何も言えぬほど<br><br>僕らを呑み込んでゆけ                                                         | Fukeba ao-arashi<br><br>Kotoba mo tobashite shimae<br><br>Dare mo nani mo ienu hodo<br><br>bokura o nomikonde-yuke                                                                                                                            | If the summer wind blows through the fresh leaves,<br><br>Just blow the words away as well<br><br>Until nobody can utter a single word,<br><br>Just go and swallow us whole                                                                                                                                                  | Nổi lên đi cơn cuồng phong xanh<br><br>Cuốn bay hết cả lời nói đi!<br><br>Hãy nuốt trọn chúng tôi đi này<br><br>Cho đến khi không ai nói thêm được gì nữa                                                                                                                                                       |
+| どっどど　どどうど                                                                                                          | (Doddodo dodoudo) x3                                                                                                                                                                                                                          | Doddodo    Dodoudo                                                                                                                                                                                                                                                                                                           |                                                                                                                                                                                                                                                                                                                 |
+| 風を呼ぶって本当なんだね<br><br>目を丸くした僕がそう聞いたから<br><br>ぶっきらぼうに貴方は言った<br><br>「何もかも思いのままだぜ」                                      | Kaze o yobu tte hontō nanda ne<br><br>Me o maruku-shita boku ga sō kiita kara<br><br>bukkirabō ni anata wa itta<br><br>"Nani-mo-kamo omoi-no-mama daze"                                                                                       | "So you do really summon the wind, huh?!"<br><br>I said, as I stared wide-eyed in amazement<br><br>And so, bluntly, you said<br><br>"Heh, I can freely bend it to my will"                                                                                                                                                   | "Thật sự là cậu gọi được gió hả?"<br><br>Tôi tròn mắt hỏi cậu câu đó<br><br>Và rồi cậu đáp thật cụt ngủn<br><br>"Mọi thứ đều nằm trong suy nghĩ hết thôi"                                                                                                                                                       |
+| 風を待っていたんだ<br><br>型に合った社会は随分窮屈すぎるから<br><br>「それじゃもっと酷い雨を！<br><br>この気分も飛ばす風を」                                         | Kaze o matte-ita'n da<br><br>Kata ni atta shakai wa zuibun kyūkutsu sugiru kara<br><br>"Sore ja motto hidoi ame o !<br><br>Kono kibun mo tobasu kaze o"                                                                                       | I was waiting for the wind<br><br>Because a society that fits the mold is too suffocating<br><br>"Then I'll summon a rain even heavier!<br><br>Along with some wind that would also blow away this shared sentiment"                                                                                                         | Tôi vẫn chờ đợi một cơn gió<br><br>Vì xã hội rập khuôn quả thật quá cùng cực<br><br>"Vậy thì hãy gọi đến một cơn mưa xối xả đi!<br><br>Một cơn gió thổi bay cả tâm trạng này!"                                                                                                                                  |
+| 吹けば青嵐<br><br>何もかも捨ててしまえ<br><br>今に僕らこのままじゃ<br><br>誰かも忘れてしまう                                                         | Fukeba ao-arashi<br><br>Nani-mo-kamo sutete shimae<br><br>Ima ni bokura kono mama ja<br><br>dareka mo wasurete shimau                                                                                                                         | If the summer wind blows through the fresh leaves,<br><br>Just cast everything away<br><br>If we stay this way,<br><br>Soon we will even forget who we are                                                                                                                                                                   | Nổi lên đi cơn cuồng phong xanh<br><br>Vứt hết mọi thứ đi thôi!<br><br>Chúng ta mà cứ thế này mãi<br><br>Chẳng mấy chốc ai rồi cũng quên đi thôi                                                                                                                                                                |
+| 青い胡桃も吹き飛ばせ<br><br>酸っぱいかりんも吹き飛ばせ<br><br>もっと大きく　酷く大きく<br><br>この街を壊す風を                                                | Aoi kurumi mo fuki-tobase<br><br>Suppai karin mo fuki-tobase<br><br>Motto ōkiku hidoku ōkiku<br><br>Kono machi o kowasu kaze o                                                                                                                | Blow away the green walnuts as well<br><br>Blow away the sour quince as well<br><br>Make the wind that will destroy this town<br><br>Rage even fiercer, as fierce as it can be                                                                                                                                               | Quả óc chó xanh cũng thổi bay đi!<br><br>Trái mộc qua chua cũng cho bay hết đi!<br><br>To hơn nữa đi! Mạnh hơn nữa đi!<br><br>Hỡi cơn gió phá tan thành phố này!                                                                                                                                                |
+| 吹けよ青嵐<br><br>何もかも捨ててしまえ<br><br>悲しみも夢も全て飛ばしてゆけ、又三郎<br><br>行けば永い道<br><br>言葉が貴方の風だ<br><br>誰も何も言えぬほど<br><br>僕らを呑み込んでゆけ | Fuke yo ao-arashi<br><br>Nani-mo-kamo sutete shimae<br><br>Kanashimi mo yume mo subete tobashite-yuke, Matasaburō<br><br>Yukeba nagai michi<br><br>Kotoba ga anata no kaze da<br><br>Dare mo nani mo ienu hodo<br><br>bokura o nomikonde-yuke | Come forth, summer wind; blow through the fresh leaves<br><br>And cast everything away<br><br>Go and blow away the sadness, dreams, and everything else, Matasaburo<br><br>If we head towards the long road,<br><br>The words are your wind<br><br>Until nobody can utter a single word,<br><br>Just go and swallow us whole | Nổi lên đi hỡi cơn cuồng phong xanh<br><br>Tất cả mọi thứ vứt hết đi thôi!<br><br>Cả nỗi buồn và giấc mơ, hãy cuốn tất cả đi Matasaburou!<br><br>Đi mãi trên con đường dài bất tận<br><br>Và ngôn từ chính là cơn gió của cậu<br><br>Hãy nuốt chửng chúng tôi đi<br><br>Đến khi không ai còn lên tiếng được nữa |
+| どっどど　どどうど                                                                                                          | (Doddodo dodoudo) x3                                                                                                                                                                                                                          | Doddodo    Dodoudo                                                                                                                                                                                                                                                                                                           |                                                                                                                                                                                                                                                                                                                 |
 ##### Notes
 >"Matasaburo of the Wind" is a short story written by the novelist Kenji Miyazawa.
+
+> “Cảm giác thần linh mà Kaze no Matasaburou mang lại, một kỳ vọng liệu đứa trẻ đó có phải đứa con của gió không. Tôi viết về Matasaburou thời hiện đại, như một vị thần thổi bay tất cả sự bí bách của xã hội.
+> 
+> Matasaburou của Miyazawa Kenji”
