--- a/(2023) Magic Lantern/13. Isana.md
+++ b/(2023) Magic Lantern/13. Isana.md
@@ -1,19 +1,21 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-いさな | Isana
+いさな | Isana | Cá voi
 #### Lyrics
 
-| Japanese                                                                                            | Romanji                                                                                                                                                                                         | TsukiNeko 2024 Live                                                                                                                                                                                                                              |
-| --------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| あなたの胸びれ<br><br>窓辺を泳いで<br><br>柔らかに<br><br>溶けた琥珀のよう                                                   | Anata no munabire<br><br>Madobe o oyoide<br><br>Yawaraka ni<br><br>Toketa kohaku no yō                                                                                                          | Your pectoral fins<br><br>swim by the window,<br><br>looking like melted<br><br>and softened amber.                                                                                                                                              |
-| あなたの鼻先<br><br>背びれと口髭<br><br>静かなまなこは<br><br>まるで夜の                                                    | Anata no hanasaki<br><br>Sebire to kuchihige<br><br>Shizukana manako wa<br><br>Marude yoru no                                                                                                   | The tip of your nose,<br><br>your dorsal fin and mustache,<br><br>and your quiet eyes look like<br><br>they belong to the night.                                                                                                                 |
-| 話して　鳴いて<br><br>僕ら波を掻いてた<br><br>陸に想い馳せるように                                                           | Hanashite naite<br><br>Bokura nami o kaiteta<br><br>Riku ni omoi haseru yōni                                                                                                                    | Talking, crying,<br><br>we were stroking the waves<br><br>as if feeling nostalgic for the land.                                                                                                                                                  |
-| 瞼を落として　蓋して<br><br>すぐは覚めないほど眠って<br><br>呼吸を吹かして<br><br>さぁ深く泳いで　泳いで<br><br>眠りの浅いその波間を<br><br>白く微睡みながら  | Mabuta o otoshite futa shite<br><br>Sugu wa samenai hodo nemutte<br><br>Kokyū o fukashite<br><br>Saa fukaku oyoide oyoide<br><br>Nemuri no asai sono namima o<br><br>Shiroku madoromi nagara    | Drop your eyelids and cover your eyes.<br><br>Sleep tight so that you won't awake right away<br><br>with your breath spouting out.<br><br>Now swim deep, swim on<br><br>in the waves of your shallow sleep<br><br>falling into a white slumber.  |
-| あなたのさえずり<br><br>ソファの木漏れ日<br><br>柔らかに揺れた<br><br>海辺のよう                                                | Anata no saezuri<br><br>Sofa no komorebi<br><br>Yawaraka ni yureta<br><br>Umibe no yō                                                                                                           | Your chirping<br><br>and dappled sunlight on the sofa<br><br>remind me of the seashore<br><br>that swayed softly.                                                                                                                                |
-| 笑って　泣いて<br><br>僕ら波を待ってる<br><br>じきに思い出せるように                                                          | Waratte naite<br><br>Bokura nami o matteru<br><br>Jiki ni omoidaseru yōni                                                                                                                       | Laughing, weeping,<br><br>we are waiting for the waves<br><br>so that we can recall before long.                                                                                                                                                 |
-| 波間を旅して　潜って<br><br>息も出来ないほど深くへ<br><br>呼吸を吹かして<br><br>さぁ深く泳いで　泳いで<br><br>あなたの長いその尾びれを<br><br>波に横たえながら | Namima o tabishite mogutte<br><br>Iki mo dekinai hodo fukaku e<br><br>Kokyū o fukashite<br><br>Saa fukaku oyoide oyoide<br><br>Anata no nagai sono obire o<br><br>Nami ni yokotae nagara        | Travel through the waves and dive deep,<br><br>deeper and deeper until you suffocate<br><br>with your breath spouting out.<br><br>Now swim deep, swim on<br><br>with your long tail fin<br><br>laid down on the waves.                           |
-| 話して　鳴いて<br><br>僕ら波を掻いてた<br><br>いつかまた会えるように                                                          | Hanashite naite<br><br>Bokura nami o kaiteta<br><br>Itsuka mata aeru yōni                                                                                                                       | Talking, crying,<br><br>we were stroking the waves<br><br>hoping to see each other again someday.                                                                                                                                                |
-| 瞼を落として　蓋して<br><br>夢も覚めないほど眠って<br><br>もう自分を許して<br><br>さぁ深く泳いで　泳いで<br><br>眠りの浅いその波間を<br><br>白く微睡みながら  | Mabuta o otoshite futa shite<br><br>Yume mo samenai hodo nemutte<br><br>Mō jibun o yurushite<br><br>Saa fukaku oyoide oyoide<br><br>Nemuri no asai sono namima o<br><br>Shiroku madoromi nagara | Drop your eyelids and cover your eyes.<br><br>Sleep tight so that you won't awake from a dream<br><br>and forgive yourself already.<br><br>Now swim deep, swim on<br><br>in the waves of your shallow sleep<br><br>falling into a white slumber. |
+| Japanese                                                                                            | Romanji                                                                                                                                                                                         | TsukiNeko 2024 Live                                                                                                                                                                                                                              | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                       |
+| --------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| あなたの胸びれ<br><br>窓辺を泳いで<br><br>柔らかに<br><br>溶けた琥珀のよう                                                   | Anata no munabire<br><br>Madobe o oyoide<br><br>Yawaraka ni<br><br>Toketa kohaku no yō                                                                                                          | Your pectoral fins<br><br>swim by the window,<br><br>looking like melted<br><br>and softened amber.                                                                                                                                              | Vây cá của em<br><br>Bơi quanh cửa sổ<br><br>Nhẹ nhàng tan ra<br><br>Tựa như hổ phách                                                                                                                                   |
+| あなたの鼻先<br><br>背びれと口髭<br><br>静かなまなこは<br><br>まるで夜の                                                    | Anata no hanasaki<br><br>Sebire to kuchihige<br><br>Shizukana manako wa<br><br>Marude yoru no                                                                                                   | The tip of your nose,<br><br>your dorsal fin and mustache,<br><br>and your quiet eyes look like<br><br>they belong to the night.                                                                                                                 | Sống mũi của em<br><br>Vây lưng, ria mép<br><br>Đôi mắt tĩnh sâu<br><br>Tựa như màn đêm                                                                                                                                 |
+| 話して　鳴いて<br><br>僕ら波を掻いてた<br><br>陸に想い馳せるように                                                           | Hanashite naite<br><br>Bokura nami o kaiteta<br><br>Riku ni omoi haseru yōni                                                                                                                    | Talking, crying,<br><br>we were stroking the waves<br><br>as if feeling nostalgic for the land.                                                                                                                                                  | Hãy nói đi, kêu lên đi<br><br>Chúng ta đã quẫy những đợt sóng<br><br>Như đang nhớ về đất liền                                                                                                                           |
+| 瞼を落として　蓋して<br><br>すぐは覚めないほど眠って<br><br>呼吸を吹かして<br><br>さぁ深く泳いで　泳いで<br><br>眠りの浅いその波間を<br><br>白く微睡みながら  | Mabuta o otoshite futa shite<br><br>Sugu wa samenai hodo nemutte<br><br>Kokyū o fukashite<br><br>Saa fukaku oyoide oyoide<br><br>Nemuri no asai sono namima o<br><br>Shiroku madoromi nagara    | Drop your eyelids and cover your eyes.<br><br>Sleep tight so that you won't awake right away<br><br>with your breath spouting out.<br><br>Now swim deep, swim on<br><br>in the waves of your shallow sleep<br><br>falling into a white slumber.  | Hãy nhắm mắt lại, che chúng đi<br><br>Chìm vào giấc ngủ để không tỉnh lại<br><br>Thở ra một hơi<br><br>Nào, hãy lặn thật sâu, lặn sâu<br><br>Khi ta vẫn còn say giấc nồng<br><br>Giữa những đợt sóng trắng nhấp nhô     |
+| あなたのさえずり<br><br>ソファの木漏れ日<br><br>柔らかに揺れた<br><br>海辺のよう                                                | Anata no saezuri<br><br>Sofa no komorebi<br><br>Yawaraka ni yureta<br><br>Umibe no yō                                                                                                           | Your chirping<br><br>and dappled sunlight on the sofa<br><br>remind me of the seashore<br><br>that swayed softly.                                                                                                                                | Chiếc lưỡi của em<br><br>Nắng trên sô pha<br><br>Nhẹ nhàng đung đưa<br><br>Tựa như bờ biển                                                                                                                              |
+| 笑って　泣いて<br><br>僕ら波を待ってる<br><br>じきに思い出せるように                                                          | Waratte naite<br><br>Bokura nami o matteru<br><br>Jiki ni omoidaseru yōni                                                                                                                       | Laughing, weeping,<br><br>we are waiting for the waves<br><br>so that we can recall before long.                                                                                                                                                 | Khóc cười lên, khóc đi<br><br>Chúng ta đang đợi những cơn sóng<br><br>Để có thể nhớ lại ngay lập tức                                                                                                                    |
+| 波間を旅して　潜って<br><br>息も出来ないほど深くへ<br><br>呼吸を吹かして<br><br>さぁ深く泳いで　泳いで<br><br>あなたの長いその尾びれを<br><br>波に横たえながら | Namima o tabishite mogutte<br><br>Iki mo dekinai hodo fukaku e<br><br>Kokyū o fukashite<br><br>Saa fukaku oyoide oyoide<br><br>Anata no nagai sono obire o<br><br>Nami ni yokotae nagara        | Travel through the waves and dive deep,<br><br>deeper and deeper until you suffocate<br><br>with your breath spouting out.<br><br>Now swim deep, swim on<br><br>with your long tail fin<br><br>laid down on the waves.                           | Hãy du ngoạn qua những con sóng, lặn ngụp<br><br>Lặn thật sâu đến mức không thở được<br><br>Thở ra một hơi nào<br><br>Cùng bơi thật sâu, thật sâu<br><br>Trong khi chiếc đuôi dài của em<br><br>Bình yên theo con sóng  |
+| 話して　鳴いて<br><br>僕ら波を掻いてた<br><br>いつかまた会えるように                                                          | Hanashite naite<br><br>Bokura nami o kaiteta<br><br>Itsuka mata aeru yōni                                                                                                                       | Talking, crying,<br><br>we were stroking the waves<br><br>hoping to see each other again someday.                                                                                                                                                | Hãy nói đi, kêu lên đi<br><br>Chúng ta đang quẫy sóng<br><br>Để một ngày nào đó lại gặp lại                                                                                                                             |
+| 瞼を落として　蓋して<br><br>夢も覚めないほど眠って<br><br>もう自分を許して<br><br>さぁ深く泳いで　泳いで<br><br>眠りの浅いその波間を<br><br>白く微睡みながら  | Mabuta o otoshite futa shite<br><br>Yume mo samenai hodo nemutte<br><br>Mō jibun o yurushite<br><br>Saa fukaku oyoide oyoide<br><br>Nemuri no asai sono namima o<br><br>Shiroku madoromi nagara | Drop your eyelids and cover your eyes.<br><br>Sleep tight so that you won't awake from a dream<br><br>and forgive yourself already.<br><br>Now swim deep, swim on<br><br>in the waves of your shallow sleep<br><br>falling into a white slumber. | Hãy nhắm mắt lại, che chúng đi<br><br>Ngủ sâu đến mức không tỉnh giấc<br><br>Hãy cho phép bản thân mình<br><br>Bơi thật sâu, thật sâu nào<br><br>Khi ta vẫn còn say giấc nồng<br><br>Giữa những đợt sóng trắng nhấp nhô |
 ##### Notes
->
+> “Cá voi trắng” của Herman Melville
+> 
+> Tôi ví cá voi trắng của Melville như một người con gái đẹp. Tôi vẽ từng đường nét của em như thể hiện sự bao la của đại dương.”
