--- a/(2023) Magic Lantern/14. Left-Right Confusion.md
+++ b/(2023) Magic Lantern/14. Left-Right Confusion.md
@@ -1,22 +1,44 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-左右盲 | Sayuumou
+左右盲 | Sayuumou | Nhầm lẫn trái phải
 #### Lyrics
 
-| Japanese                                                                                                                                              | Romanji                                                                                                                                                                                                                                                                                                                              | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                                                                                                                  |
-| ----------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 君の右手は頬を突いている<br><br>僕は左手に温いマグカップ<br><br>君の右眉は少し垂れている<br><br>朝がこんなにも降った                                                                                | Kimi no migite wa hoho wo tsuiteiru<br><br>Boku wa hidarite ni nurui magukappu<br><br>Kimi no migi mayu wa sukoshi tareteiru<br><br>Asa ga konnani mo futta                                                                                                                                                                          | You're poking my cheeks with your right hand<br><br>While I'm holding a warm mug with my left hand<br><br>Your right eyebrow looks a little droopy<br><br>It's hard to believe how many mornings have arrived                                                                                                                                                                                                       |
-| 一つでいい<br><br>散らぬ牡丹の一つでいい<br><br>君の胸を打て<br><br>心を亡れるほどの幸福を[[#^1]]<br>一つでいいんだ<br><br>右も左もわからぬほどに手探りの夜の中を<br><br>一人行くその静けさを<br><br>その一つを教えられたなら          | Hitotsu de ii<br><br>Chiranu botan no hitotsu de ii<br><br>Kimi no munewōte<br><br>Kokoro wasureru hodo no kōfuku wo<br><br>Hitotsu de ii n da<br><br>Migi mo hidari mo wakaranu hodo ni tesaguri no yoru no naka wo<br><br>Hitori iku sono shizukesa wo<br><br>Sono hitotsu wo oshierareta nara                                     | I'm content with just one thing<br><br>Just one peony whose flowers never fall<br><br>A happiness that touches you,<br><br>And makes you forget even your heart<br><br>Really, I'm fine with just one thing<br><br>A night so dark and deep you can't tell left from right<br><br>The stillness of going on a journey alone<br><br>If I could convey to you even one of these things…                               |
-| 君の左眉は少し垂れている<br><br>上手く思い出せない<br><br>僕にはわからないみたい<br><br>君の右手にはいつか買った小説<br><br>あれ、それって左手だっけ                                                            | Kimi no hidari mayu wa sukoshi tareteiru<br><br>Umaku omoidasenai<br><br>Boku ni wa wakaranai mitai<br><br>Kimi no migite ni wa itsuka katta shōsetsu<br><br>Are, sore tte hidarite da kke                                                                                                                                           | Your left eyebrow looks a little droopy<br><br>I just can't seem to remember<br><br>It feels like I just never knew<br><br>About the novel you bought one day that you had in your right hand<br><br>Wait, maybe it was in your left hand…?                                                                                                                                                                         |
-| 一つでいい<br><br>夜の日差しの一つでいい<br><br>君の胸を打つ、心を覗けるほどの感傷を<br><br>一つでいいんだ<br><br>夏に舞う雹のその中も手探りで行けることを<br><br>君の目は閉じぬことを                                       | Hitotsu de ii<br><br>Yoru no hizashi no hitotsu de ii<br><br>Kimi no mune wo utsu, kokoro wo nozokeru hodo no kanshō wo<br><br>Hitotsu de ii n da<br><br>Natsu ni mau hyō no sononaka mo tesaguri de ikeru koto wo<br><br>Kimi no me wa tojinu koto wo                                                                               | I'm content with just one thing<br><br>Just one ray of sunshine that shines through the night<br><br>A sentimentality that would touch you and open your heart and let me see through it<br><br>Really, I'm fine with just one thing<br><br>Like the fact that you can move forward even during a fluttering summer hailstorm if you just feel your way through<br><br>Or that your eyes won't close                |
-| 僕の身体から心を少しずつ剥がして<br><br>君に渡して　その全部をあげるから<br><br>剣の柄からルビーを　この瞳からサファイアを<br><br>鉛の心臓はただ傍に置いて                                                             | Boku no karada kara kokoro wo sukoshi zutsu hagashite<br><br>Kimi ni watashite sono zenbu wo ageru kara<br><br>Tsurugi no tsuka kara rubi wo kono hitomi kara safaia wo<br><br>Namari no shinzō wa tada soba ni oite                                                                                                                 | I would tear off my heart from my body, little by little,<br><br>And hand it to you. I will give my everything to you, so…<br><br>I will give you the ruby from the hilt of my sword, and the sapphires from my eyes<br><br>And I will put my heart of lead beside you                                                                                                                                              |
-| 一つでいい<br><br>散らぬ牡丹の一つでいい<br><br>君の胸を打て<br><br>涙も忘れるほどの幸福を<br><br>少しでいいんだ<br><br>今日の小雨が止むための太陽を                                                        | Hitotsu de ii<br><br>Chiranu botan no hitotsu de ii<br><br>Kimi no mune wo ute<br><br>Namida mo wasureru hodo no kōfuku wo<br><br>Sukoshi de ii n da<br><br>Kyō no kosame ga yamu tame no taiyō wo                                                                                                                                   | I'm content with just one thing<br><br>Just one peony whose flowers never falls<br><br>A happiness that touches you,<br><br>And makes you forget even your tears<br><br>I'm fine with just a little bit <br><br>A bit of the sun to stop today’s light rain                                                                                                                                                         |
-| 少しでいい<br><br>君の世界に少しでいい僕の靴跡を<br><br>わかるだろうか、君の幸福は<br><br>一つじゃないんだ<br><br>右も左もわからぬほどに手探りの夜の中を<br><br>君が行く長いこれからを<br><br>僕だけは笑わぬことを<br><br>その一つを教えられたなら | Sukoshi de ii<br><br>Kimi no sekai ni sukoshi de ii boku no kutsu ato wo<br><br>Wakaru darou ka, kimi no kōfuku wa<br><br>Hitotsu janai n da<br><br>Migi mo hidari mo wakaranu hodo ni tesaguri no yoru no naka wo<br><br>Kimi ga iku nagai korekara wo<br><br>Boku dake wa warawanu koto wo<br><br>Sono hitotsu wo oshierareta nara | Just a little bit,<br><br>Let me leave just a little bit of my footprints in your world<br><br>Do you understand? That your happiness<br><br>Isn't confined to just one thing<br><br>A night so dark and deep you can't tell left from right<br><br>The long journey you will embark on from now on<br><br>The fact that I'm the only one that doesn’t smile<br><br>If I could convey to you even just one of them… |
-| 何を食べても味がしないんだ<br><br>身体が消えてしまったようだ<br><br>貴方の心と　私の心が<br><br>ずっと一つだと思ってたんだ                                                                             | Nani wo tabete mo aji ga shinai n da<br><br>Karada ga kieteshimatta yō da<br><br>Anata no kokoro to watashi no kokoro ga<br><br>Zutto hitotsu da to omotteta n da                                                                                                                                                                    | I can't taste anything no matter what I eat<br><br>It feels like I've lost my body<br><br>I believed<br><br>That your heart and mine would always be one                                                                                                                                                                                                                                                            |
+| Japanese                                                                                                                                              | Romanji                                                                                                                                                                                                                                                                                                                              | [Glens / Night Deer Translations](https://twitter.com/NightDeerTL)                                                                                                                                                                                                                                                                                                                                                  | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                                                                                                                                                                                                             |
+| ----------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 君の右手は頬を突いている<br><br>僕は左手に温いマグカップ<br><br>君の右眉は少し垂れている<br><br>朝がこんなにも降った                                                                                | Kimi no migite wa hoho wo tsuiteiru<br><br>Boku wa hidarite ni nurui magukappu<br><br>Kimi no migi mayu wa sukoshi tareteiru<br><br>Asa ga konnani mo futta                                                                                                                                                                          | You're poking my cheeks with your right hand<br><br>While I'm holding a warm mug with my left hand<br><br>Your right eyebrow looks a little droopy<br><br>It's hard to believe how many mornings have arrived                                                                                                                                                                                                       | Tay phải của em đang chống cằm<br><br>Còn tay trái của anh đang cầm chiếc cốc đã nguội<br><br>Lông mày bên phải cảu em đang khẽ chếch xuống<br><br>Buổi sáng mà trời mưa to quá                                                                                                                                                                                                                                               |
+| 一つでいい<br><br>散らぬ牡丹の一つでいい<br><br>君の胸を打て<br><br>心を亡れるほどの幸福を[[#^1]]<br>一つでいいんだ<br><br>右も左もわからぬほどに手探りの夜の中を<br><br>一人行くその静けさを<br><br>その一つを教えられたなら          | Hitotsu de ii<br><br>Chiranu botan no hitotsu de ii<br><br>Kimi no munewōte<br><br>Kokoro wasureru hodo no kōfuku wo<br><br>Hitotsu de ii n da<br><br>Migi mo hidari mo wakaranu hodo ni tesaguri no yoru no naka wo<br><br>Hitori iku sono shizukesa wo<br><br>Sono hitotsu wo oshierareta nara                                     | I'm content with just one thing<br><br>Just one peony whose flowers never fall<br><br>A happiness that touches you,<br><br>And makes you forget even your heart<br><br>Really, I'm fine with just one thing<br><br>A night so dark and deep you can't tell left from right<br><br>The stillness of going on a journey alone<br><br>If I could convey to you even one of these things…                               | Chỉ một thôi cũng được<br><br>Chỉ một bông hoa mẫu đơn không rơi thôi cũng được<br><br>Xin hãy chạm vào lồng ngực em<br><br>Một niềm hạnh phúc khiến anh quên đi cả trái tim của mình<br><br>Chỉ một thôi cũng được mà<br><br>Màn đêm anh phải mò mẫm không biết đâu là trái phải<br><br>Sự yên tĩnh khi phải tự mình đi một mình<br><br>Giá mà có thể nói cho em biết dù chỉ một điều mà thôi                                |
+| 君の左眉は少し垂れている<br><br>上手く思い出せない<br><br>僕にはわからないみたい<br><br>君の右手にはいつか買った小説<br><br>あれ、それって左手だっけ                                                            | Kimi no hidari mayu wa sukoshi tareteiru<br><br>Umaku omoidasenai<br><br>Boku ni wa wakaranai mitai<br><br>Kimi no migite ni wa itsuka katta shōsetsu<br><br>Are, sore tte hidarite da kke                                                                                                                                           | Your left eyebrow looks a little droopy<br><br>I just can't seem to remember<br><br>It feels like I just never knew<br><br>About the novel you bought one day that you had in your right hand<br><br>Wait, maybe it was in your left hand…?                                                                                                                                                                         | Lông mày bên trái của em hơi chùng xuống<br><br>Anh không nhớ rõ lắm đâu<br><br>Hình như anh chẳng biết gì cả<br><br>Tay phải em đang cầm cuốn tiểu thuyết mua từ đâu<br><br>Ủa khoan đã, hình như đó là tay trái mà nhỉ?                                                                                                                                                                                                     |
+| 一つでいい<br><br>夜の日差しの一つでいい<br><br>君の胸を打つ、心を覗けるほどの感傷を<br><br>一つでいいんだ<br><br>夏に舞う雹のその中も手探りで行けることを<br><br>君の目は閉じぬことを                                       | Hitotsu de ii<br><br>Yoru no hizashi no hitotsu de ii<br><br>Kimi no mune wo utsu, kokoro wo nozokeru hodo no kanshō wo<br><br>Hitotsu de ii n da<br><br>Natsu ni mau hyō no sononaka mo tesaguri de ikeru koto wo<br><br>Kimi no me wa tojinu koto wo                                                                               | I'm content with just one thing<br><br>Just one ray of sunshine that shines through the night<br><br>A sentimentality that would touch you and open your heart and let me see through it<br><br>Really, I'm fine with just one thing<br><br>Like the fact that you can move forward even during a fluttering summer hailstorm if you just feel your way through<br><br>Or that your eyes won't close                | Chỉ một thôi cũng được<br><br>Anh chỉ cần một tia nắng trong màn đêm<br><br>Một niềm cảm thương chạm vào lồng ngực, nhìn thấu trái tim em<br><br>Chỉ một thôi cũng được mà<br><br>Anh chỉ cần có thể tự dò dẫm đi trong màn đêm hè mưa đá<br><br>Hoặc đôi mắt em sẽ không nhắm lại                                                                                                                                            |
+| 僕の身体から心を少しずつ剥がして<br><br>君に渡して　その全部をあげるから<br><br>剣の柄からルビーを　この瞳からサファイアを<br><br>鉛の心臓はただ傍に置いて                                                             | Boku no karada kara kokoro wo sukoshi zutsu hagashite<br><br>Kimi ni watashite sono zenbu wo ageru kara<br><br>Tsurugi no tsuka kara rubi wo kono hitomi kara safaia wo<br><br>Namari no shinzō wa tada soba ni oite                                                                                                                 | I would tear off my heart from my body, little by little,<br><br>And hand it to you. I will give my everything to you, so…<br><br>I will give you the ruby from the hilt of my sword, and the sapphires from my eyes<br><br>And I will put my heart of lead beside you                                                                                                                                              | Anh sẽ từng chút một bóc trái tim ra khỏi cơ thể mình<br><br>Rồi trao đến tay em, anh sẽ đưa mọi thứ anh có cho em<br><br>Anh sẽ đưa cho em viên rubi trên tay cầm thanh kiếm, viên sapphire gắp trong con ngươi của anh<br><br>Còn trái tim bằng trì, anh sẽ để lại nó bên cạnh em                                                                                                                                           |
+| 一つでいい<br><br>散らぬ牡丹の一つでいい<br><br>君の胸を打て<br><br>涙も忘れるほどの幸福を<br><br>少しでいいんだ<br><br>今日の小雨が止むための太陽を                                                        | Hitotsu de ii<br><br>Chiranu botan no hitotsu de ii<br><br>Kimi no mune wo ute<br><br>Namida mo wasureru hodo no kōfuku wo<br><br>Sukoshi de ii n da<br><br>Kyō no kosame ga yamu tame no taiyō wo                                                                                                                                   | I'm content with just one thing<br><br>Just one peony whose flowers never falls<br><br>A happiness that touches you,<br><br>And makes you forget even your tears<br><br>I'm fine with just a little bit <br><br>A bit of the sun to stop today’s light rain                                                                                                                                                         | Chỉ một thôi cũng được<br><br>Chỉ một bông hoa mẫu đơn không rơi thôi cũng được<br><br>Xin hãy chạm vào lồng ngực em<br><br>Một niềm hạnh phúc khiến anh quên đi cả nước mắt của mình<br><br>Chỉ một thôi cũng được mà<br><br>Chỉ một vầng thái dương đủ để xoa dịu cơn mưa phùn ngày hôm nay                                                                                                                                 |
+| 少しでいい<br><br>君の世界に少しでいい僕の靴跡を<br><br>わかるだろうか、君の幸福は<br><br>一つじゃないんだ<br><br>右も左もわからぬほどに手探りの夜の中を<br><br>君が行く長いこれからを<br><br>僕だけは笑わぬことを<br><br>その一つを教えられたなら | Sukoshi de ii<br><br>Kimi no sekai ni sukoshi de ii boku no kutsu ato wo<br><br>Wakaru darou ka, kimi no kōfuku wa<br><br>Hitotsu janai n da<br><br>Migi mo hidari mo wakaranu hodo ni tesaguri no yoru no naka wo<br><br>Kimi ga iku nagai korekara wo<br><br>Boku dake wa warawanu koto wo<br><br>Sono hitotsu wo oshierareta nara | Just a little bit,<br><br>Let me leave just a little bit of my footprints in your world<br><br>Do you understand? That your happiness<br><br>Isn't confined to just one thing<br><br>A night so dark and deep you can't tell left from right<br><br>The long journey you will embark on from now on<br><br>The fact that I'm the only one that doesn’t smile<br><br>If I could convey to you even just one of them… | Chỉ một chút thôi cũng được<br><br>Giá như anh có thể lưu lại dấu chân trong thế giới của em dù chỉ một chút<br><br>Em có hiểu không? Niềm hạnh phúc của em<br>Không phải chỉ có một đâu<br><br>Một đêm dài mò mẫm đến mức không phân định được trái phải<br><br>Tương lai dài sau này em sẽ cất bước<br><br>Chỉ có một mình anh là không còn cười được nữa<br><br>Giá như có thể nói cho em biết dù chỉ một điều trong số đó |
+| 何を食べても味がしないんだ<br><br>身体が消えてしまったようだ<br><br>貴方の心と　私の心が<br><br>ずっと一つだと思ってたんだ                                                                             | Nani wo tabete mo aji ga shinai n da<br><br>Karada ga kieteshimatta yō da<br><br>Anata no kokoro to watashi no kokoro ga<br><br>Zutto hitotsu da to omotteta n da                                                                                                                                                                    | I can't taste anything no matter what I eat<br><br>It feels like I've lost my body<br><br>I believed<br><br>That your heart and mine would always be one                                                                                                                                                                                                                                                            | Bất cứ thứ gì anh ăn cũng thật nhạt nhẽo<br><br>Cứ như thể cơ thể anh đã biến mất vậy<br><br>Anh cứ nghĩ trái tim em và trái tim anh<br><br>Sẽ luôn hòa lại thành một                                                                                                                                                                                                                                                         |
 ##### Notes
 >心を亡れるほどの幸福を is sung as 心を忘れるほどの幸福を, this might be a little “tidbit” by n-buna to say that “the heart was forgotten” hence losing the heart radical for the kanji of “wasureru”. ^1
 
 >It is inspired by “The Happy Prince” by Oscar Wilde. It’s a song that was used in the movie 『今夜、世界からこの恋が消えても』| “Even If This Love Disappears From The World Tonight”.
 
 >[A limited time PV](https://youtu.be/g8WixpPnJls)(Promotional Video) for the movie was released on Youtube. It was up starting from July 15, 2022 21:00 JST and was only available for 24 hours. It was relisted on July 20, 2022 with a different title, from the original “A PV that disappears in one day” to “A PV that I don’t want to forget” and is now available indefinitely.
+
+> “Hoàng tử hạnh phúc” của Oscar Wilde
+> 
+> Từ bé tôi đã có cảm giác khó ở. Sau này lớn lên tôi mới biết người ta gọi nó là “Nhầm lẫn trái phải”.
+> 
+> Tôi không thể phân biệt được trái phải ngay lập tức. Tôi cần thời gian để phân biệt chúng. Có những lúc trong đầu tôi như có màn sương trắng xóa, không hiểu gì cả.
+> 
+> Và tôi có tật lấp liếm điều đó, đoán trái phải như kiểu mình biết rõ để tiếp tục câu chuyện.
+> 
+> Cái trái phải mà tôi không hiểu rõ, nhưng bằng cách nào đó tôi vẫn đoán được.
+> 
+> Và khi trước mắt không còn ai nữa thì tôi mới xem xét đó là vấn đề.
+> 
+> Lông mày bên phải chùng xuống đó có khi lại là bên trái cũng nên.
+> 
+> Bàn tay phải chống cằm có khi là tay trái mới đúng.
+> 
+> Tôi tưởng tượng ra trái phải khi đối phương không còn đó nữa. Tôi đã định viết một bài hát mang đậm tính cá nhân như thế.
+> 
+> Về bức tranh. Một chiếc đĩa và con chim én xanh mang theo viên ngọc. Phía trước hai người có chiếc cốc.
+> 
+> Tham khảo căn phòng mà họa sĩ người Đan Mạch Vilhelm Hammershøi đã vẽ.”
