--- a/(2023) Magic Lantern/15. Algernon.md
+++ b/(2023) Magic Lantern/15. Algernon.md
@@ -4,16 +4,28 @@ await dv.view('_script');
 アルジャーノン | Algernon
 #### Lyrics
 
-| Japanese                                                                                                                                 | Romanji                                                                                                                                                                                                                                                       | [Relapse](https://twitter.com/AmRelapse)                                                                                                                                                                                                                                                                                         |
-| ---------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 貴方はどうして僕に心をくれたんでしょう<br><br>貴方はどうして僕に目を描いたんだ<br><br>空より大きく　雲を流す風を呑み込んで<br><br>僕のまなこはまた夢を見ていた                                              | Anata wa dōshite boku ni kokoro o kureta n deshō<br><br>Anata wa dōshite boku ni me o kaita n da<br><br>Sora yori ōkiku kumo o nagasu kaze o nomikonde<br><br>Boku no manako wa mata yume o miteta                                                            | Why did you give me my heart?<br><br>Why did you paint my eyes?<br><br>Greater than the sky, swallowing the winds that sweeps away the clouds<br><br>My eyes are seeing a dream once again                                                                                                                                       |
-| 裸足のままで                                                                                                                                   | Hadashi no mama de                                                                                                                                                                                                                                            | Still on barefoot…                                                                                                                                                                                                                                                                                                               |
-| 貴方はゆっくりと変わっていく　とても小さく<br><br>少しずつ膨らむパンを眺めるように<br><br>貴方はゆっくりと走っていく<br><br>長い迷路の先も恐れないままで                                                 | Anata wa yukkuri to kawatteiku totemo chiisaku<br><br>Sukoshi zutsu fukuramu pan o nagameru yōni<br><br>Anata wa yukkuri to hashitteiku<br><br>Nagai meiro no saki mo osorenai mama de                                                                        | You're slowly changing, ever so slightly<br><br>As if watching a loaf of bread gradually puff up<br><br>You're slowly running<br><br>Staying unafraid of the long maze ahead                                                                                                                                                     |
-| 貴方はどうして僕に名前をくれたんでしょう<br><br>貴方はどうして僕に手を作ったんだ<br><br>海より大きく　砂を流す波も呑み込んで<br><br>小さな両手はまだ遠くを見てた                                             | Anata wa dōshite boku ni namae o kureta n deshō<br><br>Anata wa dōshite boku ni te o tsukutta n da<br><br>Umi yori ōkiku suna o nagasu nami mo nomikonde<br><br>Chiisana ryōte wa mada tōku o miteta                                                          | Why did you give me my name?<br><br>Why did you make me my hands?<br><br>Bigger than the sea, swallowing the waves that even washes away the sand<br><br>These little hands were still staring far off into the distance                                                                                                         |
-| あくびを一つ                                                                                                                                   | Akubi o hitotsu                                                                                                                                                                                                                                               | A single yawn…                                                                                                                                                                                                                                                                                                                   |
-| 僕らはゆっくりと眠っていく<br><br>とても長く　頭の真ん中に育っていく大きな木の<br><br>根本をゆっくりと歩いていく<br><br>長い迷路の先を恐れないように                                                   | Bokura wa yukkuri to nemutteiku<br><br>Totemo nagaku atama no mannaka ni sodatteiku ōkina ki no<br><br>Nemoto o yukkuri to aruiteiku<br><br>Nagai meiro no saki o osorenai yōni                                                                               | We're slowly falling asleep<br><br>For a very long time, in the center of our minds, a large tree grows<br><br>We're slowly walking through the roots<br><br>So that we won't be afraid of the long maze ahead                                                                                                                   |
-| いつかとても追いつけない人に出会うのだろうか<br><br>いつかとても越えられない壁に竦むのだろうか<br><br>いつか貴方もそれを諦めてしまうのだろうか<br><br>ゆっくりと変わっていく<br><br>ゆっくりと変わっていく<br><br>ゆっくりと変わっていく | Itsuka totemo oitsukenai hito ni deau no darou ka<br><br>Itsuka totemo koerarenai kabe ni sukumu no darou ka<br><br>Itsuka anata mo sore o akirameteshimau no darou ka<br><br>Yukkuri to kawatteiku<br><br>Yukkuri to kawatteiku<br><br>Yukkuri to kawatteiku | I wonder if one day I'll ever meet the person that I've always struggled to catch up with<br><br>I wonder if one day I'll freeze up behind a wall that I couldn't get past<br><br>I wonder if one day you'll end up giving up as well<br><br>You're slowly changing<br><br>You're slowly changing<br><br>You're slowly changing… |
-| 僕らはゆっくりと忘れていく　とても小さく<br><br>少しずつ崩れる塔を眺めるように<br><br>僕らはゆっくりと眠っていく<br><br>ゆっくりと眠っていく                                                       | Bokura wa yukkuri to wasureteiku totemo chiisaku<br><br>Sukoshi zutsu kuzureru tō o nagameru yōni<br><br>Bokura wa yukkuri to nemutteiku<br><br>Yukkuri to nemutteiku                                                                                         | We're slowly forgetting, ever so slightly<br><br>As if staring at a tower slowly crumbling<br><br>We're slowly falling asleep<br><br>Slowly falling asleep…                                                                                                                                                                      |
-| 貴方はゆっくりと変わっていく　とても小さく<br><br>あの木の真ん中に育っていく木陰のように<br><br>貴方はゆっくりと走っていく<br><br>長い迷路の先も恐れないままで<br><br>確かに迷いながら                              | Anata wa yukkuri to kawatteiku totemo chiisaku<br><br>Ano ki no mannaka ni sodatteiku kokage no yōni<br><br>Anata wa yukkuri to hashitteiku<br><br>Nagai meiro no saki mo osorenai mama de<br><br>Tashika ni mayoi nagara                                     | You're slowly changing, ever so slightly<br><br>As if you're a shade growing in the middle of that tree<br><br>You're slowly running<br><br>Staying unafraid of the long maze ahead<br><br>While certainly being lost in it.                                                                                                     |
+| Japanese                                                                                                                                 | Romanji                                                                                                                                                                                                                                                       | [Relapse](https://twitter.com/AmRelapse)                                                                                                                                                                                                                                                                                         | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                                                                                                      |
+| ---------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 貴方はどうして僕に心をくれたんでしょう<br><br>貴方はどうして僕に目を描いたんだ<br><br>空より大きく　雲を流す風を呑み込んで<br><br>僕のまなこはまた夢を見ていた                                              | Anata wa dōshite boku ni kokoro o kureta n deshō<br><br>Anata wa dōshite boku ni me o kaita n da<br><br>Sora yori ōkiku kumo o nagasu kaze o nomikonde<br><br>Boku no manako wa mata yume o miteta                                                            | Why did you give me my heart?<br><br>Why did you paint my eyes?<br><br>Greater than the sky, swallowing the winds that sweeps away the clouds<br><br>My eyes are seeing a dream once again                                                                                                                                       | Tại sao em lại trao cho anh trái tim?<br><br>Tại sao em lại vẽ mắt cho anh?<br><br>Nuốt vào làn gió thổi bay đám mây to hơn cả bầu trời<br><br>Đôi mắt của anh lại mơ rồi                                                                                                                                              |
+| 裸足のままで                                                                                                                                   | Hadashi no mama de                                                                                                                                                                                                                                            | Still on barefoot…                                                                                                                                                                                                                                                                                                               | Với đôi chân trần                                                                                                                                                                                                                                                                                                      |
+| 貴方はゆっくりと変わっていく　とても小さく<br><br>少しずつ膨らむパンを眺めるように<br><br>貴方はゆっくりと走っていく<br><br>長い迷路の先も恐れないままで                                                 | Anata wa yukkuri to kawatteiku totemo chiisaku<br><br>Sukoshi zutsu fukuramu pan o nagameru yōni<br><br>Anata wa yukkuri to hashitteiku<br><br>Nagai meiro no saki mo osorenai mama de                                                                        | You're slowly changing, ever so slightly<br><br>As if watching a loaf of bread gradually puff up<br><br>You're slowly running<br><br>Staying unafraid of the long maze ahead                                                                                                                                                     | Em đang dần thay đổi mất rồi<br><br>Như ngắm một chiếc bánh đang nở ra từng chút một<br><br>Em đang chạy đi thật chầm chậm<br><br>Không còn sợ hãi mê cung trước mắt nữa                                                                                                                                               |
+| 貴方はどうして僕に名前をくれたんでしょう<br><br>貴方はどうして僕に手を作ったんだ<br><br>海より大きく　砂を流す波も呑み込んで<br><br>小さな両手はまだ遠くを見てた                                             | Anata wa dōshite boku ni namae o kureta n deshō<br><br>Anata wa dōshite boku ni te o tsukutta n da<br><br>Umi yori ōkiku suna o nagasu nami mo nomikonde<br><br>Chiisana ryōte wa mada tōku o miteta                                                          | Why did you give me my name?<br><br>Why did you make me my hands?<br><br>Bigger than the sea, swallowing the waves that even washes away the sand<br><br>These little hands were still staring far off into the distance                                                                                                         | Tại sao em lại đặt tên cho anh?<br><br>Tại sao em lại cho anh cánh tay?<br><br>Nuốt vào con sóng cuốn trôi bờ cát lớn hơn cả biển cả<br><br>Đôi tay nhỏ bé của anh vẫn đang nhìn về xa xăm                                                                                                                             |
+| あくびを一つ                                                                                                                                   | Akubi o hitotsu                                                                                                                                                                                                                                               | A single yawn…                                                                                                                                                                                                                                                                                                                   | Với một tiếng ngáp dài                                                                                                                                                                                                                                                                                                 |
+| 僕らはゆっくりと眠っていく<br><br>とても長く　頭の真ん中に育っていく大きな木の<br><br>根本をゆっくりと歩いていく<br><br>長い迷路の先を恐れないように                                                   | Bokura wa yukkuri to nemutteiku<br><br>Totemo nagaku atama no mannaka ni sodatteiku ōkina ki no<br><br>Nemoto o yukkuri to aruiteiku<br><br>Nagai meiro no saki o osorenai yōni                                                                               | We're slowly falling asleep<br><br>For a very long time, in the center of our minds, a large tree grows<br><br>We're slowly walking through the roots<br><br>So that we won't be afraid of the long maze ahead                                                                                                                   | Chúng ta đang dần chìm vào giấc ngủ<br><br>Một giấc ngủ dài, như đang đi bên gốc cây to<br><br>Đang được nuôi dưỡng trong đầu chúng ta<br><br>Để không còn sợ hãi mê cung trước mắt                                                                                                                                    |
+| いつかとても追いつけない人に出会うのだろうか<br><br>いつかとても越えられない壁に竦むのだろうか<br><br>いつか貴方もそれを諦めてしまうのだろうか<br><br>ゆっくりと変わっていく<br><br>ゆっくりと変わっていく<br><br>ゆっくりと変わっていく | Itsuka totemo oitsukenai hito ni deau no darou ka<br><br>Itsuka totemo koerarenai kabe ni sukumu no darou ka<br><br>Itsuka anata mo sore o akirameteshimau no darou ka<br><br>Yukkuri to kawatteiku<br><br>Yukkuri to kawatteiku<br><br>Yukkuri to kawatteiku | I wonder if one day I'll ever meet the person that I've always struggled to catch up with<br><br>I wonder if one day I'll freeze up behind a wall that I couldn't get past<br><br>I wonder if one day you'll end up giving up as well<br><br>You're slowly changing<br><br>You're slowly changing<br><br>You're slowly changing… | Một ngày nào đó em sẽ gặp một người mà em không thể đuổi kịp chăng?<br><br>Một ngày nào đó em sẽ đối diện một bức tường mà em không thể vượt qua chăng?<br><br>Một ngày nào đó em sẽ từ bỏ tất cả những điều đó chăng?<br><br>Em đang dần thay đổi rồi<br><br>Em đang dần thay đổi rồi<br><br>Em đang dần thay đổi rồi |
+| 僕らはゆっくりと忘れていく　とても小さく<br><br>少しずつ崩れる塔を眺めるように<br><br>僕らはゆっくりと眠っていく<br><br>ゆっくりと眠っていく                                                       | Bokura wa yukkuri to wasureteiku totemo chiisaku<br><br>Sukoshi zutsu kuzureru tō o nagameru yōni<br><br>Bokura wa yukkuri to nemutteiku<br><br>Yukkuri to nemutteiku                                                                                         | We're slowly forgetting, ever so slightly<br><br>As if staring at a tower slowly crumbling<br><br>We're slowly falling asleep<br><br>Slowly falling asleep…                                                                                                                                                                      | Chúng ta đang dần quên đi<br><br>Như ngắm một tòa tháp đang dần đổ vỡ từng chút một trước mắt<br><br>Chúng ta đang dần chìm vào giấc ngủ<br><br>Dần chìm vào giấc ngủ                                                                                                                                                  |
+| 貴方はゆっくりと変わっていく　とても小さく<br><br>あの木の真ん中に育っていく木陰のように<br><br>貴方はゆっくりと走っていく<br><br>長い迷路の先も恐れないままで<br><br>確かに迷いながら                              | Anata wa yukkuri to kawatteiku totemo chiisaku<br><br>Ano ki no mannaka ni sodatteiku kokage no yōni<br><br>Anata wa yukkuri to hashitteiku<br><br>Nagai meiro no saki mo osorenai mama de<br><br>Tashika ni mayoi nagara                                     | You're slowly changing, ever so slightly<br><br>As if you're a shade growing in the middle of that tree<br><br>You're slowly running<br><br>Staying unafraid of the long maze ahead<br><br>While certainly being lost in it.                                                                                                     | Em đang dần thay đổi mất rồi<br><br>Giống như bóng râm được nuôi dưỡng giữa tán cây kia<br><br>Em đang dần chạy xa khỏi anh<br><br>Không còn sợ hãi mê cung trước mắt...<br><br>Cho dù vẫn còn đang lạc lối                                                                                                            |
 ##### Notes
 >This song is related to the character “Algernon”, a white lab mouse that was experimented on to increase its intelligence. The boy in the artwork is attributed to Algernon as “someone trying to find their way out of a dark maze”. Algernon is from the short story/novel “Flowers for Algernon” by Daniel Keyes.
+
+> “Algernon là một chú chuột xuất hiện trong tiểu thuyết, bị bắt làm một thí nghiệm phải tranh đua thoát khỏi mê cung.
+> 
+> Nhân vật chính Charlie nhìn điều đó từ trên cao, có cảm giác thân thuộc kì lạ.
+> 
+> Tôi đã ví Algernon với bản thân lúc còn nhỏ, bản thân tôi lúc mới bắt đầu sáng tác đã luôn tin rằng phía bên kia bức tường có cửa ra và không hề dừng lại, rồi viết một bài hát.
+> 
+> Về bức tranh. Tôi vẽ nó khi tham khảo ảnh chụp chân dung đen trắng của 100 năm về trước.
+> 
+> Một sự ngưỡng mộ và lời chúc phúc đến thời đại mà con người đã sống cuộc đời của chính họ.
+> 
+> “Hoa trên mộ Algernon” của Daniel Keyes.”
