--- a/(2023) Magic Lantern/16. First Night.md
+++ b/(2023) Magic Lantern/16. First Night.md
@@ -1,19 +1,23 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-第一夜 | Daiichiya
+第一夜 | Daiichiya | Đêm thứ nhất
 #### Lyrics
 
-| Japanese                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                           | [SakuraWindsS](https://docs.google.com/document/d/1NArzwf94kimzr371iZBPELcmeJYdaRRXOLm2Sw83VWQ)                                                                                                                                                                                                                                                           |
-| ------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 貴方だけを憶えている<br><br>雲の影が流れて往く<br><br>言葉だけが溢れている<br><br>想い出は夏風、揺られながら                                                                          | Anata dake o oboeteiru<br><br>Kumo no kage ga nagarete yuku<br><br>Kotoba dake ga afureteiru<br><br>Omoide wa natsu kaze, yurare nagara                                                                                                                                           | I only remember you<br><br>The shadows of the clouds swept across the ground<br><br>Overflowing with only your words<br><br>While my memories, like the summer breeze, gently swayed                                                                                                                                                                      |
-| 朝目が覚めて歯を磨く<br><br>散歩の前に朝ご飯<br><br>窓の向こうにふくれ雲<br><br>それを手帳に書き留めて<br><br>歌う木立を眺めます<br><br>通りすがりの風が運んだ<br><br>花の香りに少しだけ春かと思いました                | Asa me ga samete ha o migaku<br><br>Sanpo no mae ni asa gohan<br><br>Mado no mukō ni fukure kumo<br><br>Sore o techō ni kakitomete<br><br>Utau kodachi o nagamemasu<br><br>Tōrisugari no kaze ga hakonda<br><br>Hana no kaori ni sukoshi dake haru ka to omoimashita              | Waking in the morning, I brush my teeth<br><br>Eating breakfast before I walk<br><br>Looking at the puffy clouds beyond my window<br><br>I write it all down in my notebook<br><br>Gazing at the singing grove<br><br>The scent of flowers carried by the passing wind<br><br>Reminded me a little of the spring                                          |
-| 貴方だけを憶えている<br><br>雲の影が流れて往く<br><br>言葉だけが溢れている<br><br>想い出は夏風、揺られながら                                                                          | Anata dake o oboeteiru<br><br>Kumo no kage ga nagarete yuku<br><br>Kotoba dake ga afureteiru<br><br>Omoide wa natsu kaze, yurare nagara                                                                                                                                           | I only remember you<br><br>The shadows of the clouds swept across the ground<br><br>Overflowing with only your words<br><br>While my memories, like the summer breeze, gently swayed                                                                                                                                                                      |
-| 昼は何処かで夢うつつ<br><br>ふらり立ち寄る商店街<br><br>氷菓を一つ買って行く<br><br>頬張る貴方が浮かびます<br><br>想い出ばかり描きます<br><br>この詩に込めた表情は<br><br>誰にもわからなくていい<br><br>いつか会いに向かいます | Hiru wa doko ka de yume utsutsu<br><br>Furari tachiyoru shōtengai<br><br>Aisu o hitotsu katteiku<br><br>Hōbaru anata ga ukabimasu<br><br>Omoide bakari egakimasu<br><br>Kono uta ni kometa hyōjō wa<br><br>Dare ni mo wakara nakute ii<br><br>Itsuka ai ni mukaimasu              | Somewhere in the day, I’m dreaming, half-awake<br><br>I aimlessly stop in at a shop downtown<br><br>And buy some ice cream<br><br>An image of your cheeks stuffed full of ice cream emerges to mind.<br><br>I am merely painting memories<br><br>Expressing them in this poem<br><br>It’s okay if no one understands<br><br>Some day, I’ll go and see you |
-| 貴方だけを憶えている<br><br>雲の影が流れて往く<br><br>言葉だけが溢れている<br><br>想い出は夏風、揺られながら                                                                          | Anata dake o oboeteiru<br><br>Kumo no kage ga nagarete yuku<br><br>Kotoba dake ga afureteiru<br><br>Omoide wa natsu kaze, yurare nagara                                                                                                                                           | I only remember you<br><br>The shadows of the clouds swept across the ground<br><br>Overflowing with only your words<br><br>While my memories, like the summer breeze, gently swayed                                                                                                                                                                      |
-| 夜に花火を観ています<br><br>いつかみたいな人混みで<br><br>名前も知らず呼んでいた<br><br>白い花を一輪持って<br><br>隣町から帰ります<br><br>列車の窓を少し開いて<br><br>夜がひとひら頬撫でて<br><br>風揺れる、髪が靡く      | Yoru ni hanabi o miteimasu<br><br>Itsuka mitaina hitogomi de<br><br>Namae mo shirazu yondeita<br><br>Shiroi hana o ichi rin motte<br><br>Tonarimachi kara kaerimasu<br><br>Ressha no mado o sukoshi hiraite<br><br>Yoru ga hito hira hō nadete<br><br>Kaze yureru, kami ga nabiku | Watching the fireworks at night<br><br>Sort of like when there were crowds of people<br><br>I called out, without knowing your name<br><br>Holding a single white flower<br><br>I return from the next town over<br><br>Opening the train window just a little<br><br>The night caresses my cheek<br><br>The wind sways, my hair flutters                 |
-| 貴方だけを憶えている<br><br>雲の影が流れて往く<br><br>言葉だけが溢れている<br><br>想い出は夏風、揺られながら<br><br>この歌は夏風、揺られながら                                                     | Anata dake o oboeteiru<br><br>Kumo no kage ga nagarete yuku<br><br>Kotoba dake ga afureteiru<br><br>Omoide wa natsu kaze, yurare nagara<br><br>Kono uta wa natsu kaze, yurare nagara                                                                                              | I only remember you<br><br>The shadows of the clouds swept across the ground<br><br>Overflowing with only your words<br><br>While my memories, like the summer breeze, gently swayed<br><br>While this song, like the summer breeze, gently swayed                                                                                                        |
-| 朝目が覚めて歯を磨く<br><br>散歩の前に朝ご飯<br><br>丘の向こうにふくれ雲<br><br>ふいに何かに気付きます<br><br>心が酷く震えます<br><br>白百合香る道を走って<br><br>やっと貴方に出逢えた<br><br>そんな夢を見ました        | Asa me ga samete ha o migaku<br><br>Sanpo no mae ni asa gohan<br><br>Oka no mukō ni fukure gumo<br><br>Fui ni nani ka ni kizukimasu<br><br>Kokoro ga hidoku furuemasu<br><br>Shira yuri kaoru michi o hashitte<br><br>Yatto anata ni de aeta<br><br>Sonna yume o mimashita        | Waking in the morning, I brush my teeth<br><br>I eat breakfast before I walk<br><br>Looking at the puffy clouds over the hill<br><br>I suddenly notice something<br><br>My heart trembles<br><br>Running down the road scented with the white lilies<br><br>I had finally found you<br><br>It was that sort of dream                                      |
-| 貴方は僕に笑います<br><br>ずっと待っていましたと                                                                                                                | Anata wa boku ni waraimasu<br><br>Zutto matteimashita to                                                                                                                                                                                                                          | You laugh at me<br><br>I am always waiting for you                                                                                                                                                                                                                                                                                                        |
+| Japanese                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                           | [SakuraWindsS](https://docs.google.com/document/d/1NArzwf94kimzr371iZBPELcmeJYdaRRXOLm2Sw83VWQ)                                                                                                                                                                                                                                                           | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                                                                                                                  |
+| ------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 貴方だけを憶えている<br><br>雲の影が流れて往く<br><br>言葉だけが溢れている<br><br>想い出は夏風、揺られながら                                                                          | Anata dake o oboeteiru<br><br>Kumo no kage ga nagarete yuku<br><br>Kotoba dake ga afureteiru<br><br>Omoide wa natsu kaze, yurare nagara                                                                                                                                           | I only remember you<br><br>The shadows of the clouds swept across the ground<br><br>Overflowing with only your words<br><br>While my memories, like the summer breeze, gently swayed                                                                                                                                                                      | Tớ chỉ nhớ về cậu mà thôi<br><br>Bóng mây đang lững thững dần trôi<br><br>Chỉ có ngôn từ cứ đầy vơi<br><br>Còn kỷ niệm đung đưa theo gió hạ                                                                                                                                                                                        |
+| 朝目が覚めて歯を磨く<br><br>散歩の前に朝ご飯<br><br>窓の向こうにふくれ雲<br><br>それを手帳に書き留めて<br><br>歌う木立を眺めます<br><br>通りすがりの風が運んだ<br><br>花の香りに少しだけ春かと思いました                | Asa me ga samete ha o migaku<br><br>Sanpo no mae ni asa gohan<br><br>Mado no mukō ni fukure kumo<br><br>Sore o techō ni kakitomete<br><br>Utau kodachi o nagamemasu<br><br>Tōrisugari no kaze ga hakonda<br><br>Hana no kaori ni sukoshi dake haru ka to omoimashita              | Waking in the morning, I brush my teeth<br><br>Eating breakfast before I walk<br><br>Looking at the puffy clouds beyond my window<br><br>I write it all down in my notebook<br><br>Gazing at the singing grove<br><br>The scent of flowers carried by the passing wind<br><br>Reminded me a little of the spring                                          | Buổi sáng thức dậy tớ đánh răng<br><br>Trước khi đi dạo sẽ ăn bữa sáng<br><br>Bên ngoài cửa sổ là một bụm mây to<br><br>Tớ ghi lại nó vào cuốn sổ tay<br><br>Tớ ngắm nhìn hàng cây đang hát<br><br>Cơn gió sượt qua mang theo hương hoa<br><br>Chợt khiến tớ nghĩ liệu đây có phải mùa xuân?                                       |
+| 貴方だけを憶えている<br><br>雲の影が流れて往く<br><br>言葉だけが溢れている<br><br>想い出は夏風、揺られながら                                                                          | Anata dake o oboeteiru<br><br>Kumo no kage ga nagarete yuku<br><br>Kotoba dake ga afureteiru<br><br>Omoide wa natsu kaze, yurare nagara                                                                                                                                           | I only remember you<br><br>The shadows of the clouds swept across the ground<br><br>Overflowing with only your words<br><br>While my memories, like the summer breeze, gently swayed                                                                                                                                                                      | Tớ chỉ nhớ về cậu mà thôi<br><br>Bóng mây đang lững thững dần trôi<br><br>Chỉ có ngôn từ cứ đầy vơi<br><br>Còn kỷ niệm đung đưa theo gió hạ                                                                                                                                                                                        |
+| 昼は何処かで夢うつつ<br><br>ふらり立ち寄る商店街<br><br>氷菓を一つ買って行く<br><br>頬張る貴方が浮かびます<br><br>想い出ばかり描きます<br><br>この詩に込めた表情は<br><br>誰にもわからなくていい<br><br>いつか会いに向かいます | Hiru wa doko ka de yume utsutsu<br><br>Furari tachiyoru shōtengai<br><br>Aisu o hitotsu katteiku<br><br>Hōbaru anata ga ukabimasu<br><br>Omoide bakari egakimasu<br><br>Kono uta ni kometa hyōjō wa<br><br>Dare ni mo wakara nakute ii<br><br>Itsuka ai ni mukaimasu              | Somewhere in the day, I’m dreaming, half-awake<br><br>I aimlessly stop in at a shop downtown<br><br>And buy some ice cream<br><br>An image of your cheeks stuffed full of ice cream emerges to mind.<br><br>I am merely painting memories<br><br>Expressing them in this poem<br><br>It’s okay if no one understands<br><br>Some day, I’ll go and see you | Ban trưa tớ lơ đễnh ở nơi nào đó<br><br>Tình cờ bước chân được đưa đến khu thương mại<br><br>Tớ mua một que kem để ăn<br><br>Rồi bỗng nhớ lại cậu ngậm đầy miệng kem<br><br>Tớ chỉ toàn vẽ lại kỷ niệm xưa<br><br>Tìm cảm được cất vào bài hát này<br><br>Không ai hiểu cũng không sao hết<br><br>Một ngày nào đó tớ sẽ đi gặp cậu |
+| 貴方だけを憶えている<br><br>雲の影が流れて往く<br><br>言葉だけが溢れている<br><br>想い出は夏風、揺られながら                                                                          | Anata dake o oboeteiru<br><br>Kumo no kage ga nagarete yuku<br><br>Kotoba dake ga afureteiru<br><br>Omoide wa natsu kaze, yurare nagara                                                                                                                                           | I only remember you<br><br>The shadows of the clouds swept across the ground<br><br>Overflowing with only your words<br><br>While my memories, like the summer breeze, gently swayed                                                                                                                                                                      | Tớ chỉ nhớ về cậu mà thôi<br><br>Bóng mây đang lững thững dần trôi<br><br>Chỉ có ngôn từ cứ đầy vơi<br><br>Còn kỷ niệm đung đưa theo gió hạ                                                                                                                                                                                        |
+| 夜に花火を観ています<br><br>いつかみたいな人混みで<br><br>名前も知らず呼んでいた<br><br>白い花を一輪持って<br><br>隣町から帰ります<br><br>列車の窓を少し開いて<br><br>夜がひとひら頬撫でて<br><br>風揺れる、髪が靡く      | Yoru ni hanabi o miteimasu<br><br>Itsuka mitaina hitogomi de<br><br>Namae mo shirazu yondeita<br><br>Shiroi hana o ichi rin motte<br><br>Tonarimachi kara kaerimasu<br><br>Ressha no mado o sukoshi hiraite<br><br>Yoru ga hito hira hō nadete<br><br>Kaze yureru, kami ga nabiku | Watching the fireworks at night<br><br>Sort of like when there were crowds of people<br><br>I called out, without knowing your name<br><br>Holding a single white flower<br><br>I return from the next town over<br><br>Opening the train window just a little<br><br>The night caresses my cheek<br><br>The wind sways, my hair flutters                 | Buổi tối tớ ngắm pháo hoa<br><br>Như lúc ta đã ngắm trong dòng người ngày trước<br><br>Có một bông hoa trắng tớ không biết gọi tên<br><br>Tớ ngắt một bông mang về<br><br>Tớ rời khỏi ngôi làng bên cạnh<br><br>Hé mở cửa sổ loa tàu<br><br>Màn đêm lướt qua trên gò má<br><br>Mái tóc bay phấp phới trong gió đêm                 |
+| 貴方だけを憶えている<br><br>雲の影が流れて往く<br><br>言葉だけが溢れている<br><br>想い出は夏風、揺られながら<br><br>この歌は夏風、揺られながら                                                     | Anata dake o oboeteiru<br><br>Kumo no kage ga nagarete yuku<br><br>Kotoba dake ga afureteiru<br><br>Omoide wa natsu kaze, yurare nagara<br><br>Kono uta wa natsu kaze, yurare nagara                                                                                              | I only remember you<br><br>The shadows of the clouds swept across the ground<br><br>Overflowing with only your words<br><br>While my memories, like the summer breeze, gently swayed<br><br>While this song, like the summer breeze, gently swayed                                                                                                        | Tớ chỉ nhớ về cậu mà thôi<br><br>Bóng mây đang lững thững dần trôi<br><br>Chỉ có ngôn từ cứ đầy vơi<br><br>Còn kỷ niệm đung đưa theo gió hạ<br><br>Khi bài ca này đung đưa trong gió hạ                                                                                                                                            |
+| 朝目が覚めて歯を磨く<br><br>散歩の前に朝ご飯<br><br>丘の向こうにふくれ雲<br><br>ふいに何かに気付きます<br><br>心が酷く震えます<br><br>白百合香る道を走って<br><br>やっと貴方に出逢えた<br><br>そんな夢を見ました        | Asa me ga samete ha o migaku<br><br>Sanpo no mae ni asa gohan<br><br>Oka no mukō ni fukure gumo<br><br>Fui ni nani ka ni kizukimasu<br><br>Kokoro ga hidoku furuemasu<br><br>Shira yuri kaoru michi o hashitte<br><br>Yatto anata ni de aeta<br><br>Sonna yume o mimashita        | Waking in the morning, I brush my teeth<br><br>I eat breakfast before I walk<br><br>Looking at the puffy clouds over the hill<br><br>I suddenly notice something<br><br>My heart trembles<br><br>Running down the road scented with the white lilies<br><br>I had finally found you<br><br>It was that sort of dream                                      | Buổi sáng thức giấc tớ đánh răng<br><br>Trước khi đi dạo sẽ ăn sáng<br><br>Bên kia ngọn đồi là một bụm mây to<br><br>Chợt tớ nhận ra một điều gì đó<br><br>Trái tim tớ rung động mạnh mẽ<br><br>Tớ chạy đi trên con đường hoa ly trắng ngào ngạt<br><br>Cuối cùng tớ cũng đã gặp được cậu<br><br>Tớ đã mơ giấc mơ như thế đấy      |
+| 貴方は僕に笑います<br><br>ずっと待っていましたと                                                                                                                | Anata wa boku ni waraimasu<br><br>Zutto matteimashita to                                                                                                                                                                                                                          | You laugh at me<br><br>I am always waiting for you                                                                                                                                                                                                                                                                                                        | Cậu tươi cười với tớ<br><br>"Tớ chờ cậu mãi rồi đấy"                                                                                                                                                                                                                                                                               |
 ##### Notes
 >The entire MV has a reference to most(if not all) of the artworks and the past MVs of the Gentou Album.
+
+> “Một người phụ nữ vừa múa vừa biến thành hoa ly. Mặt trời mọc lên rồi lặn xuống. Đèn sáng lên trăng mọc.
+> 
+> “Nhận ra thì đã 100 năm trôi qua.”
